--- a/gamedata/config/weapons/ammo/545x39.ltx
+++ b/gamedata/config/weapons/ammo/545x39.ltx
@@ -1,85 +1,71 @@
 ;5,45х39 разработан в начале 1970-х годов группой конструкторов и технологов под руководством В. М. Сабельникова: Л. И. Булавской, Б. В. Семиным, М. Е. Федоровым, П. Ф. Сазоновым, В. И. Волковым, В. А. Николаевым, Е. Е. Зиминым, П. С. Королевым. Принят на вооружение в 1974 году.
 ;Для увеличения поражающей способности пули форма и скорость пули выбраны такими, чтобы пуля стабилизировалась в полете «на грани устойчивости», т. е. пуля при попадании в любое препятствие начинает «кувыркаться», нанося более сильное ранение, чем пуля калибра 7,62 мм. Этот эффект достигнут за счет смещения центра тяжести к задней части пули. Передняя часть пули пустотелая, сминается при попадании в цель. Обратной стороной этого эффекта является склонность к рикошетированию (что особенно неудобно в городских условиях, горной местности, замкнутых пространствах) и меньшую бронепробиваемость на дальних дистанциях. За эти особенности во время войны в Афганистане моджахеды называли «пятёрку» «змеиными пулями».
 ;Однако, это относится исключительно к первым вариантам патрона с пулей ПС (7Н6/7Н6М). В варианте с пулями ПП (7Н10), БП (7Н22), бронепробиваемость соизмерима с пулям 7,62-мм патрона обр. 1943 года, а в варианте с пулей БС (7Н24) бронепробиваемость выше как пуль 7,62-мм патрона обр. 1943 года, так и 7,62-мм винтовочного патрона обр. 1908 года.
-
 ;Вначале патрон выпускался с оболоченной пулей, мягким стальным сердечником и полостью в головке пули (7Н6, 7Н6ВК) массой 3,30-3,55 гр. Для увеличения бронепробиваемости сначала заменили ердечник (патрон 7Н6 с термоупрочненным сердечником выпускаются с 1986 года). Пуля без окраски.
 ;Дальнейшие эксперименты показали, что при снимании пустотелой головки пробиваемость резко падает, поэтому полость в головке пули залили свинцом (патрон типа 7Н10). Современные патроны, 5,45 БП (7Н22) и 5,45 БС (7Н24), отличаются от 7Н10 только тяжелым закаленным сердечником.
-
 ;5,45х39 БП (7Н22) разработан в 1998 году специалистами ЦНИИТОЧМАШ под руководство Дворянинова В.Н. совместно со специалистами КБ Барнаульского станкостроительного завода, и принят на вооружение в 1998 году.
-
 ;В России патроны калибра 5.45мм до сих пор остаются основным штатным боеприпасом индивидуального пехотного оружия (автоматов). Помимо штатных 7Н6 со стальным сердечником, а также ставшего с конца 1980-х годов основным патрона 7Н10 (также со стальным сердечником пули, повышенной пробиваемости), выпускаются бронебойные патроны 7Н22 и 7Н24 (последний - с сердечником пули из карбида вольфрама), трассирующие патроны и патроны с уменьшенной скоростью пули (для использования в автоматах АКС-74УБ с глушителем). Кроме того, на экспорт производятся патроны с пулями со свинцовым сердечником (для использования в гражданском оружии).
-
-
 ;Малоимпульсный промежуточный патрон калибра 5,45х39 мм был создан в начале 1970-х годов группой конструкторов и технологов под руководством В. М. Сабельникова и принят на вооружение в 1974 году. При проектировании патрона разработчики учитывали опыт создания и боевого применения американского патрона 5,56х45 мм, поэтому новый патрон получился сопоставимым по эффективности, несмотря на меньшую мощность. Малокалиберная пуля с высокой начальной скоростью, обеспечивает высокую настильность траектории (в сравнении с патроном 7,62х39 мм, дальность прямого выстрела увеличилась с 325 м до 440 м), обладает неплохим пробивным действием и значительной убойной силой. Малый импульс отдачи в момент выстрела благоприятно сказывается на кучности и меткости стрельбы, а уменьшение массы патрона позволяет стрелку увеличить носимый боезапас (200 патронов 7,62х39 мм весят столько же, сколько 300 патронов 5,45х39 мм, для 8 магазинов патрон калибра 5,45 мм дает экономию массы в 1,4 кг). Однако, по сравнению с пулей 7,62х39 мм, недостатком являются низкое останавливающе действие и склонность к рикошетам. С 1992 года с целью экономии свинца и повышения пробивного действия пули, патрон 5,45х39 ПП с пулей повышенной пробиваемости со стальным термоупрочненным сердечником стал стандартным и был принят на вооружение под индексом ГРАУ 7Н10. Пуля без окраски. Лак-герметизатор темно-фиолетового цвета, в отличие от красного в 7Н6.
-
-
+;Емкость упаковки патронов 5.45х39 мм была сразу сделана кратной емкости стандартного автоматного магазина - 30 патронов. Первоначально патроны упаковывались в картонные коробки, но в середине 1970-х годов перешли на упрощенную бумажную обертку, скрепленную скобами. Для автоматных патронов калибров 7.62x39 мм и 5.45х39 мм со стальными лакированными гильзами наряду с металлическими коробками существует альтернативный способ упаковки - в специальных влагонепроницаемых пакетах, по 120 штук. А еще для АК-74 с целью облегчения и ускорения процесса снаряжения магазина были внедрены стальные обоймы (т.н. "расчески") на 15 патронов с прилагавшимся переходником - ускорителем заряжания ("ложечкой").
+;5.45х39 автоматных - в цинке 36 пачек по 30 шт. в каждой Деревянный ящик (два цинка) - около 30 кг. Масса патрона 5,45х39 мм - 10,2 г.
+;Патроны для внутреннего гражданского рынка 7,62х39, 7,62х54, 7,62х51 (.308), 5,56х45(.223) (Барнаул, КСПЗ, Тула) как правило в цинки НЕ ПАКУЮТСЯ. В качестве групповой тары, картнонные коробки по 20 патронов, могут укладываться в деревянные ящики, в которые, обычно, идут два цинка.
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 [ammo_5.45x39_fmj]:ammo_base
 GroupControlSection	= spawn_group
 discovery_dependency = 
 $spawn			= "weapons\ammo\ammo_5.45x39_fmj" ; option for Level Editor
+$prefetch 		= 64
 class			= AMMO
 cform                   = skeleton
 visual                  = weapons\ammo\ammo_545x39_fmj.ogf
 description				= enc_weapons_ammo-5.45x39fmj
-$prefetch 		= 64
-
-cost					 = 550
-
-box_size		= 30	;60
-
 inv_name		= ammo-5.45x39fmj
 inv_name_short	= ammo-5.45x39fmj_s
-inv_weight		= 0.315
-
 inv_grid_width		= 2
 inv_grid_height		= 1
 inv_grid_x			= 16
 inv_grid_y			= 11
 
-k_dist			= 1
+cost					 = 550
+box_size		= 30
+inv_weight		= 0.315		;+(10,2*20=306г.)
+
 k_disp			= 2.5
-k_hit			= 1.1
-k_impulse		= 1
+k_hit			= 1.25
+k_impulse		= 0.95				;1.0
 k_pierce		= 1.12
-impair			= 1
-buck_shot		= 1
-tracer			= on
+;tracer			= on
 wm_size         = 0.0545
 
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;БП
 [ammo_5.45x39_ap]:ammo_base
 GroupControlSection	= spawn_group
 discovery_dependency = 
 $spawn			= "weapons\ammo\ammo_5.45x39_ap" ; option for Level Editor
+$prefetch 		= 64
 class			= AMMO
 cform                   = skeleton
 visual                  = weapons\ammo\ammo_545x39_ap.ogf
 description				= enc_weapons_ammo-5.45x39ap
-$prefetch 		= 64
-
-cost					 = 600
-
-box_size		= 30	;60
-
 inv_name		= ammo-5.45x39ap
 inv_name_short	= ammo-5.45x39ap_s
-inv_weight		= 0.315
-
 inv_grid_width		= 2
 inv_grid_height		= 1
 inv_grid_x			= 12
 inv_grid_y			= 11
 
-k_dist			= 1
+cost					 = 600
+box_size		= 30
+inv_weight		= 0.315		;+(10,2*20=306г.)
+
 k_disp			= 2.5
-k_hit			= 1.15
-k_impulse		= 0.95
+k_hit			= 1.25
+k_impulse		= 0.95				;1.0
 k_pierce		= 1.3
-impair			= 1.02
-buck_shot		= 1
-tracer			= on
+impair			= 1.5
 wm_size         = 0.0545
+;tracer			= on
+;explosive		= on
 
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;фейк-боеприпас для оружия без магазина 
