--- a/gamedata/config/weapons/ammo/762x39.ltx
+++ b/gamedata/config/weapons/ammo/762x39.ltx
@@ -1,6 +1,8 @@
 ;Патроны 7,62х39 мм укупориваются в картонные пачки (по 20 патронов), помещаемые в стандартные продолговатые герметичные "цинки", окрашенные в защитный цвет. В одном цинке помещается 660 или 700 патронов; при укупоривании в обоймах - 460. Два цинка укладываются в деревянный ящик, в котором находится нож для вскрытия цинков. Масса патрона 7,62х39 мм около 16,2 г. Вес ящика - 29 кг.
+;7,62х39 (1943г) в ящике 1320 шт в двух цинках по 660 шт = 33 пачки по 20 патронов
+;Патроны для внутреннего гражданского рынка 7,62х39, 7,62х54, 7,62х51 (.308), 5,56х45(.223) (Барнаул, КСПЗ, Тула) как правило в цинки НЕ ПАКУЮТСЯ. В качестве групповой тары, картнонные коробки по 20 патронов, могут укладываться в деревянные ящики, в которые, обычно, идут два цинка.
 ;Для СКС патроны также укупоривались снаряжёнными в обоймы, по две обоймы в картонной пачке (20 штук в обоймах)
-
+;Для автоматных патронов калибров 7.62x39 мм и 5.45х39 мм со стальными лакированными гильзами наряду с металлическими коробками существует альтернативный способ упаковки - в специальных влагонепроницаемых пакетах, по 120 штук
 ;Начиная с 1989 года, для повышения пробивного действия пуль ПС начали применять термоупрочненый сердечник повышенной твердости. Пробивное действие пуль с новым сердечником по твердым преградам повысилось в 1,5-2 раза. Отличительной окраски она не имеет и от патронов с нетермоупрочненным сердечником новый патрон можно отличить только по году выпуска.
 ;На картонных пачках, металлических коробках и деревянных ящиках с патронами БЗ наносится наклонная чёрно-красная полоса, с патронами УС - чёрно-зелёная.
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
@@ -8,79 +10,63 @@
 GroupControlSection	= spawn_group
 discovery_dependency = 
 $spawn			= "weapons\ammo\ammo_7.62x39_fmj" ; option for Level Editor
+$prefetch 		= 64
 class			= AMMO
 cform           = skeleton
 visual          = weapons\ammo\ammo_762x39_fmj.ogf
-
 ;ОГСЕ description				= enc_weapons1_ammo_ammo-7.62x39-fmj
 description		= enc_weapons_ammo-7.62x39fmj
-$prefetch 		= 64
-
-cost			 = 390		;ОГСЕ 390
-
-box_size		= 20		;ОГСЕ 30
-
 ;ОГСЕ inv_name		= ammo-7.62x39-fmj
 inv_name		= ammo-7.62x39fmj
 ;ОГСЕ inv_name_short	= ammo-7.62x39-fmj_s
 inv_name_short	= ammo-7.62x39fmj_s
-;inv_weight		= 0.480				;(16,2*30=486 г.)
-inv_weight		= 0.330				;(16,2*20=324 г.)
-
 inv_grid_width     = 2
 inv_grid_height    = 1
 inv_grid_x         = 21
 inv_grid_y         = 8
 
-k_dist			= 1
+cost			 = 390
+box_size		= 20
+inv_weight		= 0.330				;+(16,2*20=324г.)
+
 k_disp			= 2.3
-k_hit			= 1.15
+k_hit			= 1.5
 k_impulse		= 1.3
 k_pierce		= 1.15
-impair			= 1
-buck_shot		= 1
-tracer			= off
-explosive		= off
 wm_size         = 0.0762			;ОГСЕ 0.06
+;tracer			= on	;off	;абсолютно некрасивый текстурный трассер, ещё более ненатурально через оптику выглядит
 
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;БП
 [ammo_7.62x39_ap]:ammo_base
 GroupControlSection	= spawn_group
 discovery_dependency = 
 $spawn			= "weapons\ammo\ammo_7.62x39_ap" ; option for Level Editor
+$prefetch 		= 64
 class			= AMMO
 cform           = skeleton
 visual          = weapons\ammo\ammo_762x39_ap.ogf
 ;ОГСЕ description				= enc_weapons1_ammo_ammo-7.62x39-ap
 description		= enc_weapons_ammo-7.62x39apf
-$prefetch 		= 64
-
-cost			= 420		;ОГСЕ 420
-
-box_size		= 20		;ОГСЕ 30
-
 ;ОГСЕ inv_name		= ammo-7.62x39-ap
 inv_name	= ammo-7.62x39apf
 ;ОГСЕ inv_name_short	= ammo-7.62x39-ap_s
 inv_name_short	= ammo-7.62x39apf_s
-;inv_weight		= 0.480				;(16,2*30=486 г.)
-inv_weight		= 0.330				;(16,2*20=324 г.)
-
-
 inv_grid_width     = 2
 inv_grid_height    = 1
 inv_grid_x         = 21
 inv_grid_y         = 9
 
-k_dist			= 0.9
-k_disp			= 2.5
-k_hit			= 1.3
-k_impulse		= 0.95
+cost			= 420
+box_size		= 20
+inv_weight		= 0.330				;+(16,2*20=324г.)
+
+k_disp			= 2.3
+k_hit			= 1.5
+k_impulse		= 1.3
 k_pierce		= 1.25
-impair			= 1.02
-buck_shot		= 1
-tracer			= on		;off	;абсолютно некрасивый текстурный трассер, ещё более ненатурально через оптику выглядит
-explosive		= on		;off
+impair			= 1.9
+;tracer			= on
+;explosive		= on
 wm_size         = 0.0762			;ОГСЕ 0.06
 
 
