--- a/gamedata/config/weapons/ammo/9x19.ltx
+++ b/gamedata/config/weapons/ammo/9x19.ltx
@@ -1,52 +1,85 @@
+;Стандартные патроны 9x19 Luger/Parabellum (со стандартным давлением в стволе) различных производителей имеют массу пули от 6 до 10.7 гр, начальную скорость - от 300 до 450 м/с, дульную энергию - от 450 до 550-600 Джоулей.
+;9-мм +Р (давление в канале ствола повышенное), 9-мм +Р+ (давление в канале ствола очень высокое)
+;9-мм NATO (состоит на вооружении). По своим характеристикам очень близки к патронам 9-мм +Р+ и использование патронов такого типа в оружии, сконструированном под стандартный патрон 9х19 (например, в старых пистолетах типа «Парабеллум-08» или «Вальтер П-38») недопустимо, поскольку может привести к разрушению оружия. Современное же оружие, такое, как, например, пистолеты «Glock-17», «Beretta-92 FS» и т.д, производятся с учетом того, что для стрельбы, возможно, будут использоваться патроны 9-мм +Р+ или 9-мм NATO.
+;Масса патрона 12г., 50 патронов в пачке, 16 пачек в цинке. 800х12 грамм = 10 кг, если учесть вес цинка
+;
+;Россия перешла на «евростандарт», приняв патрон калибра 9х19 (и его модификации) в качестве одного из штатных патронов для боевого оружия.
+;Патрон 9x19 ПСТ (7Н21) был создан в середине 1990-х в ФГУП «ЦНИИТОЧМАШ». Масса патрона 8,3г. Масса пули 5,4г. По мощности превосходит коммерческие боеприпасы и соответствующий более мощным армейским патронам 9х19 мм NATO (9х19 +P). Однако позже производители серьезно усилили у серийных бронебойных патронов 7Н21 (разработка ЦНИИТОЧмаш, конструктор патрона - И. П.Касьянов) рабочее давление, которое, оказалось выше, чем у патронов калибра 9х19, рассчитанных на применение только в пистолетах-пулеметах.
+;Патрон повышенной пробиваемости 9x19 ПБП (7Н31) был создан в начале 2000-х в ГУП «КБП».  Пуля имеет сердечник из высокопрочной термоупрочненной стали, носовая часть которого выступает из оболочки. Головная часть пули окрашена в черный цвет. Масса патрона 9,3г. Масса пули 4,1г. Более поздний патрон 7Н31 (разработка КБП) имеет еще более «жесткие» даже по сравнению с патроном 7Н21 уровни предельно допустимого давления, что ведет не только к излишним нагрузкам на оружие, но и не дает возможности достичь приемлемых точности и кучности стрельбы.
+;коробка вмещает 34 патрона
+;Гражданские: Тула, спортивный: Масса патрона 11,02-11,7 г
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 [ammo_9x19_fmj]:ammo_base
 $spawn			= "weapons\ammo\ammo_9x19_fmj" ; option for Level Editor
+$prefetch 		= 64
 visual          = weapons\ammo\ammo_9x19_fmj.ogf
 description		= enc_weapons1_ammo_ammo-9x19-fmj
-$prefetch 		= 64
-
-cost			= 310
-
-box_size		= 20
-
 inv_name		= ammo-9x19-fmj
 inv_name_short	= ammo-9x19-fmj_s
-inv_weight		= 0.24
-
 inv_grid_width	= 1
 inv_grid_height	= 1
 inv_grid_x		= 15
 inv_grid_y		= 12
 
-k_disp			= 2
-k_impulse		= 1.5
-k_pierce		= 1.1
+cost			= 310
+box_size		= 25
+inv_weight		= 0.3		;+(12,0*25=300.0г.), -(12,0*20=240.0г.), -(12,0*50=600.0г.)
 
-;------------------------------
+k_disp			= 2.0
+k_hit			= 1.55				;1.0
+k_impulse		= 1.65				;1.5
+;k_pierce		= 1.0				;1.1
+;impair			= 1.1
+wm_size         = 0.0919
+;tracer			= on
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;+Р+/ПС (7Н21)
 [ammo_9x19_pbp]:ammo_base
 $spawn			= "weapons\ammo\ammo_9x19_pbp" ; option for Level Editor
 visual          = weapons\ammo\ammo_9x19_pbp.ogf
 description		= enc_weapons1_ammo_ammo-9x19-pbp
-
-cost			= 330
-
-box_size		= 20
-
 inv_name		= ammo-9x19-pbp
 inv_name_short	= ammo-9x19-pbp_s
-inv_weight		= 0.24
-
 inv_grid_width	= 1
 inv_grid_height	= 1
 inv_grid_x		= 14
 inv_grid_y		= 12
 
-k_disp			= 2
-k_hit			= 1.5
-k_impulse		= 2.5
-impair			= 2.5
+cost			= 330
+box_size		= 25
+inv_weight		= 0.3		;+(12,0*25=300.0г.), -(12,0*20=240.0г.), -(12,0*50=600.0г.)
 
-;------------------------------
+k_disp			= 2.0
+k_hit			= 1.65				;1.5
+k_impulse		= 1.7				;2.5
+k_pierce		= 1.1				;1.0
+impair			= 1.45
+wm_size         = 0.0919
+;tracer			= on
+;explosive		= on
 
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;ПБП (7Н31) для ГШ-18
+;box_size		= 34
+;k_disp			= 2
+;k_hit			= 1.5
+;k_impulse		= 1.8
+;k_pierce		= 1.1
+;impair			= 2.5
+;wm_size         = 0.0919
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;фейк-боеприпас для оружия без магазина 
+[ammo_9x19_dummy]:ammo_9x19_fmj
+;$spawn			= "weapons\ammo\ammo_wpn_dummy" ; option for Level Editor
+;visual          = physics\equipment_cache\equipment_box_01_case.ogf
+cost			= 0
+box_size		= 0
+inv_weight		= 0.001
+inv_name		= ammo-9x19-dummy
+inv_name_short	= ammo-9x19-dummy_s
+description		= enc_weapons_ammo-9x19-dummy
+
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 [clip_8_9x19_fmj]:ammo_9x19_fmj
 box_size	= 1
 mag_size	= 8
