--- a/gamedata/config/weapons/ammo/9x39.ltx
+++ b/gamedata/config/weapons/ammo/9x39.ltx
@@ -1,58 +1,81 @@
-[ammo_9x39_pab9]:ammo_base
-$spawn			= "weapons\ammo\ammo_9x39_pab9" ; option for Level Editor
-visual          = weapons\ammo\ammo_9x39_pab9.ogf
-description		= enc_weapons1_ammo_ammo-9x39-pab9
-
-cost			= 360
-
-box_size		= 20
-
-inv_name		= ammo-9x39-pab9
-inv_name_short	= ammo-9x39-pab9_s
-inv_weight		= 0.4
-
-inv_grid_width	= 2
-inv_grid_height	= 1
-inv_grid_x		= 17
-inv_grid_y		= 10
-
-k_disp			= 2.5
-k_impulse		= 1.2
-k_pierce		= 1.1
-impair			= 3.7
-tracer			= on
-wm_size         = 0.07
-
+;7.62х39 УС был взят за основу, увеличили калибр и практически вдвое массу пули (первоначально производство новых патронов проводилось простым переобжатием дульца гильзы до 9 мм, калибровкой заряда пороха и установкой новой пули)
+;были созданы новые 9-мм боеприпасы. Снайперский патрон СП-5, обеспечивавший кучность 75 мм на дистанции 100 м группой из пяти выстрелов, и патрон повышенной пробиваемости — СП-6, который был способен пробивать 8-мм стальную пластину на дистанции тех же 100 м.
+;особенность СП-5 (снайперский) СП-6 (с повышенной пробиваемостью), ПАБ-9 (Патрон Автоматный Бронебойный, 9 мм - дешёвка для 9А-91) состоит в различной конструкции пуль.
+;пуля патронов СП-5 массой 16 гр, отличительной окраски не имеет. Упаковочные картонные коробки на 10 патронов имеют надпись «Снайперский».
+;Пуля патрона СП-6 массой 16,2 гр. Носовая часть  стального закаленного сердечника выглядывает из биметаллической оболочки пули и окрашивается в черный цвет. Упаковочные картонные коробки имеют отличительную полосу черного цвета.
+;
+;Баллистические характеристики патронов СП-5 и СП-6 близки друг к другу (ПАБ-9 немного отличается - траектория более пологая). Кучность пуль патронов СП-5 лучше пуль патронов СП-6. Скорость пуль составляет 280-300 м/с, дульная энергия - порядка 600-700 Дж.
+;Пуля патрона СП-5 способна пробить бронежилет 1-2 класса защиты, дверцу автомобиля, лист простой стали толщиной 6 мм. Пуля патрона СП-6 способна пробить 8 мм стальной лист на дистанции 100 м или поразить цель, защищенную бронежилетом 2-3 класса защиты на 300-400 метрах.
+;
+;Пуля патрона ПАБ-9 массой 17 гр., не имеет заднего центрирующего пояска, задний конус пули длиннее, диаметр сердечника немного побольше, иные длина и толщина свинцовой рубашки. В результате таких изменений (c целью удешевления) пуля и сам патрон ПАБ-9 имеют более существенную массу, а у пули ухудшаются показатели кучности стрельбы. Увеличение длины ведущей части пули ПАБ-9 не могло не привести к возрастанию давления форсирования и повышению ее начальной скорости по сравнению с патроном СП-6. Пуля патрона ПАБ-9 массой 17 гр развивает начальную скорость свыше 300 м/с.
+;
+;Масса патрона СП5 - 23,2 г.,  СП6 - 23,0 г. Укупорочные картонные коробки на 10 патронов
 ;------------------------------
 [ammo_9x39_ap]:ammo_base
 $spawn			= "weapons\ammo\ammo_9x39_ap" ; option for Level Editor
 visual          = weapons\ammo\ammo_9x39_ap.ogf
-description		= enc_weapons1_ammo_ammo-9x39-ap
-
-cost			= 400
-
-box_size		= 20
-
-inv_name		= ammo-9x39-ap
-inv_name_short	= ammo-9x39-ap_s
-inv_weight		= 0.4
-
+description		= enc_weapons_ammo-9x39ap			;enc_weapons1_ammo_ammo-9x39-ap
+inv_name		= ammo-9x39ap						;ammo-9x39-ap
+inv_name_short	= ammo-9x39ap_s						;ammo-9x39-ap_s
 inv_grid_width	= 2
 inv_grid_height	= 1
 inv_grid_x		= 5
 inv_grid_y		= 12
 
-k_disp			= 2.5
-k_hit			= 1.25
-k_impulse		= 0.95
-k_pierce		= 2.25
-impair			= 1.35
-tracer			= on
-wm_size         = 0.06
-explosive		= on
+cost			= 400
+box_size		= 10
+inv_weight		= 0.24		;+(23,2*10=232.0г.)
+
+k_dist			= 0.99
+k_disp			= 1.5	;0.9 	;коэффициент кучности, завязан с кучностью в стволе (АМК Снайпер 1.0; ОГСЕ 2.5)
+k_hit			= 3.0	;6.0	;коэффициент убойности, завязан с убойностью в стволе (АМК Снайпер 7.0; ОГСЕ 1.25)
+k_impulse		= 2.6			;коэффициент "толчка" при попадании. Походу работает только на "неживых" (АМК Снайпер 1.2; ОГСЕ 0.95)
+k_pierce		= 2.25			;коэффициент бронебойности. hit_power оружия на бронебойность влияния не оказывает
+impair			= 1.35			;коэффициент износа ствола от пули (АМК Снайпер 1.05; ОГСЕ 1.35)
+wm_size         = 0.0939
+;tracer			= on
+;explosive		= on
 
 ;------------------------------
+;После разработки более дешёвый ПАБ-9 широко рекламировался, однако серийные закупки были ограничены лишь несколькими партиями. В настоящее время запрещены к использованию из-за более высокого давления в стволе как ВСС, так и ВАЛа, что снижает ресурс оружия примерно на 3000 выстрелов.
+[ammo_9x39_pab9]:ammo_base
+$spawn			= "weapons\ammo\ammo_9x39_pab9" ; option for Level Editor
+visual          = weapons\ammo\ammo_9x39_pab9.ogf
+description		= enc_weapons_ammo-9x39pab9			;enc_weapons1_ammo_ammo-9x39-pab9
+inv_name		= ammo-9x39pab9						;ammo-9x39-pab9
+inv_name_short	= ammo-9x39pab9_s					;ammo-9x39-pab9_s
+inv_grid_width	= 2
+inv_grid_height	= 1
+inv_grid_x		= 17
+inv_grid_y		= 10
 
+cost			= 360
+box_size		= 20
+inv_weight		= 0.5		;+(23,8*20=476.0г.)
+
+k_dist			= 0.97	;0.98
+k_disp			= 3.0	;0.5
+k_hit			= 3.0	;7.25
+k_impulse		= 2.8
+k_pierce		= 1.1
+impair			= 3.7
+wm_size         = 0.0939
+;tracer			= on
+;explosive		= on
+
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;фейк-боеприпас для оружия без магазина 
+[ammo_9x39_dummy]:ammo_9x39_ap
+;$spawn			= "weapons\ammo\ammo_wpn_dummy" ; option for Level Editor
+;visual          = physics\equipment_cache\equipment_box_01_case.ogf
+cost			= 0
+box_size		= 1
+inv_weight		= 0.001
+inv_name		= ammo-9x39-dummy
+inv_name_short	= ammo-9x39-dummy_s
+description		= enc_weapons_ammo-9x39-dummy
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 [mag_10_9x39_pab9]:ammo_9x39_pab9
 box_size	= 1
 mag_size	= 10
