--- a/gamedata/config/weapons/grenade_m2.ltx
+++ b/gamedata/config/weapons/grenade_m2.ltx
@@ -354,7 +354,7 @@ anim_idle_sprint    		= idle_sprint
 $spawn 				= "weapons\grenades\gd-05"
 visual				= weapons\grenade\wpn_gd_05.ogf
 inv_name			= grenade-rdgm
-inv_name_short		= grenade-rdgm
+inv_name_short		= grenade-rdgm_s
 description			= enc_weapons1_grenade-rdgm
 inv_grid_x			= 78	;20
 inv_grid_y			= 7		;2
