--- a/gamedata/config/weapons/w_rpg7.ltx
+++ b/gamedata/config/weapons/w_rpg7.ltx
@@ -1,4 +1,30 @@
 ; Ручной противотанковый гранатомёт РПГ-7
+;http://spec-naz.org/index.php?/topic/5041/&page=2
+;оснащен открытым прицелом, однако обычно комплектуется оптическим прицелом ПГО-7 кратностью 2.7Х. Прицел имеет дальномерную шкалу по цели высотой 2,7 м (танк), а также шкалы дистанционных и боковых поправок.
+;в середине 60-х годов гранатомет был оборудован более совершенным прицелом ПГО-7В. Модели, оборудованные данными прицелами, получили обозначение РПГ-7В.
+;Различные модификации прицелов обусловлены разновидностями боеприпасов гранатометов и различаются вариантами исполнения сеток:
+;ПГ0-7В (индекс 1ОП19-1) — для гранатометов РПГ-7, РПГ-7Д;
+;ПГ0-7В2 (индекс 1ОП19-2) — для гранатометов РПГ-7Д1, РПГ-7В;
+;ПГ0-7ВЗ (индекс 1ОП19-3) — для гранатометов РПГ-7ВР, РПГ-7В1, РПГ-7В2.
+;
+;Кумулятивные ПГ-7В, ПГ-7ВМ, ПГ-7ВС, ПГ-7ВЛ, 
+;Тандемная ПГ-7ВР
+;Термобарические ТБГ-7В, ТБГ-7ВЛ
+;Осколочная ОГ-7В
+;
+;Выстрел ОГ-7В "Кариндаш" с осколочной гранатой предназначен для подавления живой силы
+;
+;Выстрел ПГ-7ВЛ "Луч" с гранатой ПГ-7Л предназначен для пробивания слоистой композитной брони.
+;В 1977 году на вооружение Советской армии поступает еще один 93-мм гранатометный выстрел ПГ-7 ВЛ (имевший неофициальное название «Луч») с увеличенной бронепробиваемостью до 500 мм, значительно расширивший боевые возможности гранатометов РПГ-7. Масса выстрела теперь составляла — 2,6 кг. Кроме того, эта более мощная граната могла также пробить полутораметровую кирпичную стену или железобетонную плиту толщиной 1,1 м.
+;
+;40-мм выстрел динамо-реактивного типа ПГ-7В с кумулятивной противотанковой гранатой предназначен для поражения танков, САУ и других бронированных целей, а также для уничтожения живой силы противника в лёгких укрытиях и сооружениях городского типа на дальностях до 500 м.
+;+++Выстрел ПГ-7ВМ является модернизированным вариантом ПГ-7В. Модернизированный под новый боеприпас прицел получил наименование ПГО-7В, а гранатомет с новым прицелом РПГ-7В.
+;
+;новые боеприпасы ТБГ-7В (термобарический), ПГ-7ВР (с тандемной головной частью) и ОГ-7В (осколочный)
+;Некоторые варианты гранат, например осколочная ОГ-7В, не имеют ракетного двигателя и используют только вышибной заряд. Стабилизация гранат на траектории осуществляется при помощи раскладных стабилизаторов, а также благодаря вращению гранаты, вызванному специальной турбинкой в ее хвостовой части и скосами на стабилизаторах. Осколочный заряд ОГ-7В разработан специально для городского боя, где целями обычно являются строения из кирпича и железобетона. Поэтому необходимо попасть в сравнительно небольшое отверстие, из которого стреляет противник. Точность ОГ-7В очень близка к стрелковому оружию.
+;
+;различными партизанами (или террористами) РПГ довольно широко используется против пихоты. Причём не от весёлой жизни, а от того, что артиллерию отряду из 3—5 человек по пересечённой местности или по городу таскать с собой, мягко говоря, затруднительно. Осколочное действие противотанковой гранаты ПГ-7В примерно соответствует таковому стандартной наступательной ручной гранаты или гранаты подствольного гранатомёта. Правда, проблема в том, что древние ПГ-7В летают как говно. Современные выстрелы для РПГ этого недостатка лишены, а всякие новые противопехотные и тем паче термобарические вообще рулезны, но, как правило, у партизан их нет.
+;
 ;-------------------------------------
 [wpn_rpg7]:identity_immunities,base_wpn_zoom
 
@@ -44,8 +70,8 @@ inv_weight					= 6.3
 
 inv_grid_width				= 6
 inv_grid_height				= 2
-inv_grid_x					= 35
-inv_grid_y					= 28
+inv_grid_x				= 20			;35
+inv_grid_y				= 20			;28
 
 kill_msg_x			= 0
 kill_msg_y			= 85
@@ -74,7 +100,7 @@ direction                	= 0, 0, 1
 shell_point				 	= 0.0, 0.0, 0.0
 fire_point               	= 0.0, 0.162, 0.35
 
-smoke_particles		   		= weapons\generic_weapon02;generic_rpg_shot
+smoke_particles		   		= weapons\generic_weapon02	;generic_rpg_shot
 
 rpm_empty_click 	 		= 120
 
@@ -117,18 +143,31 @@ light_var_range		 		= 0.5
 light_time 		 			= 0.75
 
 ;addons
-scope_status				= 0
+scope_status				= 2			;2 ПГО-7 2.7Х
 silencer_status				= 0
 grenade_launcher_status		= 0
 
-zoom_enabled			= true
-max_zoom_factor			= 5
+scope_name 			= wpn_addon_scope_pgo7		; section name for the attachable scope
+scope_x 			= 150			; offset in inventory icon
+scope_y 			= 0
 
-scope_texture			= wpn\scopes\scope_pgo-7
+zoom_enabled			= true
+max_zoom_factor			= 5		;? НУЖЕН, без него вылетит
+
+;ПЕРЕКРЫВАЕТСЯ ПРИЦЕЛОМ
+;подбираем "под сетку"
+;8.0 - на дистанции 100м грудь ростовой фигуры будет около 200 по сетке (1,35м)
+;4.0 - на дистанции 100м грудь ростовой фигуры будет около 400 по сетке (1,35м)
+;scope_zoom_factor		= 7.0
+;scope_texture			= wpn\scopes\scope_pgo-7
+
+highlight_addons = fake_wpn_addon_scope_pgo7
+
 ;------------------------------ O.G.S.E. sound remake -----------------------
 ;звуки
 snd_draw					= weapons\rpg7\rpg7_draw
-snd_holster					= weapons\generic_shotgun_holster
+;snd_holster					= weapons\generic_shotgun_holster
+snd_holster					= weapons\rpg7\rpg7_draw
 snd_shoot					= weapons\rpg7\rpg7_shoot      
 snd_empty					= weapons\rpg7\rpg7_empty
 snd_reload					= weapons\rpg7\rpg7_reload, 1.0, 0.8
@@ -154,28 +193,49 @@ shell_point		 	        = 0.0, 0.0, 0.0
 fire_point               	= 0.0, 0.0, 0.0
 fire_bone                	= grenade_0
 grenade_bone			 	= grenade_0
-orientation              	= 0,0,0
-position                 	= 0,0,0
+orientation	= 0, 0, 0
+;position	= 0,0,0
+;position = (x,y,z) = ( x move right -x move left, y move up -y move down, z move forward -z move backwards)
+;position		= 0.14, -0.04, -0.17
+position		= 0.12, -0.02, -0.17
 visual                   	= weapons\rpg_7\wpn_rpg_7_hud.ogf
 
 anim_idle					= idle
+anim_idle_speed_k = 0.8
 anim_reload					= reload
 anim_draw					= draw
+anim_draw_speed_k = 0.5
 anim_holster				= holster
+;anim_holster_speed_k = 0.6
 anim_shoot					= shoot
 anim_idle_aim				= idle
+anim_idle_aim_speed_k = 0.4
+anim_idle_sprint   = idle_sprint
+
+;+Исправлена проблема с мигающей ракетой во время перезарядки РПГ7
 
 ;смещения HUD для режима приближения
-zoom_offset					= -0.1383,-0.0211,-0.095
-zoom_rotate_x				= 0.0125
-zoom_rotate_y				= 0.017
+;-zoom_offset					= -0.1383,-0.0211,-0.095
+;-zoom_rotate_x				= 0.0125
+;-zoom_rotate_y				= 0.017
+;;;;;;;;;;;;;;;;;;;;;;Прицеливание через оптику (перекрывается текстуроЙ)
+zoom_offset			= -0.107300,0.016560,-0.076000
+zoom_rotate_x		= -0.005500
+zoom_rotate_y		= 0.001200
+;zoom_offset			= -0.057800,0.022560,-0.132500
+;zoom_rotate_x		= -0.005500
+;zoom_rotate_y		= 0.001200
+;;;;;;;;;;;;;;;;;;;;;;Альтернативное прицеливание ОГСР через штатный механический прицел
+second_zoom_offset			= -0.107300,0.016560,-0.076000
+second_zoom_rotate_x		= -0.005500
+second_zoom_rotate_y		= 0.001200
 
 ;прячем перекрестие прицела в зуме
 zoom_hide_crosshair		= true
 
 ;время поворота HUD (сек)
-zoom_rotate_time		= 0.7
-rotate_time			= 0.7
+zoom_rotate_time	= 0.5	;0.7
+rotate_time			= 0.5	;0.7
 
 [wpn_rpg7_repair]
 tech_complication = 500
@@ -189,7 +249,17 @@ cform                    	= skeleton
 class                    	= G_RPG7
 $prefetch 		 			= 32
 
-safe_dist_to_explode = 5
+;ТЕСТ предохранителя
+safe_dist_to_explode = 10
+;РПГ имеет множество гранат с разными взрывтелями и системами предохранения.
+;Есть инерционного действия предохранители - при выстреле пружинная деталь оседает вниз, позволяя ударнику приблизиться к капсюлю. Пока скользит деталь - снаряд покидает ствол.
+;Есть центробежные - пришедший во вращение вместе со снарядом стопор-эксцентрик под действием центробежной силы отходит в сторону, открывая путь к капсюлю. Эти наджнее первых, взводятся уже вне ствола (при поределенной раскрутке снаряда). Но применимы только к снарядам и враюающимся РСам.
+;Есть пороховые. При выстреле на капсюль оседает ударник предохранительного механизма, капсюль поджигает пороховую петарду, в которую упирается подпружиненная задвижка. Петарда прогорает (или сперва прогорает замедлитель, а потом петарда) и задвижка-стопор вдвигается на ее место, открывая ударнику путь к капсюлю.
+;Есть электронные, часовые (мини-часы)
+;И, чаще всего, комбинация нескольих предохранителей (при выстреле срабатывает пороховой с замедлителем, давая возможность центробежному стопору под действием силы вращения отойти в сторону, открыв доступ к капсюлю, а основной ударник в то же время при выстреле осаживается, преодолевая силу пружины) Такой снаряд взорвется только после ряда перегрузок, характерных только для выстрела, а не падения или удара.
+;И пока все осаживается раскручивается и горит, снаряд пролетает свои 10-100 метров, делая стрельбу безопасной и не допуская разрывов в стволе и перед дулом.
+;В ПГ-7В и ВМ взрыватель с пороховым + центробежным предохранителем. Выстрел вращается на траектории и при вылете из ствола гранатомета уже имеет закрутку засчет турбинки. Стопор отпускается при прогорании петарды. Движок перемещается на одну линию с детонатором и цепь замыкается. Сработка от пьезика головного, выдающего ток подрыва. При рикошете очень эффектно рвется в воздухе  От самоликвидатора.
+
 
 kill_msg_x			= 0
 kill_msg_y			= 85
