--- a/gamedata/config/weapons/w_sig550.ltx
+++ b/gamedata/config/weapons/w_sig550.ltx
@@ -28,7 +28,7 @@ ammo_elapsed			= 30
 ammo_mag_size			= 30
 ammo_class				= ammo_5.56x45_ss190, ammo_5.56x45_ap
 grenade_class			= ammo_m209
-fire_modes				= 1, -1
+fire_modes				= 1, 0, -1
 launch_speed			= 0
 hand_dependence			= 1
 single_handed			= 0	
@@ -130,8 +130,8 @@ light_var_range		 	= 0.1
 light_time 					= 0.2
 
 ;addons
-scope_status			    = 2;0
-silencer_status			= 2
+scope_status			    = 2		;0
+silencer_status				= 2
 grenade_launcher_status	    = 2
 
 zoom_enabled			    = true						; (on,off)zoom mode (right mouse button)
