--- a/gamedata/config/weapons/addon_glauncher.ltx
+++ b/gamedata/config/weapons/addon_glauncher.ltx
@@ -55,12 +55,12 @@ real_item_section = wpn_addon_grenade_launcher
 [wpn_addon_grenade_launcher_m203]:wpn_grenade_launcher
 $spawn 			= 
 visual          = weapons\upgrade\wpn_grenade_launcher_m203.ogf
-description		= enc_weapons1_wpn-addon-grenade-launcher-m203
+description		= enc_weapons1_wpn-addon_m203
 
-cost			= 1500
+cost			= 2000
 
-inv_name		= wpn-addon-grenade-launcher-m203
-inv_name_short	= wpn-addon-grenade-launcher-m203
+inv_name		= wpn-addon_m203
+inv_name_short	= wpn-addon_m203_s
 inv_weight		= 1.36
 inv_grid_width	= 2
 inv_grid_height	= 1
@@ -74,12 +74,12 @@ fake_item_section	= fake_wpn_addon_grenade_launcher_m203
 [fake_wpn_addon_grenade_launcher_m203]:wpn_fake_addon_base
 $spawn 			= 
 visual          = weapons\upgrade\wpn_grenade_launcher_m203.ogf
-description		= enc_weapons1_wpn-addon-grenade-launcher-m203
+description		= enc_weapons1_wpn-addon_m203
 
-cost			= 1500
+cost			= 2000
 
-inv_name		= wpn-addon-grenade-launcher-m203
-inv_name_short	= wpn-addon-grenade-launcher-m203
+inv_name		= wpn-addon_m203
+inv_name_short	= wpn-addon_m203_s
 inv_weight		= 1.36
 inv_grid_width	= 2
 inv_grid_height	= 1
@@ -89,24 +89,93 @@ inv_grid_y		= 3
 real_item_section = wpn_addon_grenade_launcher_m203
 
 
-
------------------------------------------------------------------------------------------------------------------------------
-;Сменные аддоны ОГСЕ
------------------------------------------------------------------------------------------------------------------------------
-;Модульный боевой подствольный дробовик Remington 870MCS (Modular Combat Shotgun) для М16/М4 (3, 5 или 7 патронов 12 калибра)
--- требуют специальной процедуры спавна	ogse_addons.set_default_shg_params(ogse.spawn_item_in_inv("wpn_addon_remington_870mcs"))
-[wpn_addon_remington_870mcs]:wpn_addon_grenade_launcher_m203
+[wpn_addon_grenade_launcher_ag36]:wpn_grenade_launcher
 $spawn 			= 
-;+++visual 				= weapons\masterkey\wpn_mk.ogf
-;---ЗАТЫЧКА (чтоб юзался стандарт 10R) 
 visual          = weapons\upgrade\wpn_grenade_launcher_m203.ogf
+description		= enc_weapons1_wpn-addon_ag36
 
-description		= wpn_addon_remington_870mcs	;Remington 870MCS
+cost			= 2300
+
+inv_name		= wpn-addon_ag36
+inv_name_short	= wpn-addon_ag36_s
+inv_weight		= 1.5
+inv_grid_width	= 2
+inv_grid_height	= 1
+inv_grid_x		= 29	;17
+inv_grid_y		= 15	;3
+grenade_vel		= 71
+
+fake_item_section	= fake_wpn_addon_grenade_launcher_ag36
+
+;фейк-AG36
+[fake_wpn_addon_grenade_launcher_ag36]:wpn_fake_addon_base
+$spawn 			= 
+visual          = weapons\upgrade\wpn_grenade_launcher_m203.ogf
+description		= enc_weapons1_wpn-addon_ag36
+
+cost			= 2300
+
+inv_name		= wpn-addon_ag36
+inv_name_short	= wpn-addon_ag36_s
+inv_weight		= 1.5
+inv_grid_width	= 2
+inv_grid_height	= 1
+inv_grid_x		= 29	;17
+inv_grid_y		= 15	;3
+
+real_item_section = wpn_addon_grenade_launcher_ag36
+
+
+[wpn_addon_grenade_launcher_fn2000]:wpn_grenade_launcher
+$spawn 			= 
+visual          = weapons\upgrade\wpn_grenade_launcher_fn2000.ogf
+description		= enc_weapons1_wpn-addon_fn2000
 
 cost			= 2500
 
-inv_name		= wpn_addon_remington_870mcs	;Remington 870MCS
-inv_name_short	= wpn_addon_remington_870mcs	;Remington 870MCS
+inv_name		= wpn-addon_fn2000
+inv_name_short	= wpn-addon_fn2000_s
+inv_weight		= 1.1
+inv_grid_width	= 2
+inv_grid_height	= 1
+inv_grid_x		= 36
+inv_grid_y		= 15
+grenade_vel		= 71
+
+fake_item_section	= fake_wpn_addon_grenade_launcher_fn2000
+
+;фейк FN GL1
+[fake_wpn_addon_grenade_launcher_fn2000]:wpn_fake_addon_base
+$spawn 			= 
+visual          = weapons\upgrade\wpn_grenade_launcher_fn2000.ogf
+description		= enc_weapons1_wpn-addon_fn2000
+
+cost			= 2500
+
+inv_name		= wpn-addon_fn2000
+inv_name_short	= wpn-addon_fn2000_s
+inv_weight		= 1.1
+inv_grid_width	= 2
+inv_grid_height	= 1
+inv_grid_x		= 36
+inv_grid_y		= 15
+
+real_item_section = wpn_addon_grenade_launcher_fn2000
+
+
+----------------------------------------------------------------------------------------------------------------------
+;Сменные аддоны ОГСЕ
+----------------------------------------------------------------------------------------------------------------------
+;Модульный боевой подствольный дробовик Remington 870MCS (Modular Combat Shotgun) для М16/М4 (3, 5 или 7 патронов 12 калибра)
+[wpn_addon_remington_870mcs]:wpn_addon_grenade_launcher_m203
+$spawn 			= 
+visual 				= weapons\masterkey\wpn_mk.ogf
+description		= enc_weapons1_wpn-masterkey
+
+cost			= 2500
+
+inv_name		= wpn-masterkey
+inv_name_short	= wpn-masterkey_s
 inv_weight		= 2.5
 inv_grid_width			= 3		;2
 inv_grid_height			= 2		;1
@@ -115,20 +184,18 @@ inv_grid_y				= 19	;3
 
 fake_item_section	= fake_wpn_addon_remington_870mcs
 is_shotgun      = 1
-standalone_shotgun_section = wpn_remington_870mcs
+standalone_shotgun_section = wpn_masterkey
 
 ;фейк-Remington 870MCS
 [fake_wpn_addon_remington_870mcs]:wpn_fake_addon_base
 $spawn 			= 
-;---ЗАТЫЧКА (чтоб юзался стандарт 10R) 
-visual          = weapons\upgrade\wpn_grenade_launcher_m203.ogf
-;---со всеми аддонами---visual 				= weapons\masterkey\wpn_mk.ogf
-description		= fake_wpn_addon_remington_870mcs	;Remington 870MCS
+visual 				= weapons\masterkey\wpn_mk.ogf
+description		= enc_weapons1_wpn-masterkey
 
 cost			= 2500
 
-inv_name		= fake_wpn_addon_remington_870mcs	;Remington 870MCS
-inv_name_short	= fake_wpn_addon_remington_870mcs	;Remington 870MCS
+inv_name		= wpn-masterkey
+inv_name_short	= wpn-masterkey_s
 inv_weight		= 2.5
 inv_grid_width			= 3		;2
 inv_grid_height			= 2		;1
@@ -137,24 +204,5 @@ inv_grid_y				= 19	;3
 
 real_item_section = wpn_addon_remington_870mcs
 is_shotgun      = 1
-standalone_shotgun_section = wpn_remington_870mcs
+standalone_shotgun_section = wpn_masterkey
 
-
-
-
-
-; Подствольный дробовик Remington 870MCS в автономном режиме
-;--------------------------------------
-;+++[wpn_remington_870mcs]:wpn_masterkey
-;+++$spawn                  = "weapons\wpn_remington_870mcs"
-;---ЗАТЫЧКА (чтоб юзался стандарт 10R)	
-[wpn_remington_870mcs]:wpn_spas12		
-$spawn = "weapons\spas12"
-addon_mode_section = fake_wpn_addon_remington_870mcs
-;---для ЗАТЫЧКИ, чтоб в слот влезала
-;---slot 					= 1
-;---inv_grid_width			= 3		;2
-;---inv_grid_height			= 2		;1
-;---inv_grid_x				= 60	;17
-;---inv_grid_y				= 19	;3
------------------------------------------------------------------------------------------------------------------------------
