--- a/gamedata/config/weapons/addon_scope_mount.ltx
+++ b/gamedata/config/weapons/addon_scope_mount.ltx
@@ -21,9 +21,9 @@ real_item_section = wpn_addon_side_rail
 ;кронштейн-переходник МТК-83 (ставится ГГ апгрейдом на боковую планку "ласточкин хвост")
 [wpn_addon_mtk83]:wpn_fake_addon_base
 visual          = weapons\upgrade\mtk-83.ogf
-inv_name		= addon_scope_mtk83
-inv_name_short	= addon_scope_mtk83_s
-description		= enc_addon_scope_mtk83
+inv_name		= addon_scopemount_mtk83
+inv_name_short	= addon_scopemount_mtk83_s
+description		= enc_addon_scopemount_mtk83
 cost			= 1000
 inv_weight		= 0.31
 inv_grid_width		= 1
@@ -38,43 +38,63 @@ always_fake = true
 real_item_section = wpn_addon_mtk83
 
 
+;кронштейн-переходник Picatinny rail (ставится ГГ апгрейдом на пистолеты)
+[wpn_addon_prail]:wpn_fake_addon_base
+visual          = weapons\upgrade\p_rail.ogf
+inv_name		= addon_scopemount_prail
+inv_name_short	= enc_addon_scopemount_prail_s
+description		= enc_addon_scopemount_prail
+cost			= 1000
+inv_weight		= 0.31
+inv_grid_width		= 1
+inv_grid_height		= 1
+inv_grid_x			= 78
+inv_grid_y			= 20
+fake_item_section	= fake_wpn_addon_prail
+is_scope_mount_addon = true
+always_fake = true
+
+[fake_wpn_addon_prail]:wpn_addon_prail
+real_item_section = wpn_addon_prail
 
 
-;Custom АК Kit - телескопический приклад, пистолетная анатомическая рукоятка и цевьё с нижней рельсой Пикатинни (устанавливается ремонтником)
-[wpn_addon_ak100_custom]:wpn_fake_addon_base
-inv_grid_width	= 2
-inv_grid_height	= 1
-inv_grid_x			= 63
-inv_grid_y			= 11
-visual          = weapons\upgrade\ak100_custom.ogf
-inv_name		= addon_ak100_custom
-inv_name_short	= addon_ak100_custom_s
-description		= enc_addon_ak100_custom
+;рукоятка G36 с рельсой Пикатинни MIL-STD-1913 (ставится ГГ апгрейдом вместо штатной рукоятки с оптикой)
+[wpn_addon_g36rail]:wpn_fake_addon_base
+visual          = weapons\upgrade\g36_rail.ogf
+inv_name		= addon_scopemount_g36rail
+inv_name_short	= addon_scopemount_g36rail_s
+description		= enc_addon_scopemount_g36rail
 cost			= 2000
-inv_weight		= 1.0
+inv_weight		= 0.4
+inv_grid_width		= 2
+inv_grid_height		= 1
+inv_grid_x			= 27		;74
+inv_grid_y			= 15		;22
+
+fake_item_section	= fake_wpn_addon_g36rail
 is_scope_mount_addon = true
-fake_item_section	= fake_wpn_addon_ak100_custom
 always_fake = true
-; только для совместимости с системой аддонов
-[fake_wpn_addon_ak100_custom]:wpn_addon_ak100_custom
-real_item_section = wpn_addon_ak100_custom
+
+[fake_wpn_addon_g36rail]:wpn_addon_g36rail
+real_item_section = wpn_addon_g36rail
 
 
-;Затыльник-амортизатор ГП-25 (не ставится)
-[wpn_addon_gp_galoscha]:wpn_fake_addon_base
-inv_grid_width	= 1
-inv_grid_height	= 1
-inv_grid_x			= 76
-inv_grid_y			= 10
-visual          = weapons\upgrade\gp_galoscha.ogf
-inv_name		= addon_gp_galoscha
-inv_name_short	= addon_gp_galoscha_s
-description		= enc_addon_gp_galoscha
-cost			= 456
+;рукоятка L85 (ставится ГГ апгрейдом вместо штатной оптики)
+[wpn_addon_l85carryhandle]:wpn_fake_addon_base
+visual          = weapons\upgrade\l85_carryhandle.ogf
+inv_name		= addon_scopemount_l85carryhandle
+inv_name_short	= addon_scopemount_l85carryhandle_s
+description		= enc_addon_scopemount_l85carryhandle
+cost			= 700
 inv_weight		= 0.1
+inv_grid_width		= 1
+inv_grid_height		= 1
+inv_grid_x			= 74
+inv_grid_y			= 22
+
+fake_item_section	= fake_wpn_addon_l85carryhandle
 is_scope_mount_addon = true
-fake_item_section	= fake_wpn_addon_gp_galoscha
 always_fake = true
-; только для совместимости с системой аддонов
-[fake_wpn_addon_gp_galoscha]:wpn_addon_gp_galoscha
-real_item_section = wpn_addon_gp_galoscha
+
+[fake_wpn_addon_l85carryhandle]:wpn_addon_l85carryhandle
+real_item_section = wpn_addon_l85carryhandle
