--- a/gamedata/config/weapons/ammo/556x45.ltx
+++ b/gamedata/config/weapons/ammo/556x45.ltx
@@ -30,54 +30,58 @@
 
 ;Малоимпульсный промежуточный патрон калибра 5.56х45 мм был создан в 1964 году и принят на вооружение армией США под обозначением М193 вместе с новой штурмовой винтовкой М16. Новый вариант патрона 5.56х45 под обозначением SS109 с более тяжелой пулей, рассчитанной на меньший шаг нарезов (178 мм вместо 305 мм для М193) был разработан в 1980-е годы в Бельгии на фирме Fabrique Nationale и в середине 1980-х годов был принят на вооружение в качестве стандартного странами НАТО. В США SS109 был принят на вооружение под обозначением М855 и под него принята на вооружение новая модификация штурмовой винтовки М16А2 с более тяжелым стволом с измененным шагом нарезов. Боеприпасы М193 и SS109 в принципе взаимозаменяемы, но при стрельбе ухудшится точность из-за различной длинны хода нарезов. Боевой патрон 5.56х45 НАТО и его коммерческий аналог 5.56х45 – патрон .223 Rem (Remington) оказался отменным патроном для охоты на животных весом до 50 кг на дистанциях до 200 метров, и в настоящее время выпускается практически во всём мире.
 
+;Коммерческие .223 Rem - 20/25/500 - 20 патронов в пачке, 25 пачек в цинке, итого 500x11 грамм = 5.5 кг. + вес цинка
+;Армейские патроны калибра 5.56x45 мм снаряжены в 10-зарядные обоймы, которые помещаются в 30-патронные полуоткрытые картонные пачки или картонные коробки. Бандольер M8 имеет четыре подсумка, в каждый из которых укладывается одна такая упаковка. Суммарно по 120 патронов в бандольере. К каждому бандольеру прилагается металлический переходник - ускоритель заряжания (metal magazine guide). В металлический короб M2A1 помещается 7 бандольеров - 840 патронов в коробе, 1680 патронов в ящике. Во времена войны во Вьетнаме, когда магазины для M16 были 20-зарядными, в ходу были бандольеры M2 и M3 с 6 или 7 подсумками вместимостью 120 и 140 патронов соответственно. Напомню, что первоначально магазины для M16 планировали сделать одноразовыми, однако потом пожадничали и ограничились обоймами.
+;Спецпатроны (трассеры M856, снайперские Mk 262, практическиe M862 и др.) пакуются в картонные коробки по 20 штук, 41 коробка в металлическом коробе. Для основных патронов M193 и M855 также имеются варианты картонных коробок на 20 патронов.
+
 ;------------------------------
 [ammo_5.56x45_ss190]:ammo_base
 $spawn			= "weapons\ammo\ammo_5.56x45_ss190" ; option for Level Editor
 visual          = weapons\ammo\ammo_556x45_ss190.ogf
 description		= enc_weapons_ammo-5.56x45ss190
-
-cost			= 460
-
-box_size		= 30
-
 inv_name		= ammo-5.56x45ss190
 inv_name_short	= ammo-5.56x45ss190_s
-inv_weight		= 0.33
-
 inv_grid_width	= 2
 inv_grid_height	= 1
 inv_grid_x		= 14
 inv_grid_y		= 11
 
+cost			= 460
+box_size		= 30
+inv_weight		= 0.33		;+(11,0*20=220г.)
+
 k_disp			= 2.5
-k_hit			= 1.25
+k_hit			= 1.4
+k_impulse		= 0.98			1.1
 k_pierce		= 1.15
-tracer			= on
+;tracer			= on
+wm_size         = 0.0556
+
 
 ;------------------------------
 [ammo_5.56x45_ap]:ammo_base
 $spawn			= "weapons\ammo\ammo_5.56x45_ap" ; option for Level Editor
 visual                  = weapons\ammo\ammo_556x45_ap.ogf
 description				= enc_weapons_ammo-5.56x45ap
-
-cost			= 540
-
-box_size		= 30
-
 inv_name		= ammo-5.56x45ap
 inv_name_short	= ammo-5.56x45ap_s
-inv_weight		= 0.33
-
 inv_grid_width	= 2
 inv_grid_height	= 1
 inv_grid_x		= 10
 inv_grid_y		= 11
 
+cost			= 540
+box_size		= 20
+inv_weight		= 0.22		;+(11,0*20=220г.)
+
 k_disp			= 2.5
-k_hit			= 1.17
+k_hit			= 1.4
+k_impulse		= 0.98			;1.15
 k_pierce		= 1.25
-impair			= 1.05
-tracer			= on
+impair			= 1.8
+wm_size         = 0.0556
+;tracer			= on
+;explosive		= on
 
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;фейк-боеприпас для оружия без магазина 
