--- a/gamedata/config/weapons/ammo/762x25.ltx
+++ b/gamedata/config/weapons/ammo/762x25.ltx
@@ -1,56 +1,58 @@
+;Масса патрона 10,2г. Масса пули 5,49—5,52 г. Начальная скорость пули, м/с: 420-500 Энергия пули, Дж: 480-700
+;Емкость упаковочных бумажных пакетов (35 штук) и картонных коробок (70 штук) для 7,62-мм пистолетных патронов была выбрана исходя из емкости магазинов пистолетов-пулеметов: 35 — в ППС; 71 — в ППШ. Патронный ящик (массой от 31 до 34 кг в зависимости от типа патрона) был рассчитан на 2520 патронов.
+;Есть пачки по 16 патронов. В ящике 2 цинка.В цинке по 30 упаковок.
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 [ammo_7.62x25_p]:ammo_base
 $spawn			= "weapons\ammo\ammo_7.62x25_p" ; option for Level Editor
 visual          = weapons\ammo\ammo_762x25_p.ogf
-description		= enc_weapons1_ammo_ammo-7.62x25-p
-
-
-cost			= 360
-
-box_size		= 30
-
+description		= enc_weapons1_ammo-7.62x25-p
 inv_name		= ammo-7.62x25-p
 inv_name_short	= ammo-7.62x25-p_s
-inv_weight		= 0.3
-
-inv_grid_width	= 2
+inv_grid_width	= 1
 inv_grid_height	= 1
-inv_grid_x		= 21
-inv_grid_y		= 10
+inv_grid_x      = 23
+inv_grid_y      = 7
 
-k_disp			= 1.5
-k_hit			= 1.1
-k_impulse		= 2
-k_pierce		= 1.1
+cost			= 360
+box_size		= 35
+inv_weight		= 0.36		;+(10,2*35=357.0г.)
 
-;------------------------------
+k_disp			= 1.9						;1.8
+k_hit			= 1.74						;1.1
+k_impulse		= 1.5						;2.0			;коэффициент "толчка" при попадании. Походу работает только на "неживых"
+k_pierce		= 1.3						;1.2			;коэффициент бронебойности. hit_power оружия на бронебойность влияния не оказывает
+impair			= 1.2		;1.1			;1.0			;коэффициент износа ствола от пули
+wm_size         = 0.0762
+;tracer			= on
+
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;ПС
 [ammo_7.62x25_ps]:ammo_base
 $spawn			= "weapons\ammo\ammo_7.62x25_ps" ; option for Level Editor
 visual          = weapons\ammo\ammo_762x25_ps.ogf
-description		= enc_weapons1_ammo_ammo-7.62x25-ps
-
-cost			= 380
-
-box_size		= 30
-
+description		= enc_weapons1_ammo-7.62x25-ps
 inv_name		= ammo-7.62x25-ps
 inv_name_short	= ammo-7.62x25-ps_s
-inv_weight		= 0.3
-
-inv_grid_width	= 2
+inv_grid_width	= 1
 inv_grid_height	= 1
-inv_grid_x		= 21
-inv_grid_y		= 11
+inv_grid_x      = 24
+inv_grid_y      = 7
 
-k_disp			= 1.5
-k_hit			= 1.4
-k_impulse		= 1.5
-k_pierce		= 1.2
-impair			= 1.02
-wm_size         = 0.06
+cost			= 380
+box_size		= 35
+inv_weight		= 0.36		;+(10,2*35=357.0г.)
 
-;------------------------------
+k_disp			= 1.8						;1.5
+k_hit			= 1.74						;1.4
+k_impulse		= 1.55						;1.5
+k_pierce		= 1.4						;1.3	;1.35/1.2
+impair			= 1.9						;1.2
+wm_size         = 0.0762
+;tracer			= on
+;explosive		= on
 
 
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 [clip_8_7.62x25_p]:ammo_7.62x25_p
 box_size	= 1
 mag_size	= 8
