--- a/gamedata/config/weapons/ammo/762x54.ltx
+++ b/gamedata/config/weapons/ammo/762x54.ltx
@@ -1,82 +1,80 @@
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;7,62х53R (1908г)в ящике 880 шт в двух цинках по440 шт = 22 пачки по 20 патронов (440 патронов). Вес патрона - 22 г; вес пули - 9,6 г; вес заряда - около 3,2 г;
+;Патроны для внутреннего гражданского рынка 7,62х39, 7,62х54, 7,62х51 (.308), 5,56х45(.223) (Барнаул, КСПЗ, Тула) как правило в цинки НЕ ПАКУЮТСЯ. В качестве групповой тары, картнонные коробки по 20 патронов, могут укладываться в деревянные ящики, в которые, обычно, идут два цинка.
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;ПС
 [ammo_7.62x54_7h1]:ammo_base
 $spawn			= "weapons\ammo\ammo_7.62x54_7h1" ; option for Level Editor
 visual          = weapons\ammo\ammo_762x54_7h1.ogf
 description		= enc_weapons_ammo-7.62x54_7h1
-
-cost			= 440
-
-box_size		= 20
-
 inv_name		= ammo-7.62x54_7h1
 inv_name_short	= ammo-7.62x54_7h1_s
-inv_weight		= 0.25
-
 inv_grid_width	= 2
 inv_grid_height	= 1
 inv_grid_x		= 15
 inv_grid_y		= 9
 
-k_dist			= 1.1
-k_disp			= 1.4
-k_hit			= 2.17 ;1.5
-k_impulse		= 1.2
-k_pierce		= 1.1
-wm_size         = 0.07
-impair			= 1.25
+cost			= 440
+box_size		= 20
+inv_weight		= 0.44		;+(21,9*20=438г.)
 
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+k_disp			= 0.9
+k_hit			= 2.0
+k_impulse		= 1.4
+k_pierce		= 1.1
+impair			= 1.25
+wm_size         = 0.0762
+;tracer			= on
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;БП(7Н26)
 [ammo_7.62x54_ap]:ammo_base
 $spawn			= "weapons\ammo\ammo_7.62x54_ap" ; option for Level Editor
 visual          = weapons\ammo\ammo_762x54_ap.ogf
 description		= enc_weapons_ammo-7.62x54ap
-
-cost			= 490
-
-box_size		= 20
-
 inv_name		= ammo-7.62x54ap
 inv_name_short	= ammo-7.62x54ap_s
-inv_weight		= 0.23
-
 inv_grid_width	= 2
 inv_grid_height	= 1
 inv_grid_x		= 15
 inv_grid_y		= 10
 
-k_disp			= 1.4
-k_hit			= 3 ;1.3
-k_impulse		= 0.95
-k_pierce		= 1.5
-impair			= 1.05
-tracer			= on
-explosive		= on
+cost			= 490
+box_size		= 20
+inv_weight		= 0.44		;+(21,8*20=436г.)
 
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+k_disp			= 1.5
+k_hit			= 2.0
+k_impulse		= 1.4
+k_pierce		= 1.5
+impair			= 2.7
+wm_size         = 0.0762
+;tracer			= on
+;explosive		= on
+
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;СНБ
 [ammo_7.62x54_7h14]:ammo_base
 $spawn			= "weapons\ammo\ammo_7.62x54_7h14" ; option for Level Editor
 visual          = weapons\ammo\ammo_762x54_7h14.ogf
 description		= enc_weapons_ammo-7.62x54-7h14
-
-cost			= 510
-
-box_size		= 20
-
 inv_name		= ammo-7.62x54-7h14
 inv_name_short	= ammo-7.62x54-7h14_s
-inv_weight		= 0.23
-
 inv_grid_width	= 2
 inv_grid_height	= 1
 inv_grid_x		= 17
 inv_grid_y		= 9
 
-k_dist			= 1.25
-k_hit			= 3.9 ;1.25
-k_impulse		= 0.95
+cost			= 510
+box_size		= 20
+inv_weight		= 0.44		;+(21,9*20=438г.)
+
+k_disp			= 1.2
+k_hit			= 2.0
+k_impulse		= 1.4
 k_pierce		= 1.4
-impair			= 1.1
-tracer			= on
+impair			= 2.7
+wm_size         = 0.0762
+;tracer			= on
+;explosive		= on
+
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;фейк-боеприпас для оружия без магазина 
 [ammo_7.62x54_dummy]:ammo_7.62x54_7h1
