--- a/gamedata/config/weapons/ammo/86x70.ltx
+++ b/gamedata/config/weapons/ammo/86x70.ltx
@@ -4,24 +4,23 @@
 $spawn			= "weapons\ammo\ammo_8.6x70_lm"	; option for Level Editor
 visual			= weapons\ammo\ammo_86x70_lm.ogf
 description		= enc_weapons1_ammo_8.6x70_lm
-
-cost			= 1400
-
-box_size		= 20
-
 inv_name		= ammo_8.6x70_lm
 inv_name_short		= ammo_8.6x70_lm_s
-inv_weight		= 0.44
-
 inv_grid_width		= 2
 inv_grid_height		= 1
 inv_grid_x		= 13
 inv_grid_y		= 2
 
-k_dist			= 2.2
+cost			= 1400
+box_size		= 20
+inv_weight		= 0.44
+
+k_dist			= 1.5
 k_disp			= 0.85
-k_hit			= 3
-k_impulse		= 2.5
+k_hit			= 5.0	;6.0
+k_impulse		= 3.5
 k_pierce		= 2.0
-wm_size			= 0.09
-explosive		= on
+impair			= 2.5
+wm_size			= 0.086
+;tracer			= on
+;explosive		= on
