--- a/gamedata/config/weapons/ammo/9x18.ltx
+++ b/gamedata/config/weapons/ammo/9x18.ltx
@@ -1,79 +1,81 @@
+;9х18 в ящике 2560шт упакованных в два цинка по 1280 шт = 80 пачек по 16 патронов,видимо из соображения 1 пачка = 1 БК. Вес ящика ок. 33 кг.
+;Масса патрона 9,2-10,4 г. Масса пули 5,75-6,15 г. 
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 [ammo_9x18_fmj]:ammo_base
 $spawn			= "weapons\ammo\ammo_9x18_fmj" ; option for Level Editor
 visual          = weapons\ammo\ammo_9x18_fmj.ogf
 description		= enc_weapons1_ammo_ammo-9x18-fmj
-
-cost			= 210
-
-box_size		= 16
-
 inv_name		= ammo-9x18-fmj
 inv_name_short	= ammo-9x18-fmj_s
-inv_weight		= 0.17
-
 inv_grid_width	= 1
 inv_grid_height	= 1
 inv_grid_x		= 11
 inv_grid_y		= 12
 
-k_disp			= 2
-k_hit			= 1.1
-k_impulse		= 1.3
-impair			= 1.1
+cost			= 210
+box_size		= 16
+inv_weight		= 0.15		;+(9,2*16=147.2г.), (10,4*16=166.4г.)
 
-;------------------------------
+k_disp			= 2.0
+k_hit			= 1.53			;1.1
+k_impulse		= 1.6			;1.3
+;impair			= 1.1
+;tracer			= on
+wm_size         = 0.0918
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 [ammo_9x18_pmm]:ammo_base
 $spawn			= "weapons\ammo\ammo_9x18_pmm" ; option for Level Editor
 visual          = weapons\ammo\ammo_9x18_pmm.ogf
 description		= enc_weapons1_ammo_ammo-9x18-pmm
-
-cost			= 225
-
-box_size		= 16
-
 inv_name		= ammo-9x18-pmm
 inv_name_short	= ammo-9x18-pmm_s
-inv_weight		= 0.17
-
 inv_grid_width	= 1
 inv_grid_height	= 1
 inv_grid_x		= 12
 inv_grid_y		= 12
 
-k_dist			= 1.5
-k_disp			= 2
-k_hit			= 1.2
-k_impulse		= 2.5
-k_pierce		= 1.12
-impair			= 1.5
+cost			= 225
+box_size		= 16
+inv_weight		= 0.17		;+(9,2*16=147.2г.), (10,4*16=166.4г.)
 
-;------------------------------
+k_dist			= 1.0						;1.5
+k_disp			= 2.0
+k_hit			= 1.55						;1.2
+k_impulse		= 1.65						;2.5
+k_pierce		= 1.1
+impair			= 1.35						;1.5
+wm_size         = 0.0918
+;tracer			= on
+;explosive		= on
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;ПБМ
+;------------------------------но используется, НО вылетает без них
 [ammo_9x18_pbp]:ammo_base
 $spawn			= "weapons\ammo\ammo_9x18_pbp" ; option for Level Editor
 visual          = weapons\ammo\ammo_9x18_pbp.ogf
 description		= enc_weapons1_ammo_ammo-9x18-pbp
-
-cost			= 230
-
-box_size		= 16
-
 inv_name		= ammo-9x18-pbp
 inv_name_short	= ammo-9x18-pbp_s
-inv_weight		= 0.17
-
 inv_grid_width	= 1
 inv_grid_height	= 1
 inv_grid_x		= 20
 inv_grid_y		= 6
 
-k_disp			= 3
-k_hit			= 1.3
-k_impulse		= 2.5
-k_pierce		= 1.2
-impair			= 1.15
+cost			= 230
+box_size		= 16
+inv_weight		= 0.17
 
+k_dist			= 1.0						;2.0
+k_hit			= 1.4						;1.5
+k_impulse		= 1.7						;1.9
+k_pierce		= 1.1						;1.2
+impair			= 2.3						;2.0
+wm_size         = 0.0918
+
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ;------------------------------
-
 [clip_8_9x18_fmj]:ammo_9x18_fmj
 box_size	= 1
 mag_size	= 8
