--- a/gamedata/config/weapons/w_ak74n.ltx
+++ b/gamedata/config/weapons/w_ak74n.ltx
@@ -1,4 +1,4 @@
-; 5,45-мм автомат Калашникова АК74 (6П20)
+; 5,45-мм автомат Калашникова АК-74 (6П20)
 ; АК74Н3 (6П20Н3) — с бесподстветным НСПУ-3 (индекс ГРАУ 1ПН51).
 ;(C) k01jan. Модель/текстуры Heffy, анимации Holden_McClure/KingFriday, правлены jumbo5337, звуки ARMA, etRussk.
 ;--------------------------------------
@@ -66,19 +66,19 @@ kill_msg_height			= 28
 
 ;-----------------------------------------------------------------------------------
 ;--params of weapon recoil
-fire_dispersion_base	= 0.17		;ОГСЕ АК74 0.17  ;угол (в градусах) базовой дисперсии оружия
+fire_dispersion_base	= 0.155		;0.16 ОГСЕ АК74 0.17  ;угол (в градусах) базовой дисперсии оружия
 control_inertion_factor	= 1.25f		;ОГСЕ АК74 1.25f ;удобность
 disp_rate 				= 1.82
 
 ;--отдача
-cam_relax_speed         		=5;3.5; 0.15		;скорость возврата в исходное положение
+cam_relax_speed         	= 5			;скорость возврата в исходное положение
 cam_relax_speed_ai        	= 120.75
-cam_dispersion          		= 0.15		;увеличения угла (в градусах) с каждым выстрелом
+cam_dispersion          	= 0.15		;увеличения угла (в градусах) с каждым выстрелом
 cam_dispersion_inc			= 0.3		;увеличениe cam_dispersion с каждым выстрелом
 cam_dispertion_frac			= 0.9		;ствол будет подыматься на cam_dispersion*cam_dispertion_frac +- cam_dispersion*(1-cam_dispertion_frac)
-cam_max_angle				= 10.0	    	;максимальный угол отдачи
+cam_max_angle				= 7.0	    ;максимальный угол отдачи
 cam_max_angle_horz			= 18.0		;(degree) maximum shot horizontal degree 
-cam_step_angle_horz			= 1.1;1		;(degree) size of step camera moved in horizontal position while shooting
+cam_step_angle_horz			= 1.1		;(degree) size of step camera moved in horizontal position while shooting
 ;износ
 fire_dispersion_condition_factor 	= 4.8    	;увеличение дисперсии в процентах при максимальном износе 
 misfire_probability 	= 0.0015	;вероятность осечки при максимальном износе 
@@ -117,11 +117,11 @@ shell_particles				= amik\weapons\5_45x39\5_45x39_shells_r_00
 ;С 1962 г. дульце гильзы по стыку с пулей и кромке капсюля для повышения влагостойкости покрываются лаком-герметизатором. В 1962-1963 гг. цвет лака был фиолетовый, а с 1964 г. лак на патронах с любым типом пули стал красным.
 
 ;параметры качания ствола в руках ГГ при движении в режиме прицеливания (стрельба навскидку)
-PDM_disp_base 				= 1.1		;ОГСЕ 1.2	;множитель, на который умножается базовая дисперсия оружия, когда ГГ стоит на месте в полный рост
-PDM_disp_vel_factor 		= 1.2		;ОГСЕ 1.3	;множитель, на который умножается базовая дисперсия оружия, когда ГГ крутит оружием или бежит
+PDM_disp_base 				= 1.0		;ОГСЕ 1.2	;множитель, на который умножается базовая дисперсия оружия, когда ГГ стоит на месте в полный рост
+PDM_disp_vel_factor 		= 1.13		;ОГСЕ 1.3	;множитель, на который умножается базовая дисперсия оружия, когда ГГ крутит оружием или бежит
 PDM_disp_accel_factor 		= 1.3		;ОГСЕ 1.3	;множитель, на который умножается базовая дисперсия оружия, когда ГГ бежит в спринте
-PDM_crouch	 				= 1.03		;ОГСЕ 1.0	;множитель, на который умножается базовая дисперсия оружия, когда ГГ идет пригнувшись
-PDM_crouch_no_acc 			= 1.0		;ОГСЕ 1.0	;множитель, на который умножается базовая дисперсия оружия, когда ГГ стоит на месте, пригнувшись
+PDM_crouch	 				= 1.05		;ОГСЕ 1.0	;множитель, на который умножается базовая дисперсия оружия, когда ГГ идет пригнувшись
+PDM_crouch_no_acc 			= 0.96		;ОГСЕ 1.0	;множитель, на который умножается базовая дисперсия оружия, когда ГГ стоит на месте, пригнувшись
 
 ; ttc
 hit_power                	= 0.67		; size of damage by bullet
@@ -166,6 +166,9 @@ light_time 					= 0.2
 scope_status				= 2							; 0 - no addon
 silencer_status				= 2							; 1 - permanent
 grenade_launcher_status		= 2							; 2 - attachable
+
+;ПРОБУЕМ пока один набор на всех
+highlight_addons = fake_wpn_addon_mag_ak7430, fake_wpn_addon_mag_rpk7445, fake_wpn_addon_mag_ak10560, fake_wpn_addon_grenade_launcher, fake_wpn_addon_scope_1p29, fake_wpn_addon_scope_kobra, fake_wpn_addon_scope_1pn51, fake_wpn_addon_mtk83, fake_wpn_addon_acog, fake_wpn_addon_scope_eotech
 
 zoom_enabled				= true						; (on,off)zoom mode (right mouse button)
 
@@ -275,76 +278,40 @@ anim_shoot_gl				= shoot_w_gl		;ходьба/удержание/бег с ГП
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ;HUD offset in zoom mode (to all)
-;(use ОГСЕ CONSOLE: hud_adjust_mode 0,1,2, then keys WSADQE and P to show current value in console)
-;-лево/+право,-низ/+верх,-к/+от себя
-;zoom_offset			= -0.112840,0.039250,-0.158000
-;-вверх/+вниз
-;zoom_rotate_x		= 0.054800
-;-лево/+право
-;zoom_rotate_y		= 0.043280
-
 ; тест sto1en
 zoom_offset			= -0.168900,0.067360,-0.225100
 zoom_rotate_x		= 0.043400
 zoom_rotate_y		= 0.030280
-
-zoom_hide_crosshair	= true						;to hide crosshair in zoom 
-
+;штатный механический прицел (второй режим - для оптики)
+second_zoom_offset			= -0.168900,0.067360,-0.225100
+second_zoom_rotate_x		= 0.043400
+second_zoom_rotate_y		= 0.030280
 ; same as above, but for attached grenade launcher for
 ; in NORMAL shoot mode
-;grenade_normal_zoom_offset		= -0.112840,0.039250,-0.158000
-;grenade_normal_zoom_rotate_x	= 0.042600
-;grenade_normal_zoom_rotate_y	= 0.043280
-
-; тест sto1en
 grenade_normal_zoom_offset		= -0.168900,0.067360,-0.225100
 grenade_normal_zoom_rotate_x	= 0.043400
 grenade_normal_zoom_rotate_y	= 0.030280
-
+second_grenade_normal_zoom_offset		= -0.168900,0.067360,-0.225100
+second_grenade_normal_zoom_rotate_x	= 0.043400
+second_grenade_normal_zoom_rotate_y	= 0.030280
 ; same as above, but for attached grenade launcher for
 ; in GRENADE mode
-;grenade_zoom_offset			= -0.030070,-0.130950,-0.053000
-;grenade_zoom_rotate_x		= -0.146311
-;grenade_zoom_rotate_y		= 0.005760
-
 ; тест sto1en grenade_zoom_offset			= -0.112860,-0.368469,-0.409998
 grenade_zoom_offset			= -0.112860,-0.368469,-0.1
 grenade_zoom_rotate_x		= -0.410010
 grenade_zoom_rotate_y		= 0.023930
+second_grenade_zoom_offset			= -0.112860,-0.368469,-0.1
+second_grenade_zoom_rotate_x		= -0.410010
+second_grenade_zoom_rotate_y		= 0.02393
+;-----------------------------------------------------------------------------
+;прячем перекрестие прицела в зуме
+zoom_hide_crosshair	= true						;to hide crosshair in zoom 
 
 ;-----------------------------------------------------------------------------------
 ;ремонт ОГСЕ [wpn_ak74_repair]
 [wpn_ak74n_repair]
 tech_complication = 300
 repair_compatibility =ak		;ОГСЕ ak74
-
-;--------------------------------------
-;Скорострельный АК-74
-;--------------------------------------
-;[wpn_ak74_m1]:wpn_ak74	
-;$spawn             				= "weapons\uniq\wpn_ak74_m1"	
-;rpm                      		= 850
-;condition_shot_dec 				= 0.0004
-;cam_dispersion					= 0.05		
-;cam_dispersion_inc				= 0.1
-;cost					        = 5000
-;[wpn_ak74_m1_repair]
-;tech_complication = 1000
-;repair_compatibility = ak74
-;
-;--------------------------------------
-;АК-74 Кобра камуфляж
-;--------------------------------------
-;[wpn_aks74_m1_camo1]:wpn_ak74	
-;$spawn              	= "weapons\aks74_m1_camo1"
-;holder_range_modifier	= 1.2
-;holder_fov_modifier		= 0.9
-;cost					= 4900
-;visual         		    = weapons\ak74\wpn_aks74_m1_camo1.ogf
-;[wpn_aks74_m1_camo1_repair]
-;tech_complication       = 1000
-;repair_compatibility    = ak74
-
 
 
 ;-----------------------------------------------------------------------------------
