--- a/gamedata/config/weapons/w_akm.ltx
+++ b/gamedata/config/weapons/w_akm.ltx
@@ -109,11 +109,11 @@ shell_point		 			= 0,0.216,0.154				; position (3rd person view) for shell to th
 shell_particles				= amik\weapons\7_62x39\7_62x39_r_02
 
 ;параметры качания ствола в руках ГГ при движении в режиме прицеливания (стрельба навскидку)
-PDM_disp_base 			    = 1.1		;ОГСЕ 1.3	;множитель, на который умножается базовая дисперсия оружия, когда ГГ стоит на месте в полный рост
-PDM_disp_vel_factor 		= 1.2		;ОГСЕ 1.4	;множитель, на который умножается базовая дисперсия оружия, когда ГГ крутит оружием или бежит
+PDM_disp_base 			    = 1.0		;ОГСЕ 1.3	;множитель, на который умножается базовая дисперсия оружия, когда ГГ стоит на месте в полный рост
+PDM_disp_vel_factor 		= 1.13		;ОГСЕ 1.4	;множитель, на который умножается базовая дисперсия оружия, когда ГГ крутит оружием или бежит
 PDM_disp_accel_factor 		= 1.3		;ОГСЕ 1.3	;множитель, на который умножается базовая дисперсия оружия, когда ГГ бежит в спринте
-PDM_crouch	 				= 1.03		;ОГСЕ 1.0	;множитель, на который умножается базовая дисперсия оружия, когда ГГ идет пригнувшись
-PDM_crouch_no_acc 			= 1.0		;ОГСЕ 1.0	;множитель, на который умножается базовая дисперсия оружия, когда ГГ стоит на месте, пригнувшись
+PDM_crouch	 				= 1.05		;ОГСЕ 1.0	;множитель, на который умножается базовая дисперсия оружия, когда ГГ идет пригнувшись
+PDM_crouch_no_acc 			= 0.96		;ОГСЕ 1.0	;множитель, на который умножается базовая дисперсия оружия, когда ГГ стоит на месте, пригнувшись
 
 ; ttc
 hit_power                	= 0.72		; size of damage by bullet
@@ -131,7 +131,7 @@ time_to_aim					= 1.0
 
 silencer_hit_power       	= 0.63
 silencer_hit_impulse	 	= 25
-silencer_fire_distance   	= 600
+silencer_fire_distance   	= 200
 silencer_bullet_speed	 	= 650
 
 hud                      	= wpn_akm_hud				; name of the section of the hud
@@ -157,6 +157,17 @@ light_time 					= 0.2
 scope_status				= 2							; 0 - no addon
 silencer_status				= 2							; 1 - permanent
 grenade_launcher_status		= 2							; 2 - attachable
+
+;ПРОБУЕМ пока один набор на всех
+highlight_addons = fake_wpn_addon_mag_akm30, fake_wpn_addon_mag_rpk40, fake_wpn_addon_mag_rpk75, fake_wpn_addon_grenade_launcher, fake_wpn_addon_scope_1p29, fake_wpn_addon_scope_kobra, fake_wpn_addon_scope_1pn51, fake_wpn_addon_mtk83, fake_wpn_addon_acog, fake_wpn_addon_scope_eotech
+;при торговле обрабатывает не все аддоны из списка, а только те прицелы, что в секции ствола.
+;С патронами, глушаками и подстволами всё нормально - они же движковые (не имеют фейков).
+;Магазины, прицельные планки и ручки почему-то не обрабатываются. 
+;при закрытии инвентаря фейки превращаются в не фейки, и в торговле поэтому глюки
+;пробуем прописать напрямую (ВРЕМЕННО, пока KRodin в движок всё перенести не раздуплится)
+;не прокатило highlight_addons = wpn_addon_mag_akm30, fake_wpn_addon_mag_akm30, wpn_addon_mag_rpk40, fake_wpn_addon_mag_rpk40, wpn_addon_mag_rpk75, fake_wpn_addon_mag_rpk75, fake_wpn_addon_grenade_launcher, fake_wpn_addon_scope_1p29, fake_wpn_addon_scope_kobra, fake_wpn_addon_scope_1pn51, wpn_addon_mtk83, fake_wpn_addon_mtk83, fake_wpn_addon_acog, fake_wpn_addon_scope_eotech
+;Флаг, позволяющий для всех предметов реагировать на флаг FRuckDefault. Если флаг установлен, хабар будет подбираться в рюкзак, а не в слот по умолчанию.
+default_to_ruck = true
 
 zoom_enabled				= true						; (on,off)zoom mode (right mouse button)
 
@@ -259,26 +270,27 @@ anim_shoot_gl				= shoot_w_gl		;ходьба/удержание/бег с ГП
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ;HUD offset in zoom mode (to all)
 ;(use ОГСЕ CONSOLE: hud_adjust_mode 0,1,2, then keys WSADQE and P to show current value in console)
-;-лево/+право,-низ/+верх,-к/+от себя
 ;штатный механический прицел
-;zoom_offset			= -0.112840,0.039250,-0.158000
-;-вверх/+вниз zoom_rotate_x		= 0.054800
-;-лево/+право zoom_rotate_y		= 0.043280
-
+;-лево/+право,-низ/+верх,-к/+от себя zoom_offset
+;-вверх/+вниз zoom_rotate_x
+;-лево/+право zoom_rotate_y
 ; тест sto1en
 zoom_offset			= -0.168900,0.068050,-0.247100
 zoom_rotate_x		= 0.043400
 zoom_rotate_y		= 0.030280
-
-zoom_hide_crosshair	= true						;to hide crosshair in zoom 
-
+;штатный механический прицел (второй режим - для оптики)
+second_zoom_offset			= -0.168900,0.068050,-0.247100
+second_zoom_rotate_x		= 0.043400
+second_zoom_rotate_y		= 0.030280
 ; same as above, but for attached grenade launcher for
 ; in NORMAL shoot mode
 ; тест sto1en
 grenade_normal_zoom_offset		= -0.168900,0.068050,-0.247100
 grenade_normal_zoom_rotate_x	= 0.043400
 grenade_normal_zoom_rotate_y	= 0.030280
-
+second_grenade_normal_zoom_offset		= -0.168900,0.068050,-0.247100
+second_grenade_normal_zoom_rotate_x	= 0.043400
+second_grenade_normal_zoom_rotate_y	= 0.030280
 ; same as above, but for attached grenade launcher for
 ; in GRENADE mode
 ; sto1en grenade_zoom_offset			= -0.112860,-0.368469,-0.409998
@@ -286,7 +298,13 @@ grenade_normal_zoom_rotate_y	= 0.030280
 grenade_zoom_offset			= -0.112860,-0.368469,-0.1
 grenade_zoom_rotate_x		= -0.410010
 grenade_zoom_rotate_y		= 0.023930
-
+;режим стрельбы из подствольника (положение д/б одинаковым - у подствола свой прицел)
+second_grenade_zoom_offset			= -0.112860,-0.368469,-0.1
+second_grenade_zoom_rotate_x		= -0.410010
+second_grenade_zoom_rotate_y		= 0.023930
+;-----------------------------------------------------------------------------
+;прячем перекрестие прицела в зуме
+zoom_hide_crosshair	= true						;to hide crosshair in zoom 
 
 ;-----------------------------------------------------------------------------------
 ;ремонт ОГСЕ (перенесено в ***_ex.ltx)
