--- a/gamedata/config/weapons/w_aks74ub_ex.ltx
+++ b/gamedata/config/weapons/w_aks74ub_ex.ltx
@@ -78,7 +78,7 @@ anim_reload_gl				= idle_w_gl
 
 ;-----------------------------------------------------------------------------------
 ;четырёхрядный магазин 60 АК105
-[wpn_aks74ub_buben_hud]:wpn_aks74ub_base_hud
+[wpn_aks74ub_wide_hud]:wpn_aks74ub_base_hud
 anim_idle					= idle_drumm
 anim_idle_aim				= idle_aim_drumm
 anim_reload					= reload_drumm
@@ -164,6 +164,9 @@ zoom_rotation		= 0.038600,0.018480
 [aks74ub_kobra_p]
 scope_name               = wpn_addon_scope_kobra
 scope                    = aks74ub_kobra
+; второй прицел ОГСР не надо сдвигать, а second_ тут не работают..
+disable_second_scope = true
+
 
 ; 1ПН51 (НСПУ-3 "Казуар") х3,46
 [aks74ub_1pn51]
@@ -191,19 +194,29 @@ smoke_particles   		= amik\weapons\smoke_particles\smoke_particles_04
 
 ; ACOG TA31-CH х4
 [aks74ub_acog]
-;тест мех.прицела force_remove_texture = true
+;тест мех.прицела +3D 
+force_remove_texture = true
 bones         = s4
 ;штатный механический прицел ACOG (не настроен)
 ;zoom_offset			= -0.112840,0.031250,-0.158000
 ;zoom_rotation		= 0.064800,0.043280
-
 ; тест sto1en
-zoom_offset			= -0.168800,0.059450,-0.223100
+; zoom_offset			= -0.168800,0.059450,-0.223100
+; zoom_rotation		= 0.043400,0.030280
+;тест 3D
+zoom_offset			= -0.168800,0.020450,-0.223100
 zoom_rotation		= 0.043400,0.030280
 
 [aks74ub_acog_p]
 scope_name               = wpn_addon_acog
 scope                    = aks74ub_acog
+;-через дыру с мушкой
+;-second_zoom_offset			= -0.168800,0.040450,-0.223100
+;-second_zoom_rotate_x		= 0.024400
+;-second_zoom_rotate_y		= 0.030280
+;_второй прицел ОГСР не надо сдвигать, а second_ тут не работают.. 
+disable_second_scope = true
+;_поднимать планку
 
 ; EOTech 552.A65 х1
 [aks74ub_eotech]
@@ -220,6 +233,9 @@ zoom_rotation		= 0.033600,0.024780
 [aks74ub_eotech_p]
 scope_name               = wpn_addon_scope_eotech
 scope                    = aks74ub_eotech
+; второй прицел ОГСР не надо сдвигать, а second_ тут не работают..
+disable_second_scope = true
+
 
 ;-----------------------------------------------------------------------------------
 ; служебные секции описателей магазинов
@@ -258,7 +274,7 @@ inv_grid_x			= 69
 inv_grid_y			= 4
 inv_weight				= 3.2		;АК74 3.2 = 2.7 + ???0.5
 cost					= 5400
-hud                     = wpn_aks74ub_buben_hud
+hud                     = wpn_aks74ub_wide_hud
 
 [aks74ub_nomag]
 [aks74ub_nomag_p]
