--- a/gamedata/config/weapons/w_desert_eagle.ltx
+++ b/gamedata/config/weapons/w_desert_eagle.ltx
@@ -1,9 +1,13 @@
-; Desert Eagle Mark XIX
+; Desert Eagle Mark XIX Большой Бэн
+;
+;\misc\death_generic патроны
+;
+;
 ;---------------------------------------------------
-[wpn_desert_eagle]:identity_immunities,base_wpn_zoom
+[wpn_eagle_m1]:identity_immunities,base_wpn_zoom
 GroupControlSection			= spawn_group
 discovery_dependency 		= 
-$spawn                   	= "weapons\Desert Eagle"					; option for Level Editor
+$spawn             				= "weapons\uniq\wpn_eagle_m1"				; option for Level Editor
 $npc			 			= on				; option for Level Editor
 $prefetch 					= 8
 scheduled            		= off              ; option for ALife Simulator
@@ -11,8 +15,7 @@ cform                    	= skeleton
 class                    	= WP_PM
 min_radius               	= 0
 max_radius               	= 30
-description					= enc_weapons1_wpn-desert-eagle
-
+description					= enc_weapons1_wpn-desert_eagle_desc			; enc_weapons1_wpn-eagle_m1
 ef_main_weapon_type = 0
 ef_weapon_type				= 5
 
@@ -21,11 +24,12 @@ holder_range_modifier	= 0.7
 holder_fov_modifier		= 1.5
 ;-----------------------------------------------------------------------------------
 
-cost					 	= 3500
+cost					 	= 8000
 
 ammo_elapsed		 		= 8
 ammo_mag_size		 		= 8
-ammo_class		 			= ammo_11.43x23_fmj, ammo_11.43x23_hydro
+ammo_class						= ammo_9x39_ap, ammo_9x39_pab9
+
 
 
 hand_dependence		 		= 1
@@ -34,14 +38,14 @@ single_handed				= 1
 slot 				 		= 1		; // primary
 animation_slot		 		= 1		; type of the animation that will be used
 
-inv_name					= wp_desert_eagle
-inv_name_short				= wp_desert_eagle_s
+inv_name					= wpn-desert_eagle		;wpn-eagle_m1
+inv_name_short				= wpn-desert_eagle_s
 inv_weight					= 1.7
 
 inv_grid_width				= 2
 inv_grid_height				= 1
-inv_grid_x					= 14
-inv_grid_y					= 8
+inv_grid_x					= 14		;9 уник
+inv_grid_y					= 8			;22 уник
 
 kill_msg_x					= 194
 kill_msg_y					= 123
@@ -50,7 +54,7 @@ kill_msg_height				= 27
 
 ;-----------------------------------------------------------------------------------
 ;базовая дисперсия
-fire_dispersion_base		= 0.2  ;угол (в градусах) базовой дисперсии оружия (оружия зажатого в тисках)
+fire_dispersion_base		= 0.345 	;угол (в градусах) базовой дисперсии оружия (оружия зажатого в тисках)
 ;control_inertion_factor				= 1.3f
 
 ;отдача
@@ -88,9 +92,9 @@ PDM_crouch_no_acc 			= 1.0
 
 ; ttc
 hit_power           = 0.6
-hit_impulse		 	= 150		;15
+hit_impulse		 	= 150		;150
 hit_type 					= fire_wound
-;hit_rate			= 1.85
+hit_rate			= 1.85
 
 fire_distance       = 50
 bullet_speed		= 430			
@@ -100,12 +104,13 @@ rpm                 		= 200
 use_aim_bullet				= true		;Поддерживается ли первая суппер пуля
 time_to_aim					= 1.0	
 
-silencer_hit_power       	= 0.5
-silencer_hit_impulse	 	= 130
-silencer_fire_distance   	= 50
-silencer_bullet_speed	 	= 250
+silencer_hit_power       	= 0.55
+silencer_hit_impulse	 	= 140		;140
 
-hud                      	= wpn_desert_eagle_hud
+silencer_fire_distance   	= 50
+silencer_bullet_speed	 	= 350
+
+hud                      	= wpn_eagle_m1_hud
 normal                   	= 0, 1, 0
 position                 	= -0.021, -0.09, 0.0
 orientation              	= 0, 0, 0
@@ -148,7 +153,6 @@ silencer_y 					= -17
 
 ;silencer_flame_particles 	= weapons\generic_weapon01
 silencer_smoke_particles 	= weapons\generic_shoot_00
-;snd_silncer_shot			= weapons\pb_shoot, 0.6 
 silencer_light_color		= 0.6,0.5,0.3
 silencer_light_range		= 0.01
 silencer_light_var_color	= 0.05
@@ -158,7 +162,7 @@ silencer_light_time 		= 0.2
 ;-----------------------------------------------------------------------------
 ;-- HUD DESCRIPTION
 ;----------------------------------------------------------------------------- 
-[wpn_desert_eagle_hud]
+[wpn_eagle_m1_hud]
 ;shell_point					= 0.050000,0.050416,-0.202508
 ;fire_point               	= -0.000000,0.039221,-0.142062
 
@@ -200,6 +204,7 @@ zoom_offset			= -0.131900,0.050100,-0.030000
 zoom_rotate_x		= 0.008600
 zoom_rotate_y		= 0.003600
 
-[wpn_desert_eagle_repair]
+
+[wpn_eagle_m1_repair]
 tech_complication = 400
 repair_compatibility = desert_eagle
