--- a/gamedata/config/weapons/w_flame.ltx
+++ b/gamedata/config/weapons/w_flame.ltx
@@ -1,4 +1,5 @@
 ;Огнемет (AMK)
+;Как правило, физика поведения Огнемёта в играх очень условна, почти всегда используются газовые огнемёты, потому что механика жидкости, прилипающей к поверхностям, а потом ещё и горящей, трудно кодится и/или жрёт много ресурсов..
 ;--------------------------------------
 [wpn_flame]:identity_immunities
 GroupControlSection 	    = spawn_group
@@ -44,8 +45,8 @@ inv_weight 					= 3.5
 
 inv_grid_width 				= 5
 inv_grid_height 			= 2
-inv_grid_x 					= 29
-inv_grid_y 					= 22
+inv_grid_x 					= 0			;0		;29 АМК
+inv_grid_y 					= 28		;20
 
 kill_msg_x 					= 0
 kill_msg_y 					= 123
@@ -110,12 +111,15 @@ silencer_bullet_speed	 	= 315
 
 hud 						= wpn_flame_hud ;-- name of the section of the hud
 
-position 					= -0.015,0.15,0.3 ;-- position (offset) and orientation of the weapon in the hands of character
+;position 					= -0.015,0.15,0.3 ;-- position (offset) and orientation of the weapon in the hands of character
+position					= -0.026,-0.1,0.0
 orientation 				= 0,0,0           ;-- (3rd person view)
 
 ;--STRAP PARAMETERS-----------------------------------------------------------------
-strap_position 				= -0.16,0.0,0.15 ;-- position (offset) and orientation of the weapon when it is strapped 1 - вперёд/назад относительно человека 2 - влево/вправо 3 - вверх/вниз
-strap_orientation 		    = -10, -5, 10      ;-- (3rd person view in degrees)
+;strap_position 				= -0.16,0.0,0.15 ;-- position (offset) and orientation of the weapon when it is strapped 1 - вперёд/назад относительно человека 2 - влево/вправо 3 - вверх/вниз
+;strap_orientation 		    = -10, -5, 10      ;-- (3rd person view in degrees)
+strap_position				= -0.26,-0.11,0.15
+strap_orientation			= -15,-9,110
 strap_bone0 				= bip01_spine2
 strap_bone1 				= bip01_spine1
 
@@ -136,48 +140,77 @@ zoom_enabled 				= false ;-- (on,off)zoom mode (right mouse button)
 
 ;------------------------------ O.G.S.E. sound remake -----------------------
 ;--sounds (name of the sound, volume (0.0 - 1.0), delay (sec))
-snd_draw 					= weapons\flame\f_reload
-snd_holster 				= weapons\generic_holster
-snd_shoot 					= weapons\flame\f_shoot
-snd_shoot1 					= weapons\flame\f_shoot1
-snd_shoot2 					= weapons\flame\f_shoot2
-snd_shoot3 					= weapons\flame\f_shoot3
-snd_empty 					= $no_sound ;weapons\gen_empty, 0.5
-snd_reload 					= weapons\flame\f_reload
-snd_shoot_grenade 	        = $no_sound ;weapons\gen_grenshoot
-snd_reload_grenade 	        = $no_sound ;weapons\gen_grenload, 1.0, 0.8
-snd_switch 					= $no_sound ;weapons\groza_switch, 1.0, 0.5
+;snd_draw 					= weapons\flame\f_reload
+;snd_holster 				= weapons\generic_holster
+;snd_shoot 					= weapons\flame\f_shoot
+;snd_shoot1 					= weapons\flame\f_shoot1
+;snd_shoot2 					= weapons\flame\f_shoot2
+;snd_shoot3 					= weapons\flame\f_shoot3
+;snd_empty 					= $no_sound ;weapons\gen_empty, 0.5
+;snd_reload 					= weapons\flame\f_reload
+;snd_shoot_grenade 	        = $no_sound ;weapons\gen_grenshoot
+;snd_reload_grenade 	        = $no_sound ;weapons\gen_grenload, 1.0, 0.8
+;snd_switch 					= $no_sound ;weapons\groza_switch, 1.0, 0.5
 ;-----------------------------------------------------------------------------
+snd_draw					= weapons\flamer\draw
+snd_holster					= weapons\flamer\holster
+snd_shoot					= weapons\flamer\shoot
+snd_shoot1					= weapons\flamer\shoot_2
+snd_shoot2					= weapons\flamer\shoot_3
+snd_shoot3					= weapons\flamer\shoot_4
+snd_empty 					= $no_sound 
+snd_reload 					= weapons\flamer\reload, 0.7
+snd_shoot_grenade 	        = $no_sound 
+snd_reload_grenade 	        = $no_sound 
+snd_switch 					= $no_sound
+
 ;-----------------------------------------------------------------------------
 ;-- HUD DESCRIPTION
 ;-----------------------------------------------------------------------------
 [wpn_flame_hud]
 
-shell_point 				= 10.15, 0.0, -0.05
-shell_dir 					= -0.01, 1.0, 0.0
+;shell_point 				= 10.15, 0.0, -0.05
+;shell_dir 					= -0.01, 1.0, 0.0
+;
+;fire_point 					= 1.35,-0.08,0.03
+;fire_point2 				= 0.0, 0.00, 0.0
+;fire_bone 					= wpn_flame
+;
+;orientation 				= 0.0, 0.0, 0.0
+;position 					= -0.12, -0.17, 0.07
 
-fire_point 					= 1.35,-0.08,0.03
-fire_point2 				= 0.0, 0.00, 0.0
-fire_bone 					= wpn_flame
+shell_point                	= 0.017,0.054,0.17
+shell_dir               	= 0.0, 1.0, 0.0
+shell_bone                	= wpn_body
 
-orientation 				= 0.0, 0.0, 0.0
-position 					= -0.12, -0.17, 0.07
+fire_point				  	= 0.0,0.015569,0.813101
+fire_bone                 	= wpn_body
+fire_point2              	= 0.0,0.0,0.0
+fire_bone2               	= wpn_body
+
+position					= -0.090000,-0.190000,0.130000
+orientation					= -0.420000,-0.230000,0.000000
+
 visual 						= weapons\flamethrower\wpn_flame_hud.ogf
 
 ;-- animation names
 anim_idle 				    = idle
-anim_idle_aim 		        = idle
-anim_reload 			    = empty
+anim_idle_aim 		        = idle_aim		;idle
+anim_reload 			    = reload		;empty
 anim_draw 				    = draw
 anim_holster 			    = holster
 anim_shoot 				    = shoot
-anim_idle_sprint 	        = sprint
+anim_idle_sprint 	        = idle_sprint	;sprint
 
 ;--HUD offset in zoom mode (to all)
 ;--(use CONSOLE: hud_adjust_mode 0,1,2, then keys WSADQE and P to show current value in console)
-zoom_offset 				= -0.137700,0.033800,-0.115100
-zoom_rotate_x 				= -0.005000
-zoom_rotate_y 				= 0.017900
+;zoom_offset 				= -0.137700,0.033800,-0.115100
+;zoom_rotate_x 				= -0.005000
+;zoom_rotate_y 				= 0.017900
+
+zoom_offset					= 0.080000,-0.080000,0.000000
+zoom_rotate_x				= 0.000000
+zoom_rotate_y				= 0.000000
 
 zoom_hide_crosshair	        = true ;--to hide crosshair in zoom
 
