--- a/gamedata/config/weapons/w_groza.ltx
+++ b/gamedata/config/weapons/w_groza.ltx
@@ -1,5 +1,9 @@
-; —трелоково-гранатометный комплекс ќ÷-14-4 "√роза"
-;--------------------------------------
+;Единственный приемлемый вариант использования комплекса - 40мм гранатомет с и интегрированным автоматом для самообороны, учитывая и мизерный носимый боекомплект, и небольшую дальность стрельбы из-за применяемого патрона 9х39мм. Допустимый разброс попаданий у Грозы - 20см. Напомню, что у автоматов Калашникова, автоматов АС и 9А91 - аналогичный критерий - 15см.
+;- в варианте ОЦ-14-4А-02 – псевдо малогабаритный автомат с ужасным балансом. 
+;- в варианте ОЦ-14-14А-03 – штурмовой вариант специальный с глушителем и оптическим прицелом. По всем характеристикам уступает АС и 9А91. Сам оптический прицел ПО 4х34 - отвратительного качества. 
+;Вот такое вот оружие сталкера…
+
+;--------------------------------------ОЦ-14-4А
 [wpn_groza]:identity_immunities,base_wpn_zoom
 GroupControlSection	= spawn_group
 discovery_dependency = 
@@ -11,7 +15,7 @@ cform                   = skeleton
 class                   = WP_GROZA
 min_radius              = 0
 max_radius              = 100
-description				= enc_weapons1_wpn-groza
+description				= enc_weapons1_wpn-groza9
 
 ef_main_weapon_type		= 2
 ef_weapon_type			= 6
@@ -27,7 +31,7 @@ weapon_class			= assault_rifle
 ammo_elapsed			= 20
 ammo_mag_size		 	= 20
 ammo_class		 		= ammo_9x39_pab9, ammo_9x39_ap
-fire_modes			    = 1, 3, -1
+fire_modes			    = 1, 0, -1
 launch_speed			= 0
 
 grenade_class			= ammo_vog-25, ammo_vog-25p
@@ -38,14 +42,21 @@ single_handed			= 0
 slot 					= 2		; // secondary
 animation_slot			= 8		; type of the animation that will be used
 
-inv_name	         	= wpn-groza
-inv_name_short		 	= wpn-groza
+inv_name	         	= wpn-groza9
+inv_name_short		 	= wpn-groza9_s
 inv_weight		        = 3.8
 
 inv_grid_width			= 4
 inv_grid_height			= 2
-inv_grid_x				= 0
-inv_grid_y				= 14
+;-ПЫС
+;inv_grid_x				= 0
+;inv_grid_y				= 14	9
+;-ПЫС-Уник
+;inv_grid_x				= 5
+;inv_grid_y				= 29		;5
+;+k01jan
+inv_grid_x			= 75
+inv_grid_y			= 35	;9
 
 kill_msg_x			= 67
 kill_msg_y			= 123
@@ -53,25 +64,26 @@ kill_msg_width		= 64
 kill_msg_height		= 30
 
 ;-----------------------------------------------------------------------------------
-;базова€ дисперси€
-fire_dispersion_base		= 0.18	;угол (в градусах) базовой дисперсии оружи€ (оружи€ зажатого в тисках)
+;базова€ дисперсия
+fire_dispersion_base		= 0.14		;АС 0.12 ;ЧИТ-ВСС 0.1  ;угол (в градусах) базовой дисперсии оружи€ (оружи€ зажатого в тисках)
 control_inertion_factor		= 1.05f
-disp_rate 			= 1.7
+disp_rate 			= 1.8		;1.7
 
 ;отдача
-cam_relax_speed         	= 5.2;0.3	;скорость возврата в исходное положение
-;cam_relax_speed_ai        	= 120.75
-cam_dispersion          	= 0.3	;увеличени€ угла (в градусах) с каждым выстрелом
-cam_dispersion_inc		= 0.12	;увеличениe cam_dispersion с каждым выстрелом
-cam_dispertion_frac		= 0.75	;ствол будет подыматьс€ на cam_dispersion*cam_dispertion_frac +- cam_dispersion*(1-cam_dispertion_frac)
-cam_max_angle			= 8.5	;максимальный угол отдачи
-cam_max_angle_horz		= 9.0	;(degree) maximum shot horizontal degree 
-cam_step_angle_horz		= 0.85	;(degree) size of step camera moved in horizontal position while shooting
+cam_relax_speed         = 5.2	;0.3	;ЧИТ-ВСС 4.75	;скорость возврата в исходное положение
+cam_relax_speed_ai      = 120.75
+cam_dispersion          = 0.125	;0.3	;ЧИТ-ВСС 0.125 	;увеличени€ угла (в градусах) с каждым выстрелом
+cam_dispersion_inc		= 0.2	;0.12	;ЧИТ-ВСС 0.2 	;увеличениe cam_dispersion с каждым выстрелом
+cam_dispertion_frac		= 1.0	;0.75	;ЧИТ-ВСС 1.0	;ствол будет подыматьс€ на cam_dispersion*cam_dispertion_frac +- cam_dispersion*(1-cam_dispertion_frac)
+cam_max_angle			= 6.0	;8.5	;ЧИТ-ВСС 3.0	;максимальный угол отдачи
+cam_max_angle_horz		= 9.0			;ЧИТ-ВСС 1.0	;(degree) maximum shot horizontal degree 
+cam_step_angle_horz		= 0.4	;0.85	;ЧИТ-ВСС 4.0	;(degree) size of step camera moved in horizontal position while shooting
 
-fire_dispersion_condition_factor = 4.5	;увеличение дисперсии в процентах при максимальном износе 
-misfire_probability 		= 0.002	;веро€тность осечки при максимальном износе 
-misfire_condition_k			= 0.05
-condition_shot_dec 			= 0.0002 ;увеличение износа при каждом выстреле
+fire_dispersion_condition_factor = 4.5	;ЧИТ-ВСС 4.2	;увеличение дисперсии в процентах при максимальном износе. !!!Не в градусах - это множитель. 5 - это 5000% разброса при максимальном износе.  Для пистолетов рекомендуется 3 - 4, автоматов 2 - 2.5, снайперок 1 - 1.5
+misfire_probability 		= 0.0017	;ЧИТ-ВСС 0.002	;веро€тность осечки при максимальном износе 
+misfire_condition_k			= 0.05		; коэффициент 0.05 - проще не трогать! Может понабиться только для оружия с небольшим настрелом типа ВСС.
+condition_shot_dec			= 0.0002	;ЧИТ-ВСС 0.0003 ;увеличение износа при каждом выстреле
+
 ;-----------------------------------------------------------------------------------
 
 direction               = 0, 0, 1
@@ -85,7 +97,8 @@ grenade_flame_particles = weapons\generic_weapon01
 
 shell_point				= 0.0, 0.194, 0.04
 shell_dir				= 0.0, 0.0, 0.4
-shell_particles			= weapons\generic_shells
+shell_particles	 			= amik\weapons\9x39_shells_r
+
 rpm_empty_click 		= 200
 
 PDM_disp_base 			= 1.2
@@ -95,14 +108,14 @@ PDM_crouch	 		= 1.0
 PDM_crouch_no_acc 		= 1.0
 
 ; ttc
-hit_power           = 0.7
+hit_power           = 0.8	;ќ√—≈ 0.7
 hit_impulse		 	= 25
 hit_type 			= fire_wound
 hit_rate			= 1.95
 
-fire_distance           	= 250
-bullet_speed			= 380	;начальна€ скорость пули
-rpm                    		= 750
+fire_distance		= 200	;ќ√—≈ 250
+bullet_speed		= 200	;190 ќ√—≈ 380	;начальна€ скорость пули
+rpm					= 750
 
 use_aim_bullet			= false		;ѕоддерживаетс€ ли перва€ суппер пул€
 time_to_aim					= 1.0	
@@ -110,10 +123,10 @@ time_to_aim					= 1.0
 grenade_vel			= 76
 ; end ttc
 
-silencer_hit_power       	= 0.63
+silencer_hit_power       	= 0.8	;ќ√—≈ 0.63
 silencer_hit_impulse	 	= 25
-silencer_fire_distance   	= 200
-silencer_bullet_speed	 	= 290
+silencer_fire_distance   	= 200	;ќ√—≈ 200
+silencer_bullet_speed	 	= 190	;ќ√—≈ 290
 
 hud                     = wpn_groza_hud
 normal                  = 0, 1, 0
@@ -138,14 +151,16 @@ light_time 		 		= 0.2
 
 ;addons
 scope_status			= 2
-silencer_status			= 2
+silencer_status			= 0
 grenade_launcher_status	= 1
 
 zoom_enabled			= true
 
-scope_name 					= wpn_addon_scope			; section name for the attachable scope
-scope_x 					= 63						; offset in inventory icon
-scope_y 					= -1
+scope_name 					= wpn_zf4
+scope_x 			= 66
+scope_y 			= -9
+
+
 silencer_name  				= wpn_addon_silencer		; section name for the attachable silencer
 silencer_x 					= 180						; offset in inventory icon
 silencer_y 					= 16				
@@ -161,18 +176,33 @@ silencer_light_time 		= 0.2
 
 ;------------------------------ S.T.A.L.K.E.R`s sound remake -----------------
 ;звуки
-snd_draw			= weapons\groza\groza_draw
-snd_holster			= weapons\generic_avtomat_holster
-snd_shoot			= weapons\groza\groza_shoot
-snd_shoot1			= weapons\groza\groza_shoot1
-snd_shoot2			= weapons\groza\groza_shoot2
-snd_shoot3			= weapons\groza\groza_shoot3
-snd_empty			= weapons\abakan\abakan_empty, 0.7
-snd_reload			= weapons\groza\groza_reload, 0.7, 0.45
-snd_shoot_grenade	= weapons\gp30\GP30_grenshoot
-snd_reload_grenade	= weapons\gp30\gp30_grenload, 1.0, 1.3
-snd_switch			= weapons\groza\groza_switch, 1.0, 0.45
-snd_silncer_shot	= weapons\groza\groza_shoot_sil 
+;snd_draw			= weapons\groza\groza_draw
+;snd_holster			= weapons\generic_avtomat_holster
+;snd_shoot			= weapons\groza\groza_shoot
+;snd_shoot1			= weapons\groza\groza_shoot1
+;snd_shoot2			= weapons\groza\groza_shoot2
+;snd_shoot3			= weapons\groza\groza_shoot3
+;snd_empty			= weapons\abakan\abakan_empty, 0.7
+;snd_reload			= weapons\groza\groza_reload, 0.7, 0.45
+;snd_shoot_grenade	= weapons\gp30\GP30_grenshoot
+;snd_reload_grenade	= weapons\gp30\gp30_grenload, 1.0, 1.3
+;snd_switch			= weapons\groza\groza_switch, 1.0, 0.45
+;snd_silncer_shot	= weapons\groza\groza_shoot_sil 
+
+;;;;;;;;;;;;;;;;;;;SWMT sounds;;;;;;;;;;;;;;;;;;;;;
+snd_draw				= weapons\groza\draw
+snd_holster				= weapons\groza\holster
+snd_shoot				= weapons\groza\groza_shoot				;groza1_shoot1
+snd_shoot1				= weapons\groza\groza_shoot1			;groza1_shoot2
+snd_shoot2				= weapons\groza\groza_shoot2			;groza1_shoot1
+snd_shoot3				= weapons\groza\groza_shoot3			;groza1_shoot2
+snd_empty				= weapons\groza\ak_empty, 0.7
+snd_reload				= weapons\groza\groza_reload			;groza1_reload
+------------------------------------------------------------------------
+snd_shoot_grenade		= weapons\groza\gp25_shot
+snd_reload_grenade		= weapons\groza\grenload 
+snd_switch				= weapons\groza\switch_groza
+snd_silncer_shot		= weapons\groza\groza_shoot_sil 
 ;-----------------------------------------------------------------------------
 
 ;-----------------------------------------------------------------------------
@@ -182,54 +212,61 @@ snd_silncer_shot	= weapons\groza\groza_shoot_sil
 
 allow_inertion		= true
  
-shell_point 		= -0.25, 0.0, 0.05
-;shell_point		= -0.15, -0.03, 0.05
+shell_point 		= -0.04, 0.34, 0.06 		;первое - с минусом вправо; второе - увеличение-назад; третье - увеличение вниз.
 shell_dir		 	= 0.0, 1.0, 0.0
 
-fire_point			= -0.020000, 0.000000, 0.060000
+fire_point			= -0.000000, -0.0300000, -0.014000    	;первое - увеличение с минусом вправо; второе вперед-назад, увеличение c "-" вперед ;третье - вверх-вниз увеличение с минусом вверх
+fire_point2		= -0.000000, 0.07000000, 0.070000    	;первое - ?; второе вперед-назад, увеличение назад ;третье - вверх-вниз увеличение с минусом вверх
+grenade_bone 		= wpn_grenade
 fire_bone 			= wpn_body
 
-orientation 		= 2, 0, 0
-position			= 0.0, -0.07, -0.02
+orientation             	= 2, 5, 0
+position                	= 0.11, -0.030, -0.05
+
 visual 				= weapons\groza\wpn_groza_hud.ogf
 
-grenade_bone 		= grenade_0
-
-anim_idle			= idle
-anim_idle_aim		= idle
-anim_reload			= reload
-anim_draw			= draw
+anim_idle		= idle
+anim_idle_aim		= idle_aim
+anim_reload		= reload
+anim_draw		= draw
 anim_holster		= holster
-anim_shoot			= shoot
-anim_idle_sprint	= idle_sprint
+anim_shoot		= shoot
+;anim_shoot		= shoot_g1gp				;ТКБ-0239 "Гроза-1" 7.62x39
+anim_idle_sprint		= idle_sprint
 
-anim_idle_g			= idle_g
-anim_idle_g_aim 	= idle_g_aim
-anim_reload_g		= reload_g
-anim_shoot_g		= shoot_g
-anim_switch_grenade_on		= switch_g
-anim_switch_grenade_off		= switch
-anim_draw_g			= draw
+anim_idle_g		= idle_grenade
+anim_reload_g		= reload_grenade
+anim_shoot_g		= shoot_grenade
+anim_switch_grenade_on	= switch_on
+anim_switch_grenade_off	= switch_off
+anim_draw_g		= draw
 anim_holster_g		= holster
 
-; attached grenade launcher [NORMAL fire mode]
 anim_idle_gl		= idle
-anim_idle_gl_aim 	= idle_aim
 anim_reload_gl		= reload
 anim_draw_gl		= draw
 anim_holster_gl		= holster
 anim_shoot_gl		= shoot
+;anim_shoot_gl		= shoot_g1gp			;ТКБ-0239 "Гроза-1" 7.62x39
+anim_idle_g_aim         	= idle_grenade_aim
+anim_idle_gl_aim        	= idle_aim
 ;-----------------------------------------------------------------------------
 
 ;смещени€ HUD дл€ режима приближени€
-zoom_offset			= -0.168200,0.0395,-0.08
-zoom_rotate_x		= 0.0157
-zoom_rotate_y		= 0.071900
+;zoom_offset			= -0.168200,0.0395,-0.08
+;zoom_rotate_x		= 0.0157
+;zoom_rotate_y		= 0.071900
+zoom_offset			= -0.107140,0.018800,-0.196510
+zoom_rotate_x			= 0.075300
+zoom_rotate_y			= 0.033580
 
 ;тоже самое, но дл€ подствольника
-grenade_zoom_offset	= -0.157,-0.48,0.000000 ;-0.144200,-0.538399,0.000000
-grenade_zoom_rotate_x	= -0.660698
-grenade_zoom_rotate_y	= 0.071900 ;0.069400
+;grenade_zoom_offset	= -0.157,-0.48,0.000000 ;-0.144200,-0.538399,0.000000
+;grenade_zoom_rotate_x	= -0.660698
+;grenade_zoom_rotate_y	= 0.071900 ;0.069400
+grenade_zoom_offset		= -0.097120,-0.064630,0.077490
+grenade_zoom_rotate_x		= -0.044100
+grenade_zoom_rotate_y		= 0.019000
 ;-----------------------------------------------------------------------------
 
 ;пр€чем перекрестие прицела в зуме
@@ -244,28 +281,40 @@ tech_complication = 600
 repair_compatibility = groza
 
 ;--------------------------------------
-;√роза генерала ¬оронина
+;Гроза генерала Воронина (ТКБ-0239/ОЦ-14-1А «Гроза-1»)
 ;--------------------------------------
 [wpn_groza_m1]:wpn_groza	
 $spawn             	= "weapons\uniq\wpn_groza_m1"	
-description			= enc_weapons1_wpn-groza_m1
-inv_name	        = wpn-groza_m1
-inv_name_short		= wpn-groza_m1
-ammo_class			= ammo_5.45x39_fmj, ammo_5.45x39_ap
+description			= enc_weapons1_wpn-groza7
+inv_name	        = wpn-groza7
+inv_name_short		= wpn-groza7_s
+
+ammo_class			= ammo_7.62x39_fmj, ammo_7.62x39_ap
 ammo_elapsed		= 30
 ammo_mag_size		= 30
+
+fire_dispersion_base		= 0.17
+
+hit_power                	= 0.72		; size of damage by bullet
+hit_impulse		 			= 25
+silencer_hit_power       	= 0.63
+silencer_hit_impulse	 	= 25
+
+shell_particles				= amik\weapons\7_62x39\7_62x39_r_02
+
 condition_shot_dec 	= 0.0001
 cost				= 9000
 
-inv_grid_x			= 5
-inv_grid_y			= 29
+inv_grid_y			= 33	;7
+;inv_grid_y			= 31	;0
+;inv_grid_y			= 29	;5
 
-scope_x 			= 66
-scope_y 			= -9
+;+scope_x 			= 66
+;+scope_y 			= -9
 
-silencer_name  		= wpn_addon_sil_545_tgp-a
-silencer_x 			= 165
-silencer_y 			= 15
+;silencer_name  		= wpn_addon_sil_545_tgp-a
+;silencer_x 			= 165
+;silencer_y 			= 15
 
 ;------------------------------ O.G.S.E. sound remake -----------------------
 snd_shoot		    = weapons\groza\groza_m1_shoot
@@ -277,9 +326,14 @@ snd_silncer_shot	= weapons\groza\groza_m1_shoot_sil
 hud                 = wpn_groza_m1_hud
 
 visual              = weapons\groza\wpn_groza_m1.ogf
+;visual              = weapons\groza\wpn_groza.ogf
 
 [wpn_groza_m1_hud]:wpn_groza_hud
+;visual 				= weapons\groza\wpn_groza_hud.ogf
 visual 				= weapons\groza\wpn_groza_m1_hud.ogf
 [wpn_groza_m1_repair]
 tech_complication = 1000
 repair_compatibility = groza
+
+[wpn_groza_arena]:wpn_groza;
+$spawn             		= "weapons\arena\wpn_groza_arena"
