--- a/gamedata/config/weapons/w_mac10.ltx
+++ b/gamedata/config/weapons/w_mac10.ltx
@@ -1,4 +1,5 @@
-; пистолет-пулемёт Ingram MAC-10
+;Ingram MAC M10 (Military Armament Corporation Model 10) калибра .45 ACP (11,43х23 мм).
+
 [wpn_mac10]:identity_immunities,base_wpn_zoom
 GroupControlSection		= spawn_group
 discovery_dependency 		= 
@@ -10,7 +11,7 @@ cform                    	= skeleton
 class                    	= WP_LR300
 min_radius               	= 0
 max_radius                  = 50
-description			        = enc_weapons_wpn-mac10
+description			        = enc_weapons1_wpn-ingram
 														
 ef_main_weapon_type		= 2
 ef_weapon_type			= 6
@@ -24,8 +25,8 @@ cost				= 3400
 
 ammo_elapsed		= 30
 ammo_mag_size		= 30
-ammo_class		 	= ammo_11.43x23_fmj, ammo_11.43x23_hydro 
-fire_modes			= 1, 2, 3, -1
+ammo_class					= ammo_11.43x23_fmj, ammo_11.43x23_hydro
+fire_modes					= 1, 0, -1
 weapon_class		= assault_rifle
 
 hand_dependence		= 1
@@ -34,14 +35,14 @@ single_handed		= 1
 slot 			 	= 1
 animation_slot		= 1			; type of the animation that will be used
 
-inv_name			= wpn_mac10
-inv_name_short		= wpn_mac10
+inv_name			= wpn-ingram
+inv_name_short		= wpn-ingram_s
 inv_weight			= 2.85
 
-inv_grid_width		= 2
+inv_grid_width		= 3
 inv_grid_height		= 2
-inv_grid_x			= 29
-inv_grid_y			= 11
+inv_grid_x					= 74
+inv_grid_y					= 20
 
 kill_msg_x			= 134
 kill_msg_y			= 177
@@ -50,7 +51,7 @@ kill_msg_height			= 25
 
 ;-----------------------------------------------------------------------------------
 ;базовая дисперсия
-fire_dispersion_base		= 0.25	 	;угол (в градусах) базовой дисперсии оружия (оружия зажатого в тисках)
+fire_dispersion_base		= 0.22	 	;0.17 угол (в градусах) базовой дисперсии оружия (оружия зажатого в тисках)
 control_inertion_factor		= 1.17f
 
 ;отдача
@@ -72,14 +73,20 @@ condition_shot_dec 		= 0.0002 	;увеличение износа при каждом выстреле
 direction                	= 0, 0, 1
 fire_point               	= 0.0, 0.165, 0.20
 
-flame_particles		   	= weapons\generic_weapon03
-smoke_particles		   	= weapons\generic_shoot_00
+flame_particles				= amik\weapons\flame_particles\flame_particles_04
+smoke_particles				= amik\weapons\smoke_particles\smoke_particles_02
 
-shell_point		 	= 0.0, 0.188, 0.082
-shell_dir		 	= 0.0, 1.0, 0.0
-shell_particles	 		= weapons\generic_shells
+shell_point		 			= 0.0, 0.188, 0.082
+shell_dir		 			= 0.0, 1.0, 0.0
+shell_particles	 			= amik\weapons\45_shells_r
 
 rpm_empty_click 	 	= 200
+
+;PDM_disp_base 				= 3.0
+;PDM_disp_vel_factor 		= 2.6
+;PDM_disp_accel_factor 		= 2.6
+;PDM_crouch	 				= 1.0
+;PDM_crouch_no_acc 			= 1.0
 
 PDM_disp_base 			= 1.3
 PDM_disp_vel_factor 		= 0.6
@@ -103,7 +110,7 @@ time_to_aim			= 1.0
 
 silencer_hit_power       	= 0.47
 silencer_hit_impulse	 	= 15
-silencer_fire_distance   	= 100
+silencer_fire_distance   	= 130
 silencer_bullet_speed	 	= 20
 
 hud                      	= wpn_mac10_hud
@@ -112,13 +119,12 @@ position                 	= -0.021, -0.13, 0.0
 orientation              	= 0, 0, 0
 
 ;--STRAP PARAMETERS-----------------------------------------------------------------
-; под мишкой
-strap_position      = 0.05,-0.2,-0.11 	; position (offset) and orientation of the weapon when it is strapped
-strap_orientation   = -15,9,-80		; (3rd person view in degrees)
-strap_bone0			= bip01_spine1
-strap_bone1			= bip01_spine
+strap_position      		= 0.05,-0.2,-0.11 	
+strap_orientation   		= -15,9,-80		
+strap_bone0					= bip01_spine1
+strap_bone1					= bip01_spine
 
-visual              = weapons\mac10\wpn_mac10.ogf
+visual 						= weapons\mac10\wpn_mac10.ogf
 
 light_color		 	= 0.6,0.5,0.3
 light_range		 	= 4.0
@@ -127,8 +133,8 @@ light_var_range		= 0.5
 light_time 		 	= 0.2
 
 ;addons
-scope_status		= 0
-silencer_status		= 2
+scope_status				= 0
+silencer_status				= 2
 grenade_launcher_status		= 0
 
 zoom_enabled		= true
@@ -137,9 +143,9 @@ zoom_enabled		= true
 ;; silencer
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
-silencer_name  		= wpn_addon_sil_1143_p	; section name for the attachable silencer
-silencer_x 			= 74			; offset in inventory icon
-silencer_y 			= 10		
+silencer_name  				= wpn_addon_sil_1143_p	
+silencer_x 					= 96
+silencer_y 					= 5		;4
 
 ;params when silencer is attached 
 ;similar to corresponding params without prefix silencer_
@@ -152,75 +158,63 @@ silencer_light_var_color	= 0.05
 silencer_light_var_range	= 0.5
 silencer_light_time 		= 0.2
 
+
 ;------------------------------ O.G.S.E. sound remake -----------------------
 ;звуки
-snd_draw			= weapons\usp_draw, 0.5
-snd_holster			= weapons\generic_holster, 0.5 
-snd_shoot			= weapons\generic_45_shot, 0.9
-snd_empty			= weapons\gen_empty, 0.5
-snd_reload			= weapons\mac_reload, 0.7, 0.3
-snd_close			= weapons\generic_close, 0.5
-snd_silncer_shot	= weapons\t_vintorez_shot, 0.6
+;snd_draw			= weapons\usp_draw, 0.5
+;snd_holster		= weapons\generic_holster, 0.5 
+;snd_shoot			= weapons\generic_45_shot, 0.9
+;snd_empty			= weapons\gen_empty, 0.5
+;snd_reload			= weapons\mac_reload, 0.7, 0.3
+;snd_close			= weapons\generic_close, 0.5
+;snd_silncer_shot	= weapons\mac10_m1_shoot, 0.9
 ;-----------------------------------------------------------------------------
+
+snd_draw					= weapons\uzi\draw, 0.5
+snd_holster					= weapons\uzi\holster, 0.5 
+snd_shoot					= weapons\generic_45_shot, 0.9	;uzi\mac10_shoot, 0.9
+snd_empty					= weapons\uzi\empty, 0.5
+snd_reload					= weapons\uzi\reload, 0.7, 0.3
+snd_close					= weapons\uzi\draw, 0.5
+snd_silncer_shot			= weapons\uzi\shoot_sill
 
 ;-----------------------------------------------------------------------------
 ;-- HUD DESCRIPTION
 ;-----------------------------------------------------------------------------  
 [wpn_mac10_hud]
+allow_inertion				= true
 
-shell_point			= 0.0,0.0,0.0
-fire_point			= -0.3,0.0,0.02
-fire_bone           = wpn_body
-orientation         = 0,0,0
-position            = 0,-0.02,0
-visual              = weapons\mac10\wpn_mac10_hud.ogf
+shell_point					= 0.150000,-0.100000,0.100000
+fire_point					= 0.290000,-0.250000,0.910000
+fire_bone           		= muzzle
 
-anim_holster		= holster
-anim_idle			= idle
-anim_empty			= empty
-anim_reload			= reload_full
-anim_reload_empty		= reload
-anim_draw			= draw
-anim_draw_empty			= draw_empty
-anim_shoot			= shoot
-anim_shot_last			= shoot_last
-anim_close			= holster
-anim_idle_aim			= idle_aim
-anim_idle_sprint		= idle_sprint
+position   					= 0.11802, -0.03099, 0.16092
+orientation   				= 0, 0, 0
+
+visual                  	= weapons\mac10\wpn_mac10_hud.ogf
+
+anim_idle					= idle
+anim_idle_aim				= idle_aim
+anim_reload					= reload
+anim_draw					= draw
+anim_holster				= holster
+anim_shoot					= shoot
+anim_idle_sprint			= idle_sprint
 
 ;смещения HUD для режима приближения
-zoom_offset			= -0.159,0.065,-0.01
-zoom_rotate_x			= 0.0
-zoom_rotate_y			= 0.0
+zoom_offset					= -0.118020,0.020990,-0.160920
+zoom_rotate_x				= -0.023000
+zoom_rotate_y				= 0.001000
+
+;прячем перекрестие прицела в зуме
+zoom_hide_crosshair			= true
+
+;время поворота HUD (сек)
+zoom_rotate_time			= 0.3
+rotate_time					= 0.3
+
 
 [wpn_mac10_repair]
 tech_complication = 300
 repair_compatibility = mac10
 
-[wpn_mac10_m1]:wpn_mac10
-$spawn                   	= "weapons\mac10_m1"	; option for Level Editor
-description			        = enc_weapons_wpn-mac10
-
-cost				= 3400
-
-ammo_mag_size		 	= 32
-
-inv_name			= wpn_mac10_m1
-inv_name_short		= wpn_mac10_m1
-inv_weight			= 3.1
-
-inv_grid_width			= 3
-inv_grid_height			= 2
-inv_grid_x			= 29
-inv_grid_y			= 13
-
-silencer_status			= 1
-flame_particles		   	= 
-
-;------------------------------ O.G.S.E. sound remake -----------------------
-snd_shoot			= weapons\mac10_m1_shoot, 0.9
-;-----------------------------------------------------------------------------
-
-[wpn_mac10_m1_repair]
-tech_complication = 700
-repair_compatibility = mac10
