--- a/gamedata/config/weapons/w_pb.ltx
+++ b/gamedata/config/weapons/w_pb.ltx
@@ -1,145 +1,155 @@
-; АПБ
-;--------------------------------------
+; Пистолет бесшумный - ПБ (6П9)
+;-(правлено SR)-------------------------------------
+; калибр 				9х18 мм
+; длина ствола 				245 мм (ствол 105 мм, насадка 140 мм)
+; магазин				8
+; вес без магазина			0.97
+; эффективная дальность стрельбы	25 м
+; прицельная дальность			---
+; дульная скорость пули			290 м/с
+; темп стрельбы				30 в/с
+;---------------------------------------------------
 [wpn_pb]:identity_immunities,base_wpn_zoom
 GroupControlSection			= spawn_group
-discovery_dependency		= 
-$spawn          			= "weapons\pb"					; option for Level Editor
-$npc						= on		; option for Level Editor
+discovery_dependency	 	= 
+$spawn          			= "weapons\pb"					
+$npc			 		= on		; option for Level Editor
 $prefetch 					= 8
-scheduled       	     	= off              ; option for ALife Simulator
-cform               		= skeleton
-class               		= WP_LR300			
-min_radius          		= 30				
-max_radius          		= 100				
-description					= enc_weapons1_wpn-oz33_desc	;enc_weapons1_wpn-apsb_desc
+scheduled            	= off              ; option for ALife Simulator
+cform           	        = skeleton
+class           	        = WP_PM
+min_radius      	        = 0
+max_radius      	        = 20
+description					= enc_weapons1_wpn-pb
+
+ef_main_weapon_type		= 0
+ef_weapon_type				= 5
+
+;-----------------------------------------------------------------------------------
+holder_range_modifier	= 0.7
+holder_fov_modifier		= 1.5
+;-----------------------------------------------------------------------------------
+
+cost						= 1800
+
+ammo_elapsed			 	= 8
+
+ammo_mag_size			 	= 8
+ammo_class			 		= ammo_9x18_fmj, ammo_9x18_pmm
 	
-ef_main_weapon_type			= 2
-ef_weapon_type				= 6
 
-holder_range_modifier		= 1.0		
-holder_fov_modifier			= 0.7            
+hand_dependence			 	= 1
 
-cost						= 2400				
-weapon_class				= assault_rifle		
+slot 				 		= 1
+animation_slot		 	= 1		; type of the animation that will be used
+single_handed				= 1
+
+inv_name					= wpn-pb
+inv_name_short				= wpn-pb_s
+inv_weight					= 0.97
 	
-ammo_limit					= 210				
-ammo_elapsed				= 30				
-	
-ammo_mag_size				= 27				
-fire_modes					= 1, -1
-
-ammo_class					= ammo_9x18_fmj, ammo_9x18_pmm   
-
-hand_dependence				= 1									
-single_handed				= 0
-	
-slot 						= 1									
-animation_slot				= 1									
-
-inv_name	        		= wpn-oz33			;wpn-apsb						
-inv_name_short				= wpn-oz33_s		;wpn-apsb_s
-inv_weight					= 2.7								
-
-inv_grid_width     			= 2
-inv_grid_height    			= 1
-inv_grid_x					= 73
+inv_grid_width				= 2
+inv_grid_height				= 1
+inv_grid_x					= 15
 inv_grid_y					= 6
 
-kill_msg_x					= 0
-kill_msg_y					= 123
-kill_msg_width				= 69
-kill_msg_height				= 30
+kill_msg_x					= 80
+kill_msg_y					= 154
+kill_msg_width				= 49
+kill_msg_height				= 22
 
-fire_dispersion_base				= 0.25		
-control_inertion_factor				= 1.09f
+;-----------------------------------------------------------------------------------
+;базовая дисперсия
+fire_dispersion_base		= 0.26 	;0.27 угол (в градусах) базовой дисперсии оружия (оружия зажатого в тисках)
+;control_inertion_factor		= 1.10f
+disp_rate 			= 1.85
 
-cam_relax_speed         			= 6
-cam_dispersion          			= 0.3		
-cam_dispersion_inc					= 0.20
-cam_dispertion_frac					= 0.9		
-cam_max_angle						= 9.0		
-cam_max_angle_horz					= 30.0		
-cam_step_angle_horz					= 1.25
+;отдача
+cam_relax_speed         	= 8;1.0	;скорость возврата в исходное положение
+cam_relax_speed_ai        	= 120.75
+cam_dispersion          	= 2	;увеличения угла (в градусах) с каждым выстрелом
+cam_dispersion_inc		= 0.3	;увеличениe cam_dispersion с каждым выстрелом
+cam_dispertion_frac		= 1.0	;ствол будет подыматься на cam_dispersion*cam_dispertion_frac +- cam_dispersion*(1-cam_dispertion_frac)
+cam_max_angle			= 15.0	;максимальный угол отдачи
+cam_max_angle_horz		= 5.0	;(degree) maximum shot horizontal degree 
+cam_step_angle_horz		= 1.0	;(degree) size of step camera moved in horizontal position while shooting
 
-fire_dispersion_condition_factor 	= 3.8		
-misfire_probability 				= 0.002		
-misfire_condition_k					= 0.05
-condition_shot_dec 					= 0.0003	
+fire_dispersion_condition_factor= 3.5	;увеличение дисперсии в процентах при максимальном износе 
+misfire_probability 		= 0.001	;вероятность осечки при максимальном износе 
+misfire_condition_k					= 0.05 
+condition_shot_dec 			= 0.0002 ;увеличение износа при каждом выстреле
+;-----------------------------------------------------------------------------------
 
-fire_point					= 0.0, 0.133, 0.161
+direction           	    = 0, 0, 1
+fire_point          	    = 0.0, 0.104, 0.273
 
-flame_particles				= amik\weapons\flame_particles\flame_particles_04
-smoke_particles				= amik\weapons\smoke_particles\p_smoke_particles_02
-grenade_flame_particles		= weapons\generic_shoot_00
+;flame_particles				= amik\weapons\flame_particles\flame_particles_04
+smoke_particles				= ;amik\weapons\smoke_particles\p_smoke_particles_02
 
-shell_point					= 0.0, 0.133, 0.047
+shell_point		 			= 0.0, 0.104, 0.03
+shell_dir		 			= 0.0, 0.0, 0.4
 shell_particles	 			= amik\weapons\9x18\9x18_r_00
+ 
+rpm_empty_click 	 		= 150
 
 PDM_disp_base 				= 1.0
-PDM_disp_vel_factor 		= 0.8
-PDM_disp_accel_factor 		= 0.8
+PDM_disp_vel_factor 		= 0.9
+PDM_disp_accel_factor 		= 0.9
 PDM_crouch	 				= 1.0
 PDM_crouch_no_acc 			= 1.0
 
-hit_power               	= 0.46
-hit_impulse		 			= 70		
-hit_type 					= fire_wound 	
+; ttc
+hit_power               = 0.43
+hit_impulse		 	= 60
+hit_type 		 			= fire_wound
+;hit_rate			= 1.85
 
-fire_distance            	= 500		
-bullet_speed				= 335		
-rpm                      	= 700		
+fire_distance    			= 50 
+bullet_speed			= 360	;начальная скорость пули
+rpm                     = 270;300
+; end ttc
 
-use_aim_bullet				= true		
+use_aim_bullet				= false		;Поддерживается ли первая суппер пуля
 time_to_aim					= 1.0	
 
-silencer_hit_power       	= 0.44
-silencer_hit_impulse	 	= 60
-silencer_fire_distance   	= 500
-silencer_bullet_speed	 	= 600
+silencer_hit_power      = 0.39
+silencer_hit_impulse	= 40
+silencer_fire_distance   	= 50
+silencer_bullet_speed	 	= 290
 
-hud                      	= wpn_pb_hud				
-normal                  	= 0, 1, 0
+hud              	        = wpn_pb_hud
+normal           	        = 0, 1, 0
+position         	        = -0.021, -0.07, 0.0
+orientation      	        = 0, 0, 0
 
-position 					= -0.021, -0.085, 0.0
-orientation 				= 0, 0, 0					
+visual           			= weapons\pb\wpn_pb.ogf
+light_color		 			= 0.6,0.5,0.3
+light_range		 			= 3.0
+light_var_color		 		= 0.05
+light_var_range		 		= 0.5
+light_time 		 			= 0.2
 
-strap_position				= -0.18,-0.45,0.2
-strap_orientation      		= -10,-5,10
-strap_bone0					= bip01_spine2
-strap_bone1					= bip01_spine1
-
-visual                  	= weapons\aps\wpn_aps.ogf
-
-light_color					= 0.6,0.5,0.3				
-light_range					= 5							
-light_var_color				= 0.05						
-light_var_range				= 0.5
-light_time 					= 0.2						
-
-ph_mass						= 1							
-
-scope_status				= 0							
+;addons
+scope_status				= 0
 silencer_status				= 2
-grenade_launcher_status		= 0							
+grenade_launcher_status		= 0
 
-zoom_enabled				= true						
-					
+zoom_enabled				= true
+weapon_remove_time			= 5000 	;время уничтожения оружия (с учетом TimeFactor) для мультиплеера
 
-scope_name 					= wpn_addon_scope			
-scope_x                     = 52
-scope_y                     = -5
-silencer_name  				= wpn_addon_silencer			
-silencer_x                  = 53
-silencer_y                  = -17					
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;; silencer
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
-snd_draw					= weapons\oc33\draw
-snd_holster					= weapons\oc33\holster
-snd_shoot					= weapons\oc33\shoot
-snd_empty					= weapons\oc33\empty, 0.7
-snd_reload					= weapons\oc33\reload
-snd_silncer_shot			= weapons\oc33\shoot_sil
+silencer_name  		= wpn_addon_sil_pb		;wpn_addon_silencer		; section name for the attachable silencer
+silencer_x 			= 50											; offset in inventory icon
+silencer_y 			= 0					
 
-silencer_smoke_particles 	= amik\weapons\smoke_particles\p_smoke_particles_02
+;params when silencer is attached 
+;similar to corresponding params without prefix silencer_
+
+;silencer_flame_particles 	= weapons\generic_weapon01
+silencer_smoke_particles 	= weapons\generic_shoot_00
 
 silencer_light_color		= 0.6,0.5,0.3
 silencer_light_range		= 0.01
@@ -147,47 +157,70 @@ silencer_light_var_color	= 0.05
 silencer_light_var_range	= 0.5
 silencer_light_time 		= 0.2
 
+
+snd_draw					= weapons\pb\draw							;достал
+;snd_holster					= weapons\pb\holster
+snd_holster					= weapons\pm\holster						;убрал
+snd_shoot					= weapons\pb\shoot, 0.7
+snd_empty					= weapons\pb\empty, 0.7
+snd_reload					= weapons\pb\reload 
+;snd_close					= weapons\pb\generic_holster
+snd_close					= weapons\pm\close
+;snd_silncer_shot			= weapons\pb_shoot				;, 0.6 
+snd_silncer_shot			= weapons\silncers\p_silncer
+
 ;-----------------------------------------------------------------------------
 ;-- HUD DESCRIPTION
 ;-----------------------------------------------------------------------------
 [wpn_pb_hud]
 
-allow_inertion			= true
+allow_inertion		= true
 
-shell_point					= -0.025000,0.048000,-0.329000
-shell_bone             		= wpn_body
+shell_point		        	= -0.015000,0.038000,-0.299000
+fire_point					= 0.040000,0.020917,-0.169974
+fire_bone                	= wpn_body
 
-fire_point					= 0.010000,0.030917,-0.269974
-fire_bone               	= wpn_body
+orientation              	= -0.500000,1.000000,1.149999
+position                 	= -0.021000,-0.160000,0.002500
 
-position					= -0.031,-0.17,0.0025
-orientation					= -0.5,1.,1.15
+visual                   	= weapons\pb\wpn_pb_hud.ogf
 
-visual                  	= weapons\aps\wpn_aps_hud.ogf
-
-anim_idle					= idle
-anim_idle_aim				= idle_aim
-anim_reload					= reload
-anim_draw					= draw
 anim_holster				= holster
+anim_holster_empty			= holster_empty
+anim_idle					= idle
+anim_empty					= idle_empty
+anim_reload					= reload
+anim_reload_empty			= reload_full
+anim_reload_misfire			= reload_full
+anim_draw					= draw
+anim_draw_empty				= draw_empty
 anim_shoot					= shoot
+anim_shot_last				= shoot_last
+anim_close					= holster
+anim_idle_aim				= idle_aim
+anim_idle_aim_empty			= idle_aim
 anim_idle_sprint			= idle_sprint
-;-----------------------------------------------------------------------------
+anim_idle_sprint_empty		= idle_sprint_empty
 
+;-----------------------------------------------------------------------------
 ;смещения HUD для режима приближения
-zoom_offset					= -0.087550,0.057900,-0.050000
-zoom_rotate_x				= 0.003000
-zoom_rotate_y				= -0.014400
-;-----------------------------------------------------------------------------
+;zoom_offset					= -0.097100,0.040700,0.000000
+zoom_offset			= -0.097100,0.040700,-0.035000
+zoom_rotate_x				= -0.003300
+zoom_rotate_y				= -0.016000
 
+;-----------------------------------------------------------------------------
 ;прячем перекрестие прицела в зуме
-zoom_hide_crosshair		= true
+zoom_hide_crosshair			= true						
+
+;+full_close_anim 			= true
+;collide_hud 				= false
+
 
 ;время поворота HUD (сек)
-zoom_rotate_time			= 0.26
-;zoom_rotate_time			= 0.1
+zoom_rotate_time			= 0.1
 rotate_time					= 0.1
 
 [wpn_pb_repair]
-tech_complication 			= 400
+tech_complication = 400
 repair_compatibility = pb
