--- a/gamedata/config/weapons/w_spas12.ltx
+++ b/gamedata/config/weapons/w_spas12.ltx
@@ -1,9 +1,27 @@
 ; дробовик Franchi SPAS-12
-;--------------------------------------
-[wpn_spas12]:identity_immunities,base_wpn_zoom
+;https://www.youtube.com/watch?v=YcuOUBG0Fz0 https://www.youtube.com/watch?v=EtndOApqfoU
+;https://www.youtube.com/watch?v=9JhZj9p1ctw
+;https://www.youtube.com/watch?v=dqvb6afZub0
+;https://www.youtube.com/watch?v=iSHwCRNX_iY
+;Franchi SPAS–12 разработан в 1979 году итальянским оружейником Луиджи Франчи и выпускается на заводе «Luigi Franchi SpA» в городе Брешиа.
+;
+;При нажатии и удержании специальной кнопки, расположенной в нижней части цевья, и перемещении цевья назад (к себе) до щелчка, газоотводный механизм отключается и дробовик переключается на ручной режим перезарядки. Он обозначен буквой «M» на верхнем кожухе ствола (полуавтоматический - «A» - от себя).
+;
+;Сочетание двух режимов перезарядки усложняло конструкцию оружия и соответственно увеличивало его массу до 4,4 кг. Однако за счет большой массы SPAS-12 позволяет эффективно гасить отдачу. Это имеет особое значение при ведении огня на предельной скорострельности в полуавтоматическом режиме перезарядки.
+;Полуавтоматический режим обеспечивает высочайшую огневую мощь, но применим только с патронами, создающими достаточное давление пороховых газов для работы автоматики.
+;Помповый режим позволяет вести стрельбу любыми типами патронов, как дробовыми, так и пулевыми. Возможно использование боеприпасов с небольшим давлением пороховых газов: патроны с резиновыми пулями, снаряды с газовой начинкой, можно даже метать гранаты с помощью специальной насадки. Помпа обеспечивает возможность применения всего спектра боеприпасов, но темп стрельбы невысокий.
+;
+;Подствольный магазин снаряжается по одному патрону через окно в дне ствольной коробки, выброс стреляных гильз производится через боковое окно вправо. SPAS-12 имеет два предохранителя: «основной» смонтирован перед спусковой скобой (S и F - к стволу), «боевой» расположен на спусковой скобе слева.
+;Семейство SPAS-12 использует стволы длиной от 18 до 24 дюймов. Соответственно укорачивалась и длина подствольного магазина, емкость которого варьируется от 5 до 8 патронов.
+;
+;Радиус окружности рассеивания дроби, выпущенной из SPAS-12 на расстоянии 40 м, составляет не более 90 см. На ствол можно устанавливать сменные насадки, именуемые чоками. Они позволяют управлять рассеиванием дроби. Также можно использовать специальную насадку для метания 44-мм гранат на дистанцию до 150 метров.
+;-----------------------------------------------------------------------------
+;СПАС Хантера "Чок" (вооружён sim_bandit_master_kocherga - убить по заданию Долга +Тайник Группировки)
+;-----------------------------------------------------------------------------
+[wpn_spas12_m1]:identity_immunities,base_wpn_zoom
 GroupControlSection			= spawn_group
 discovery_dependency 		= 
-$spawn                   	= "weapons\spas12"					; option for Level Editor
+$spawn             			= "weapons\uniq\wpn_spas12_m1"	; option for Level Editor
 $npc			 			= on				; option for Level Editor
 $prefetch 		 			= 8
 scheduled                	= off              ; option for ALife Simulator
@@ -11,7 +29,7 @@ cform                    	= skeleton
 class                    	= WP_SHOTG
 min_radius               	= 0
 max_radius               	= 60
-description					= enc_weapons1_wpn-spas12
+description					= enc_weapons1_wpn-spas-12
 
 ef_main_weapon_type			= 1
 ef_weapon_type				= 7
@@ -32,7 +50,7 @@ ammo_class		 			= ammo_12x70_kart
 
 ;-----------------------------------------------------------------------------------
 ;базовая дисперсия
-fire_dispersion_base		= 0.28 	;угол (в градусах) базовой дисперсии оружия (оружия зажатого в тисках)
+fire_dispersion_base		= 0.31 	;m_1 0.29 угол (в градусах) базовой дисперсии оружия (оружия зажатого в тисках)
 control_inertion_factor		= 1.3f
 ;disp_rate 			= 1.85
 
@@ -58,14 +76,14 @@ single_handed				= 0
 slot 				 		= 2		; // secondary
 animation_slot		 		= 9		; type of the animation that will be used
 
-inv_name					= wpn-spas12
-inv_name_short				= wpn-spas12
+inv_name					= wpn-spas-12
+inv_name_short				= wpn-spas-12_s
 inv_weight				= 4.4
 
 inv_grid_width				= 5
 inv_grid_height				= 2
-inv_grid_x					= 29
-inv_grid_y					= 26
+inv_grid_x					= 29		;34		;29
+inv_grid_y					= 30		;26
 
 kill_msg_x			= 91
 kill_msg_y			= 104
@@ -74,11 +92,14 @@ kill_msg_height		= 20
 
 direction                	= 0, 0, 1
 shell_point				 	= 0.0, 0.138, 0.07
-fire_point               	= 0.0, 0.133, 0.686
-fire_point2              	= 0.0, 0.103, 0.686
+;fire_point               	= 0.0, 0.133, 0.686
+;fire_point2              	= 0.0, 0.103, 0.686
+fire_point               		= 0, 0.235, 0.66
+fire_point2              		= 0.0, 0.103, 0.686
 
 flame_particles		   		= weapons\generic_weapon05
 smoke_particles		   		= _ecp\weapon_shotgun
+;smoke_particles		   			= weapons\rpg_shoot_02
 
 PDM_disp_base 			= 2.2
 PDM_disp_vel_factor 		= 1.7
@@ -87,30 +108,35 @@ PDM_crouch	 		= 1.0
 PDM_crouch_no_acc 		= 1.0
 
 ; ttc
-hit_power        		= 0.95
+hit_power        		= 0.8
 hit_impulse      		= 30
 hit_type 			= fire_wound
 hit_rate			= 2.0
-fire_distance           = 100
+fire_distance           = 160
 bullet_speed		= 350	;начальная скорость пули
 rpm                     = 150
 rpm_empty_click 	= 120
 
 ; end ttc
 
-hud                      	= wpn_spas12_hud
+hud                      	= wpn_spas12_m1_hud
 normal                   	= 0, 1, 0
-position                 	= -0.024, -0.091, 0.0
+;position                 	= -0.024, -0.091, 0.0
+position                 		= -0.026,-0.165, -0.019
 orientation              	= 0, 0, 0      ;значение устанавливается в градусах
 
 ;--STRAP PARAMETERS-----------------------------------------------------------------
 ;под мишкой
-strap_position         		= -0.26,-0.10,0.05			; position (offset) and orientation of the weapon when it is strapped
-strap_orientation      		= -15,-9,110				; (3rd person view in degrees)
+;strap_position         		= -0.26,-0.10,0.05			; position (offset) and orientation of the weapon when it is strapped
+;strap_orientation      		= -15,-9,110				; (3rd person view in degrees)
+strap_position         		= -0.37,-0.09,0.11			; position (offset) and orientation of the weapon when it is strapped
+strap_orientation      		= -05,-5,110				; (3rd person view in degrees)
 strap_bone0					= bip01_spine2
 strap_bone1					= bip01_spine1
 
 startup_ammo             	= 8
+
+;крупноват?
 visual                   	= weapons\spas12\wpn_spas12.ogf
 
 light_color		 			= 0.6,0.5,0.3
@@ -128,94 +154,83 @@ zoom_enabled				= true
 
 ;------------------------------ O.G.S.E. sound remake -----------------------
 ;звуки
-snd_draw					= weapons\spas12\spas12_draw
-snd_holster					= weapons\generic_shotgun_holster
-snd_shoot					= weapons\spas12\spas12_shot      
-snd_empty					= weapons\spas12\spas12_empty
-snd_reload					= weapons\toz34\toz34_reload
-snd_shoot_duplet			= weapons\toz34\toz34_shoot_both
-
-snd_open_weapon				= weapons\spas12\spas12_open		
-snd_add_cartridge			= weapons\spas12\spas12_load        
-snd_close_weapon			= weapons\spas12\spas12_close		
+;snd_draw					= weapons\spas12\spas12_draw
+;snd_holster					= weapons\generic_shotgun_holster
+;snd_shoot					= weapons\spas12\spas12_shot      
+;snd_empty					= weapons\spas12\spas12_empty
+;snd_reload					= weapons\toz34\toz34_reload
+;snd_shoot_duplet			= weapons\toz34\toz34_shoot_both
+;
+;snd_open_weapon				= weapons\spas12\spas12_open		
+;snd_add_cartridge			= weapons\spas12\spas12_load        
+;snd_close_weapon			= weapons\spas12\spas12_close		
 ;-----------------------------------------------------------------------------
-
+snd_draw						= weapons\spas12\mp153_draw
+snd_holster						= weapons\spas12\mp153_holster
+snd_shoot						= weapons\spas12\shoot1
+snd_shoot1						= weapons\spas12\shoot2
+snd_shoot2						= weapons\spas12\shoot3
+snd_shoot3						= weapons\spas12\shoot4
+snd_empty						= weapons\spas12\empty, 0.5
+snd_reload						= weapons\spas12\toz34_reload
+snd_shoot_duplet				= weapons\spas12\toz34_shoot_both
+snd_open_weapon					= weapons\spas12\open
+snd_add_cartridge				= weapons\spas12\load
+snd_close_weapon				= weapons\spas12\reload_end		
 ;-----------------------------------------------------------------------------
 ;-- HUD DESCRIPTION
 ;-----------------------------------------------------------------------------
-[wpn_spas12_hud]
+[wpn_spas12_m1_hud]
 
 allow_inertion			= true
 
 shell_point	 		= 0.0, 0.0, 0.0
-fire_point 			= 0.000000, 0.125000, 0.315000
-fire_point2			= 0.000000, 0.125000, 0.315000
+fire_point      				= 0,0.03,0.065
+;fire_point2			= 0.000000, 0.125000, 0.315000
 fire_bone 			= wpn_body
 
-orientation 		= 2, -3, 0
-position 			= 0, 0.005, 0 ;position = (x,y,z) = ( x move right -x move left, y move up -y move down, z move forward -z move backwards)
+;orientation 		= 2, -3, 0
+orientation			= 0, 1, 0
+;position = (x,y,z) = ( x move right -x move left, y move up -y move down, z move forward -z move backwards)
+position 			= 0.16, -0.07, -0.08
+;двигать ниже - при перезарядке патроны берёт "из воздуха"
+;7position						= -0.115000,0.080000,-0.280000
+;7orientation						= 0.000000,0.000000,0.000000
+
 visual 				= weapons\spas12\wpn_spas12_hud.ogf
 
-anim_idle			= idle
-anim_reload			= draw
-anim_draw			= draw
-anim_holster		= holster
-anim_shoot			= shoot
-anim_shoot_both 	= shoot
-anim_idle_aim		= idle_aim
-anim_idle_sprint	= idle_sprint
+anim_idle						= idle
+anim_reload						= draw
+anim_draw						= draw
+anim_draw_speed_k    = 1.6			;достал
+anim_holster					= holster
+anim_holster_speed_k = 2.8			;убрал
+anim_shoot						= shoot
+anim_shoot_both 				= shoot
+anim_idle_aim					= idle_aim
+anim_idle_sprint				= idle_sprint
 
-anim_open_weapon	= reload1
-anim_add_cartridge	= reload2
-anim_close_weapon	= reload3
 
+anim_open_weapon				= reload1
+anim_add_cartridge				= reload2	;не жмёт кнопку - не вставит патрон
+anim_close_weapon				= reload3	;не надо дрочить помпу, надо передёрнуть затвор (или снять с задержки)
 ;-----------------------------------------------------------------------------
 ;смещения HUD для режима приближения
-zoom_offset			= -0.123,0.0426,-0.083
-zoom_rotate_x		= -0.002
-zoom_rotate_y		= 0.0366
+zoom_offset			= -0.161200,0.046200,-0.083000
+zoom_rotate_x		= 0.005800
+zoom_rotate_y		= 0.000500
 
 ;-----------------------------------------------------------------------------	
 ;прячем перекрестие прицела в зуме
 zoom_hide_crosshair		= true
 
 ;время поворота HUD (сек)
-zoom_rotate_time		= 0.5
-rotate_time			= 0.5
+zoom_rotate_time	= 0.25	;0.5
+rotate_time			= 0.25	;0.5
 
-[wpn_spas12_repair]
+[wpn_spas12_m1_repair]
 tech_complication = 450
 repair_compatibility = spas12
 
-;-----------------------------------------------------------------------------
-;Спас-12 Хантера
-;-----------------------------------------------------------------------------
-[wpn_spas12_m1]:wpn_spas12	
-$spawn             				= "weapons\uniq\wpn_spas12_m1"	
-description						= enc_weapons1_wpn-spas12_m1
-holder_range_modifier	= 1.0
-holder_fov_modifier		= 1.2
-inv_name				= wpn-spas12_m1
-inv_name_short			= wpn-spas12_m1
-fire_dispersion_base	= 0.22
-condition_shot_dec 		= 0.0006
-hit_power        		= 1.0
-cost					= 3900
-inv_grid_x				= 29
-inv_grid_y				= 28
-scope_zoom_factor	    = 1.25 ; 74.7
-ironsight_zoom_factor		= 1.0
-
-
-visual                  = weapons\spas12\wpn_spas12_m1.ogf
-hud                     = wpn_spas12_m1_hud
-
-[wpn_spas12_m1_hud]:wpn_spas12_hud
-
-visual 				= weapons\spas12\wpn_spas12_m1_hud.ogf
-zoom_offset			= -0.123,0.0426,-0.02
-zoom_rotate_x		= 0.042
-
-[wpn_spas12_m1_repair]
-tech_complication = 900
-repair_compatibility = spas12
+[wpn_spas12_arena]:wpn_spas12_m1
+$spawn             		= "weapons\arena\wpn_spas12_arena"
