--- a/gamedata/config/weapons/w_svu.ltx
+++ b/gamedata/config/weapons/w_svu.ltx
@@ -1,21 +1,28 @@
-
-; Снайперская винтовка укороченая СВУ-А (ОЦ-03А)
-;--------------------------------------
-[wpn_svu]:identity_immunities
-GroupControlSection	= spawn_group
-discovery_dependency = 
-$spawn                  = "weapons\svu"		; option for Level Editor
-$npc			 		= on				; option for Level Editor
-$prefetch 		 		= 8
-scheduled               = off              	; option for ALife Simulator
-cform                   = skeleton
-class                   = WP_VAL
+; Снайперская винтовка укороченая СВУ (ОЦ-03) 
+;-(правлено SR)-------------------------------------
+; калибр 				7.62x54 мм
+; длина ствола 				520 мм
+; магазин				10/20
+; вес: 4,4 кг с пустым магазином и прицелом ПСО-1 (5.5 кг для СВУ-АС с сошками)
+; эффективная дальность стрельбы	640 м 
+; прицельная дальность			800 м
+; дульная скорость пули			800 м/с
+; темп стрельбы				650 в/м
+;---------------------------------------------------
+[wpn_swu-as]:identity_immunities,base_wpn_zoom
+GroupControlSection		= spawn_group
+discovery_dependency 		= 
+$spawn 				= "weapons\swu"		; option for Level Editor
+$npc				= on			; option for Level Editor
+$prefetch 			= 8
+scheduled 			= off 			; option for ALife Simulator
+cform 				= skeleton
+class 				= WP_VAL		;WP_SVU не поддерживает режим автоматического огня
 min_radius 		= 0
 max_radius 		= 200
-description				= enc_weapons1_wpn-svu
 
-ef_main_weapon_type		 = 3
-ef_weapon_type			 = 8
+ef_main_weapon_type		= 3
+ef_weapon_type			= 8
 
 ;--- scope weapons -----------------------------------------------------------------
 holder_range_modifier	= 2.15
@@ -25,64 +32,83 @@ holder_fov_modifier		= 0.7
 cost					= 7000
 weapon_class			= sniper_rifle
 
-ammo_elapsed			= 10
-ammo_mag_size		 	= 10
+ammo_limit			= 60
+ammo_current		= 60
+ammo_elapsed			= 20
+ammo_mag_size			= 20
+                       	
 ammo_class		 		= ammo_7.62x54_7h1, ammo_7.62x54_7h14, ammo_7.62x54_ap 
-fire_modes				= -1, 1
+fire_modes				= 1, 0, -1
+;tracers				= on
 
 hand_dependence 		= 1
 single_handed			= 0
 
 slot 			 		= 2		; // secondary
-animation_slot			= 2		; type of the animation that will be used
+animation_slot			= 2			; type of the animation that will be used
 
-inv_name		 		= wpn-svu
-inv_name_short		 	= wpn-svu
-inv_weight		 		= 4.4
+description			= enc_weapons1_wpn-swu		;ОГСЕ enc_weapons1_wpn-svu
+inv_name			= wpn-swu
+inv_name_short		= wpn-swu_s
+inv_weight				= 4.4	;4.4 кг (5.5 кг СВУ-АС с пустым магазином и прицелом ПСО-1 -0.6прицел -0.5глушак)
 
 inv_grid_width			= 5
 inv_grid_height			= 2
-inv_grid_x				= 0
-inv_grid_y				= 2
+inv_grid_x			= 0
+inv_grid_y			= 2
 
 kill_msg_x			= 0
 kill_msg_y			= 59
 kill_msg_width		= 80
 kill_msg_height		= 26
 
+auto_spawn_ammo			= false		;спавнить автоматически боеприпасы при подъеме оружия
+sprint_allowed			= true
+ph_mass			 	= 5
+
 ;-----------------------------------------------------------------------------------
 ;базовая дисперсия
-fire_dispersion_base	= 0.018	;угол (в градусах) базовой дисперсии оружия (оружия зажатого в тисках)
-control_inertion_factor	= 1.6f
+fire_dispersion_base	= 0.2	;угол (в градусах) базовой дисперсии оружия (оружия зажатого в тисках)
+control_inertion_factor		= 1.6f
 disp_rate 			    = 1.85
 
 ;отдача
-cam_relax_speed         = 4.25	;скорость возврата в исходное положение
-cam_relax_speed_ai      = 120.75	;скорость возврата в исходное положение
-cam_dispersion          = 0.5; 1.5	;увеличения угла (в градусах) с каждым выстрелом
-cam_dispersion_inc		= 0.5	;увеличениe cam_dispersion с каждым выстрелом
-cam_dispertion_frac		= 1.0	;ствол будет подыматься на cam_dispersion*cam_dispertion_frac +- cam_dispersion*(1-cam_dispertion_frac)
-cam_max_angle			= 7	;максимальный угол отдачи
-cam_max_angle_horz		= 3.0	;(degree) maximum shot horizontal degree 
+cam_relax_speed 		= 4.25			; скорость возврата в исходное положение
+cam_dispersion          = 0.6			;увеличения угла (в градусах) с каждым выстрелом
+cam_relax_speed_ai 		= 120.75		; скорость возврата в исходное положение
+cam_dispersion_inc		= 0.5			; увеличениe cam_dispersion с каждым выстрелом
+cam_dispertion_frac		= 1.0			;ствол будет подыматься на cam_dispersion*cam_dispertion_frac +- cam_dispersion*(1-cam_dispertion_frac)
+cam_max_angle			= 9				;максимальный угол отдачи
+cam_max_angle_horz		= 18.0			; (degree) maximum shot horizontal degree 
 cam_step_angle_horz		= 0.6	;(degree) size of step camera moved in horizontal position while shooting
 
 fire_dispersion_condition_factor = 3.5	;увеличение дисперсии в процентах при максимальном износе 
 misfire_probability 		= 0.0015 ;вероятность осечки при максимальном износе 
-misfire_condition_k			= 0.05
+misfire_condition_k		= 0.05
 condition_shot_dec 			= 0.0002 ;увеличение износа при каждом выстреле
 ;-----------------------------------------------------------------------------------
 
-direction               = 0, 0, 1
-fire_point              = 0.0, 0.128, 0.522
-fire_point2             = 0.0, 0.128, 0.522
+direction 			= 0, 0, 1
+fire_point              	= 0.0, 0.205, 0.56
+fire_point2 			= 0.0, 0.128, 0.522
 
-flame_particles		   	= weapons\generic_weapon05
-smoke_particles		   	= weapons\generic_shoot_00
+;flame_particles		 	= weapons\generic_weapon05
+;smoke_particles		 	= weapons\generic_shoot_00
+flame_particles				= amik\weapons\flame_particles\dtk_flame_particles_4
+smoke_particles				= amik\weapons\smoke_particles\smoke_particles_pump_01
 
-shell_point		 		= 0.0, 0.128, 0.0
-shell_dir		 		= 0.0, 0.0, 0.4
-shell_particles	 		= weapons\generic_shells
+;silencer_flame_particles 	= weapons\generic_weapon01
+silencer_flame_particles 	= amik\weapons\flame_particles\dtk_flame_particles_2
+;silencer_smoke_particles 	= amik\weapons\smoke_particles\smoke_particles_pump_01
+silencer_smoke_particles 	= amik\weapons\smoke_particles\silencer_smoke_particles_00
 
+shell_point		 			= 0.0, 0.23, -0.123
+shell_dir		 	= 0.0, 0.0, 0.4
+;shell_particles	 		= weapons\generic_shells
+shell_particles	 			= amik\weapons\7.62x54_shells_r_01
+
+;параметры качания ствола в руках ГГ при движении в режиме прицеливания (стрельба навскидку) 
+;МЕНЬШЕ множитель ТОЧНЕЙ (fire_dispersion_base стремится к -оо) *1.х = +разброс
 PDM_disp_base 			= 1.0
 PDM_disp_vel_factor 		= 0.8
 PDM_disp_accel_factor 		= 1.0
@@ -90,145 +116,143 @@ PDM_crouch	 		= 1.0
 PDM_crouch_no_acc 		= 1.0
 
 ; ttc
-hit_power          = 1.0
+hit_power          = 0.905		;0.945		;0.95 ОГСЕ 1.0
 hit_impulse	       = 30
-hit_type 		   = fire_wound
+hit_type 		 	= fire_wound
 hit_rate			= 2.0
 
-fire_distance           	= 500
-bullet_speed			= 910	; 780 начальная скорость пули
-
-rpm                     	= 400
+fire_distance          	= 400
+bullet_speed			= 780	;ОГСЕ 910
+rpm                     = 360	;ОГСЕ 400
 rpm_empty_click 	 	= 325
+
+silencer_hit_power       	= 0.905		;0.945		;насадок
+silencer_hit_impulse	 	= 30
+silencer_fire_distance   	= 400
+silencer_bullet_speed	 	= 780
 ; end ttc
 
-use_aim_bullet				= true		;Поддерживается ли первая суппер пуля
-time_to_aim					= 1.0	
+use_aim_bullet			= true			; Поддерживается ли первая суппер пуля
+time_to_aim			= 1.0	
 
-hud                     = wpn_svu_hud
-normal                  = 0, 1, 0
-position                = -0.026, -0.084, 0.0
-orientation             = 0, 0, 0
+hud 				= wpn_swu-as_hud
+normal 				= 0, 1, 0
+position 					= -0.026, -0.168, 0.005
+orientation 			= 0, 0, 0
 
 ;--STRAP PARAMETERS-----------------------------------------------------------------
 ;под мышкой
-strap_position         	= -0.26,-0.11,0.25			; position (offset) and orientation of the weapon when it is strapped
-strap_orientation      	= -15,-9,110				; (3rd person view in degrees)
-strap_bone0				= bip01_spine2
-strap_bone1				= bip01_spine1
+strap_position         		= 0.02,-0.21,0.25
+strap_orientation      		= 05,-183, -99
+strap_bone0			= bip01_spine2
+strap_bone1			= bip01_spine1
 
-visual                  = weapons\svu\wpn_svu.ogf
+visual 				= weapons\svu\wpn_svu.ogf
 
 light_disabled			= true
 
 ;addons
-scope_status			= 1
-silencer_status			= 0
+scope_status			= 0
+silencer_status			= 1
 grenade_launcher_status	= 0
 
-scope_texture			= wpn\scopes\scope_pso-2
 zoom_enabled			= true
-scope_zoom_factor	    = 6.0 ; 18.7
-ironsight_zoom_factor		= 1.0
 
-;------------------------------------------------------------------------------------------
-  
-hit_probability_gd_novice	= 0.80				; точность стрельбы,      
-hit_probability_gd_stalker	= 0.85				; когда оружие в руках НПС
-hit_probability_gd_veteran	= 0.90				; в зависимости от уровня 
-hit_probability_gd_master	= 0.95				; сложности игры          
+;scope_texture				= wpn\scopes\scope_pso-1-1
+;scope_zoom_factor	    	= 4
 
-;------------------------------ O.G.S.E. sound remake -----------------------
-;звуки
-snd_draw				= weapons\svu\svu_draw
-snd_holster				= weapons\generic_rifle_holster
-snd_shoot				= weapons\svu\svu_shoot
-snd_shoot1				= weapons\svu\svu_shoot
-snd_shoot2				= weapons\svu\svu_shoot
-snd_shoot3				= weapons\svu\svu_shoot
-snd_empty				= weapons\generic_ak_empty
-snd_reload				= weapons\svu\svu_reload
-snd_close				= weapons\generic_close
+scope_name 					= wpn_addon_scope
 
+scope_x 					= 54
+scope_y 					= 3
+
+silencer_name  				= wpn_addon_sil_762_svu
+silencer_x                  = 197
+silencer_y                  = 22
+
+silencer_light_color		= 0.6,0.5,0.3
+silencer_light_range		= 0.01
+silencer_light_var_color	= 0.05
+silencer_light_var_range	= 0.5
+silencer_light_time 		= 0.2
+
+;ПРОБУЕМ пока один набор на всех прописать напрямую (ВРЕМЕННО, пока KRodin в движок всё перенести не раздуплится)
+highlight_addons = fake_wpn_addon_mag_svd10, fake_wpn_addon_mag_svd20, fake_wpn_addon_scope, fake_wpn_addon_scope_1p59, fake_wpn_addon_scope_1pn51, fake_wpn_addon_scope_1p29, fake_wpn_addon_scope_kobra
+
+; ----------------------------== Sounds ==---------------------------------
+snd_draw			= weapons\svu\svu_draw
+snd_holster			= weapons\svu\svu_holster
+snd_shoot			= weapons\svu\shoot					;svu_shoot 
+snd_silncer_shot			= weapons\svu\svu_shot1
+snd_silncer_shot1			= weapons\svu\svu_shot2
+snd_silncer_shot2			= weapons\svu\svu_shot3
+snd_empty			= weapons\svu\rifle_empty, 0.5
+snd_reload			= weapons\svu\svu_reload
+snd_close			= weapons\svu\generic_close
 ;-----------------------------------------------------------------------------
 
 ;-----------------------------------------------------------------------------
 ;-- HUD DESCRIPTION
 ;-----------------------------------------------------------------------------
-[wpn_svu_hud]
-
+[wpn_swu-as_hud]
 allow_inertion			= true
 
-shell_point 			= -0.15, -0.02, 0.05
-shell_dir		 	= 0.0, 1.0, 0.0
+shell_point         = -0.02, 0.27, 0.12  
+shell_dir			= 0.0, 1.0, 0.0
 
-fire_point			= -0.070000, -0.050000, 0.080000
-fire_bone 			= wpn_body
+shell_bone			= wpn_body
 
-orientation 			= 0, 0, 0
-position 			= 0, 0, 0
-visual 				= weapons\svu\wpn_svu_hud.ogf
+fire_point			= 0.00, 0.047, 0.014 ;0.082
+fire_bone			=  wpn_body
+
+;position			= 0.115000,-0.020900,0.124000
+;orientation			= 2.344327,1.593801,0.000000
+
+position			= 0.150, -0.010, 0.148
+orientation			= 1.5, 1.53, 0.0
+
+visual				= weapons\svu\wpn_svu_hud.ogf
 
 anim_idle			= idle
 anim_reload			= reload
 anim_draw			= draw
 anim_holster		= holster
 anim_shoot			= shoot
-anim_idle_aim		= idle
-anim_idle_sprint	= idle
+anim_idle_aim		= idle_aim
+anim_idle_sprint	= idle_sprint
 
 ;-----------------------------------------------------------------------------
 ;смещения HUD для режима приближения
-zoom_offset			= -0.070000, 0.000000, 0.000000
-zoom_rotate_x		=  0.020000
-zoom_rotate_y		= -0.040000
+;HUD offset in zoom mode (to all)
+;(use ОГСЕ CONSOLE: hud_adjust_mode 0,1,2, then keys WSADQE and P to show current value in console)
+;-лево/+право,-низ/+верх,-к/+от себя
+;штатный механический прицел zoom_offset			= -0.112900,0.017050,-0.207000
+;-вверх/+вниз zoom_rotate_x		= 0.030060
+;-лево/+право zoom_rotate_y		= 0.035860 zoom_rotate_y		= 0.042710
+; 7
+;zoom_offset			= -0.120900,0.023050,-0.132000
+;zoom_rotate_x		= 0.018060
+;zoom_rotate_y		= 0.040710
+; тест sto1en
+zoom_offset			= -0.154600,0.010750,-0.320999
+zoom_rotate_x		= 0.015360
+zoom_rotate_y		= 0.026210
 
 ;-----------------------------------------------------------------------------
 ;прячем перекрестие прицела в зуме
 zoom_hide_crosshair		= true
 
 ;время поворота HUD (сек)
-zoom_rotate_time		= 0.5
+zoom_rotate_time		= 0.3	;0.5
 rotate_time			= 0.5
 
-[wpn_svu_repair]
+[wpn_swu-as_repair]
 tech_complication = 700
 repair_compatibility = svu
 
-;--------------------------------------
-;Громобой
-;--------------------------------------
-[wpn_svu_m1]:wpn_svu
-$spawn             	= "weapons\uniq\wpn_svu_m1"	
-description			= enc_weapons1_wpn-svu_m1
-inv_name			= wpn-svu_m1
-inv_name_short		= wpn-svu_m1
-sprint_allowed		= true
-ammo_class			= ammo_7.62x54_7h14, ammo_7.62x54_ap
-ammo_mag_size		= 20
-cam_dispersion		= 0.3
-cam_step_angle_horz	= 0.1
-bullet_speed		= 1100
-condition_shot_dec 	= 0.0004
-;------------------------------ O.G.S.E. sound remake -----------------------
-snd_shoot			= weapons\gromoboi_shot
-snd_shoot1			= weapons\gromoboi_shot
-snd_shoot2			= weapons\gromoboi_shot
-snd_shoot3			= weapons\gromoboi_shot
-;----------------------------------------------------------------------------
-hit_power           = 1.65
-hit_impulse		 	= 50
-inv_weight			= 4.4
-cost				= 15000
-inv_grid_x			= 0
-inv_grid_y			= 37
-visual              = weapons\svug\wpnsvug.ogf
-hud                 = wpn_svug_hud
-silencer_status		= 1
 
-[wpn_svug_hud]:wpn_svu_hud
-visual              = weapons\svug\wpnsvug_hud.ogf
 
-[wpn_svu_m1_repair]
-tech_complication = 1200
-repair_compatibility = svu
+;-----------------------------------------------------------------------------------
+;Сменные аддоны ОГСЕ 
+#include "w_svu_ex.ltx"
+;-----------------------------------------------------------------------------------
