--- a/gamedata/config/weapons/w_swd_ex.ltx
+++ b/gamedata/config/weapons/w_swd_ex.ltx
@@ -1,7 +1,7 @@
 ;-----------------------------------------------------------------------------------
 ;Сменные аддоны ОГСЕ
 ;-----------------------------------------------------------------------------------
-;управляемые В СЕКЦИЯХ АДДОНОВ кости (64=54+b+5s+2m+2d) АК102 с привязкой by k01jan:
+;управляемые В СЕКЦИЯХ АДДОНОВ кости (64=54+b+5s+2m+2d) СВД с привязкой by k01jan:
 ;wpn_body		патрон в стволе
 ;  wpn_grenade_launcher 
 ;Имеются посадочные места для установки штык-ножа.
@@ -70,7 +70,8 @@ anim_reload					= idle			;reload
 ;показываемые кости, был пустой, залочен (здесь НЕ работает?) bones = 
 ; тест sto1en
 ;смещение ствола при прицеливании: лево/право,верх/низ,от/к себя(е)
-zoom_offset			= -0.168800,0.072450,-0.235
+;zoom_offset			= -0.168800,0.072450,-0.235
+zoom_offset			= -0.168800,0.072450,-0.240000
 zoom_rotation		= 0.043400,0.030280
 
 [swd_ironsight_p] ; имитация движкового параметра для прицела
@@ -88,7 +89,7 @@ scope                    = swd_ironsight
 ;тест мех.прицела force_remove_texture = true
 bones         = s1
 ;штатный механический прицел (не настроен)
-zoom_offset			= -0.168800,0.072450,-0.235
+zoom_offset			= -0.168800,0.072450,-0.240000
 zoom_rotation		= 0.043400,0.030280
 
 [swd_pso1_p] ; имитация движкового параметра
@@ -104,7 +105,7 @@ scope                    = swd_pso1
 ;тест мех.прицела force_remove_texture = true
 bones         = s2
 ;штатный механический прицел (со сдвигом)
-zoom_offset			= -0.168800,0.072450,-0.235
+zoom_offset			= -0.168800,0.072450,-0.240000
 zoom_rotation		= 0.043400,0.030280
 
 [swd_1p59_p]:base_wpn_zoom ; имитация движкового параметра
@@ -119,10 +120,10 @@ class				= WP_BINOC
 ;holder_range_modifier		= 2.2
 zoom_enabled				= true
 
-snd_gyro			= $no_sound, 0
-snd_zoomin			= $no_sound, 0
-snd_zoomout			= $no_sound, 0
-snd_close			= $no_sound, 0
+snd_gyro			= weapons\binoculars_gyro
+snd_zoomin			= weapons\binoculars_zoomin
+snd_zoomout			= weapons\binoculars_zoomout
+snd_close			= weapons\generic_close
 vision_present			= false
 vis_frame_speed			= 4			; скорость, с которой наводится рамка на цель
 vis_frame_color			= 0.7,0.7,0.7,1.0	; цвет рамки RGBA (A) Не учитывается
@@ -135,7 +136,7 @@ found_snd			= detectors\DA-2_beep1
 bones         = s3
 ;+скрываем кость bones_hide = 
 ;штатный механический прицел (не настроен)
-zoom_offset			= -0.168800,0.072450,-0.235
+zoom_offset			= -0.168800,0.072450,-0.24
 zoom_rotation		= 0.043400,0.030280
 shell_point			= 0.90, 0.03, -0.045
 
@@ -154,7 +155,7 @@ scope_y 					= 0
 ;показываемые кости
 bones         = s4
 ;штатный механический прицел (не настроен)
-zoom_offset			= -0.168800,0.072450,-0.235
+zoom_offset			= -0.168800,0.072450,-0.24
 zoom_rotation		= 0.043400,0.030280
 
 ; кусок секции для наследования
@@ -183,7 +184,8 @@ scope                    = swd_kobra
 ;иконка прицела
 scope_x 					= 55
 scope_y 					= 4
-
+;_второй прицел ОГСР не надо сдвигать, а second_ тут не работают.. 
+disable_second_scope = true
 
 
 ;-----------------------------------------------------------------------------------
@@ -192,24 +194,24 @@ scope_y 					= 4
 
 [swd_svd10]
 bones = m1
-[swd_svd10_p] ; имитация движкового параметра для магазина АК-101
+[swd_svd10_p] ; имитация движкового параметра для магазина СВД
 magazine_name            = wpn_addon_mag_svd10
 magazine                 = swd_svd10
 ammo_mag_size			= 10
-inv_grid_x			= 73
-inv_grid_y			= 0
+;щ inv_grid_x			= 73
+;щ inv_grid_y			= 0
 ;inv_weight				= 3.63		;АКМ 3.48 = 3.15 + 0.33 ;АКМС (+0,15) 3,63=3,3+0,33
 ;cost					= 5100
 
 ;------------------------------------------------------------------------------------
 [swd_svd20]
 bones = m2
-[swd_svd20_p] ; имитация движкового параметра для магазина Beta C-Mag
+[swd_svd20_p] ; имитация движкового параметра для магазина СВУ
 magazine_name            = wpn_addon_mag_svd20
 magazine                 = swd_svd20
 ammo_mag_size            = 20
-inv_grid_x			= 73
-inv_grid_y			= 2
+;щ inv_grid_x			= 73
+;щ inv_grid_y			= 2
 ;inv_weight				= 3.75		;АКМ 3.5 = 3.15 + 0.45 ;АКМС (+0,15) 3,75=3,3+0,45
 ;cost					= 5200
 ;------------------------------------------------------------------------------------
@@ -223,6 +225,8 @@ rpm                      = 0					; нечем стрелять
 snd_reload               = $no_sound
 snd_empty                = $no_sound
 hud                      = wpn_swd_nomag_hud
+;щ inv_grid_x					= 73
+;щ inv_grid_y					= 4
 
 
 
@@ -237,17 +241,17 @@ bones = d1
 grip_name				= wpn_addon_svd_scheek
 grip					= swd_scheek
 ;+ТЕСТ точности wpn_svd_m1 "Дальнобойщик"
-fire_dispersion_base	= 0.005		 	;ОГСЕ СВД 0.015
-control_inertion_factor	= 2.5f			;ОГСЕ СВД 2.2f		;удобность
-disp_rate 			    = 1.0
+fire_dispersion_base	= 0.09
+control_inertion_factor	= 2.5f
+;disp_rate 			    = 1.85
 
 ;отдача
 cam_dispersion          = 1.2	;увеличения угла (в градусах) с каждым выстрелом
 cam_dispersion_inc		= 0.3	;увеличениe cam_dispersion с каждым выстрелом
 cam_dispertion_frac		= 1.0	;ствол будет подыматься на cam_dispersion*cam_dispertion_frac +- cam_dispersion*(1-cam_dispertion_frac)
-cam_max_angle			= 7.0	;максимальный угол отдачи
-cam_max_angle_horz		= 1.5	;(degree) maximum shot horizontal degree 
-cam_step_angle_horz		= 0.15	;(degree) size of step camera moved in horizontal position while shooting
+cam_max_angle			= 3.0	;5.0	;7.0	;максимальный угол отдачи
+cam_max_angle_horz		= 1.3	;1.5	;(degree) maximum shot horizontal degree 
+cam_step_angle_horz		= 0.7	;0.15	;(degree) size of step camera moved in horizontal position while shooting
 
 ;-ТЕСТ калоши d2 (НЕ ИСПОЛЬЗУЕТСЯ)
 ;[swd_gp_galoscha]
@@ -274,6 +278,8 @@ repair_compatibility = svd
 [wpn_swd_nomag_pso1]:wpn_swd_base,swd_pso1_p,swd_nomag_p
 cost		= 7500
 inv_weight	= 4.31
+inv_grid_x					= 53
+inv_grid_y					= 22
 ;прицелы на боковую планку
 wpn_addon_scope_1p59     = wpn_swd_nomag_1p59
 wpn_addon_scope_1pn51    = wpn_swd_nomag_1pn51
@@ -288,10 +294,9 @@ wpn_addon_svd_scheek = wpn_swd_nomag_grip_pso1
 [wpn_swd_nomag_grip_pso1]:wpn_swd_base,swd_pso1_p,swd_nomag_p,swd_scheek_p
 cost		= 10500
 inv_weight	= 4.41
+inv_grid_x			= 73
+inv_grid_y			= 4
 grip_removed_section = wpn_swd_nomag_pso1
-;cost				= 
-;inv_grid_x			= 
-;inv_grid_y			= 
 ;прицелы на боковую планку
 wpn_addon_scope_1p59     = wpn_swd_nomag_grip_1p59
 wpn_addon_scope_1pn51    = wpn_swd_nomag_grip_1pn51
@@ -306,6 +311,8 @@ wpn_addon_mag_svd20      = wpn_swd_svd20_grip_pso1
 [wpn_swd_nomag_1pn51]:wpn_swd_base,swd_1pn51_p,swd_nomag_p
 cost		= 7500
 inv_weight	= 4.31
+inv_grid_x					= 53
+inv_grid_y					= 22
 ;прицелы на боковую планку
 wpn_addon_scope		     = wpn_swd_nomag_pso1
 wpn_addon_scope_1p59     = wpn_swd_nomag_1p59
@@ -320,10 +327,9 @@ wpn_addon_svd_scheek = wpn_swd_nomag_grip_1pn51
 [wpn_swd_nomag_grip_1pn51]:wpn_swd_base,swd_1pn51_p,swd_nomag_p,swd_scheek_p
 cost		= 10500
 inv_weight	= 4.41
+inv_grid_x			= 73
+inv_grid_y			= 4
 grip_removed_section = wpn_swd_nomag_1pn51
-;cost				= 
-;inv_grid_x			= 
-;inv_grid_y			= 
 ;прицелы на боковую планку
 wpn_addon_scope		     = wpn_swd_nomag_grip_pso1
 wpn_addon_scope_1p59     = wpn_swd_nomag_grip_1p59
@@ -338,6 +344,8 @@ wpn_addon_mag_svd20      = wpn_swd_svd20_grip_1pn51
 [wpn_swd_nomag_1p59]:wpn_swd_base,swd_1p59_p,swd_nomag_p
 cost		= 7500
 inv_weight	= 4.31
+inv_grid_x					= 53
+inv_grid_y					= 22
 ;прицелы на боковую планку
 wpn_addon_scope		     = wpn_swd_nomag_pso1
 wpn_addon_scope_1pn51    = wpn_swd_nomag_1pn51
@@ -353,10 +361,9 @@ wpn_addon_svd_scheek = wpn_swd_nomag_grip_1p59
 [wpn_swd_nomag_grip_1p59]:wpn_swd_base,swd_1p59_p,swd_nomag_p,swd_scheek_p
 cost		= 10500
 inv_weight	= 4.41
+inv_grid_x			= 73
+inv_grid_y			= 4
 grip_removed_section = wpn_swd_nomag_1p59
-;cost				= 
-;inv_grid_x			= 
-;inv_grid_y			= 
 ;прицелы на боковую планку
 wpn_addon_scope		     = wpn_swd_nomag_grip_pso1
 wpn_addon_scope_1pn51    = wpn_swd_nomag_grip_1pn51
@@ -372,6 +379,8 @@ wpn_addon_mag_svd20      = wpn_swd_svd20_grip_1p59
 [wpn_swd_nomag_1p29]:wpn_swd_base,swd_1p29_p,swd_nomag_p
 cost		= 7500
 inv_weight	= 4.31
+inv_grid_x					= 53
+inv_grid_y					= 22
 ;прицелы на боковую планку
 wpn_addon_scope		     = wpn_swd_nomag_pso1
 wpn_addon_scope_1p59     = wpn_swd_nomag_1p59
@@ -386,10 +395,9 @@ wpn_addon_svd_scheek = wpn_swd_nomag_grip_1p29
 [wpn_swd_nomag_grip_1p29]:wpn_swd_base,swd_1p29_p,swd_nomag_p,swd_scheek_p
 cost		= 10500
 inv_weight	= 4.41
+inv_grid_x			= 73
+inv_grid_y			= 4
 grip_removed_section = wpn_swd_nomag_1p29
-;cost				= 
-;inv_grid_x			= 
-;inv_grid_y			= 
 ;прицелы на боковую планку
 wpn_addon_scope		     = wpn_swd_nomag_grip_pso1
 wpn_addon_scope_1p59     = wpn_swd_nomag_grip_1p59
@@ -404,6 +412,8 @@ wpn_addon_mag_svd20      = wpn_swd_svd20_grip_1p29
 [wpn_swd_nomag_kobra]:wpn_swd_base,swd_kobra_p,swd_nomag_p
 cost		= 7500
 inv_weight	= 4.31
+inv_grid_x					= 53
+inv_grid_y					= 22
 ;прицелы на боковую планку
 wpn_addon_scope		     = wpn_swd_nomag_pso1
 wpn_addon_scope_1p59     = wpn_swd_nomag_1p59
@@ -418,10 +428,9 @@ wpn_addon_svd_scheek = wpn_swd_nomag_grip_kobra
 [wpn_swd_nomag_grip_kobra]:wpn_swd_base,swd_kobra_p,swd_nomag_p,swd_scheek_p
 cost		= 10500
 inv_weight	= 4.41
+inv_grid_x			= 73
+inv_grid_y			= 4
 grip_removed_section = wpn_swd_nomag_kobra
-;cost				= 
-;inv_grid_x			= 
-;inv_grid_y			= 
 ;прицелы на боковую планку
 wpn_addon_scope		     = wpn_swd_nomag_grip_pso1
 wpn_addon_scope_1p59     = wpn_swd_nomag_grip_1p59
@@ -438,6 +447,8 @@ wpn_addon_mag_svd20      = wpn_swd_svd20_grip_kobra
 [wpn_swd_svd10_pso1]:wpn_swd_base,swd_pso1_p,swd_svd10_p
 cost		= 7650
 inv_weight	= 4.52
+inv_grid_x					= 0
+inv_grid_y					= 0
 ;прицелы на боковую планку
 wpn_addon_scope_1p59     = wpn_swd_svd10_1p59
 wpn_addon_scope_1pn51    = wpn_swd_svd10_1pn51
@@ -452,10 +463,9 @@ wpn_addon_svd_scheek = wpn_swd_svd10_grip_pso1
 [wpn_swd_svd10_grip_pso1]:wpn_swd_base,swd_pso1_p,swd_svd10_p,swd_scheek_p
 cost		= 10650
 inv_weight	= 4.62
+inv_grid_x			= 73
+inv_grid_y			= 0
 grip_removed_section = wpn_swd_svd10_pso1
-;cost				= 
-;inv_grid_x			= 
-;inv_grid_y			= 
 ;прицелы на боковую планку
 wpn_addon_scope_1p59     = wpn_swd_svd10_grip_1p59
 wpn_addon_scope_1pn51    = wpn_swd_svd10_grip_1pn51
@@ -470,6 +480,8 @@ magazine_removed_section = wpn_swd_nomag_grip_pso1
 [wpn_swd_svd10_1pn51]:wpn_swd_base,swd_1pn51_p,swd_svd10_p
 cost		= 7650
 inv_weight	= 4.52
+inv_grid_x					= 0
+inv_grid_y					= 0
 ;прицелы на боковую планку
 wpn_addon_scope     	= wpn_swd_svd10_pso1
 wpn_addon_scope_1p59     = wpn_swd_svd10_1p59
@@ -484,10 +496,9 @@ wpn_addon_svd_scheek = wpn_swd_svd10_grip_1pn51
 [wpn_swd_svd10_grip_1pn51]:wpn_swd_base,swd_1pn51_p,swd_svd10_p,swd_scheek_p
 cost		= 10650
 inv_weight	= 4.62
+inv_grid_x			= 73
+inv_grid_y			= 0
 grip_removed_section = wpn_swd_svd10_1pn51
-;cost				= 
-;inv_grid_x			= 
-;inv_grid_y			= 
 ;прицелы на боковую планку
 wpn_addon_scope    		 = wpn_swd_svd10_grip_pso1
 wpn_addon_scope_1p59     = wpn_swd_svd10_grip_1p59
@@ -502,6 +513,8 @@ magazine_removed_section = wpn_swd_nomag_grip_1pn51
 [wpn_swd_svd10_1p59]:wpn_swd_base,swd_1p59_p,swd_svd10_p
 cost		= 7650
 inv_weight	= 4.52
+inv_grid_x					= 0
+inv_grid_y					= 0
 ;прицелы на боковую планку
 wpn_addon_scope		     = wpn_swd_svd10_pso1
 wpn_addon_scope_1pn51    = wpn_swd_svd10_1pn51
@@ -517,10 +530,9 @@ wpn_addon_svd_scheek = wpn_swd_svd10_grip_1p59
 [wpn_swd_svd10_grip_1p59]:wpn_swd_base,swd_1p59_p,swd_svd10_p,swd_scheek_p
 cost		= 10650
 inv_weight	= 4.62
+inv_grid_x			= 73
+inv_grid_y			= 0
 grip_removed_section = wpn_swd_svd10_1p59
-;cost				= 
-;inv_grid_x			= 
-;inv_grid_y			= 
 ;прицелы на боковую планку
 wpn_addon_scope		     = wpn_swd_svd10_grip_pso1
 wpn_addon_scope_1pn51    = wpn_swd_svd10_grip_1pn51
@@ -536,6 +548,8 @@ magazine_removed_section = wpn_swd_nomag_grip_1p59
 [wpn_swd_svd10_1p29]:wpn_swd_base,swd_1p29_p,swd_svd10_p
 cost		= 7650
 inv_weight	= 4.52
+inv_grid_x					= 0
+inv_grid_y					= 0
 ;прицелы на боковую планку
 wpn_addon_scope		     = wpn_swd_svd10_pso1
 wpn_addon_scope_1p59     = wpn_swd_svd10_1p59
@@ -551,9 +565,8 @@ wpn_addon_svd_scheek = wpn_swd_svd10_grip_1p29
 cost		= 10650
 inv_weight	= 4.62
 grip_removed_section = wpn_swd_svd10_1p29
-;cost				= 
-;inv_grid_x			= 
-;inv_grid_y			= 
+inv_grid_x			= 73
+inv_grid_y			= 0
 ;прицелы на боковую планку
 wpn_addon_scope		     = wpn_swd_svd10_grip_pso1
 wpn_addon_scope_1p59     = wpn_swd_svd10_grip_1p59
@@ -568,6 +581,8 @@ magazine_removed_section = wpn_swd_nomag_grip_1p29
 [wpn_swd_svd10_kobra]:wpn_swd_base,swd_kobra_p,swd_svd10_p
 cost		= 7650
 inv_weight	= 4.52
+inv_grid_x					= 0
+inv_grid_y					= 0
 ;прицелы на боковую планку
 wpn_addon_scope		     = wpn_swd_svd10_pso1
 wpn_addon_scope_1p59     = wpn_swd_svd10_1p59
@@ -583,9 +598,8 @@ wpn_addon_svd_scheek = wpn_swd_svd10_grip_kobra
 cost		= 10650
 inv_weight	= 4.62
 grip_removed_section = wpn_swd_svd10_kobra
-;cost				= 
-;inv_grid_x			= 
-;inv_grid_y			= 
+inv_grid_x			= 73
+inv_grid_y			= 0
 ;прицелы на боковую планку
 wpn_addon_scope		     = wpn_swd_svd10_grip_pso1
 wpn_addon_scope_1p59     = wpn_swd_svd10_grip_1p59
@@ -601,6 +615,8 @@ magazine_removed_section = wpn_swd_nomag_grip_kobra
 [wpn_swd_svd20_pso1]:wpn_swd_base,swd_pso1_p,swd_svd20_p
 cost		= 7680
 inv_weight	= 4.62
+inv_grid_x					= 53
+inv_grid_y					= 20
 ;прицелы на боковую планку
 wpn_addon_scope_1p59     = wpn_swd_svd20_1p59
 wpn_addon_scope_1pn51    = wpn_swd_svd20_1pn51
@@ -615,10 +631,9 @@ wpn_addon_svd_scheek = wpn_swd_svd20_grip_pso1
 [wpn_swd_svd20_grip_pso1]:wpn_swd_base,swd_pso1_p,swd_svd20_p,swd_scheek_p
 cost		= 10680
 inv_weight	= 4.72
+inv_grid_x			= 73
+inv_grid_y			= 2
 grip_removed_section = wpn_swd_svd20_pso1
-;cost				= 
-;inv_grid_x			= 
-;inv_grid_y			= 
 ;прицелы на боковую планку
 wpn_addon_scope_1p59     = wpn_swd_svd20_grip_1p59
 wpn_addon_scope_1pn51    = wpn_swd_svd20_grip_1pn51
@@ -633,6 +648,8 @@ magazine_removed_section = wpn_swd_nomag_grip_pso1
 [wpn_swd_svd20_1pn51]:wpn_swd_base,swd_1pn51_p,swd_svd20_p
 cost		= 7680
 inv_weight	= 4.62
+inv_grid_x					= 53
+inv_grid_y					= 20
 ;прицелы на боковую планку
 wpn_addon_scope		     = wpn_swd_svd20_pso1
 wpn_addon_scope_1p59     = wpn_swd_svd20_1p59
@@ -647,10 +664,9 @@ wpn_addon_svd_scheek = wpn_swd_svd20_grip_1pn51
 [wpn_swd_svd20_grip_1pn51]:wpn_swd_base,swd_1pn51_p,swd_svd20_p,swd_scheek_p
 cost		= 10680
 inv_weight	= 4.72
+inv_grid_x			= 73
+inv_grid_y			= 2
 grip_removed_section = wpn_swd_svd20_1pn51
-;cost				= 
-;inv_grid_x			= 
-;inv_grid_y			= 
 ;прицелы на боковую планку
 wpn_addon_scope		     = wpn_swd_svd20_grip_pso1
 wpn_addon_scope_1p59     = wpn_swd_svd20_grip_1p59
@@ -665,6 +681,8 @@ magazine_removed_section = wpn_swd_nomag_grip_1pn51
 [wpn_swd_svd20_1p59]:wpn_swd_base,swd_1p59_p,swd_svd20_p
 cost		= 7680
 inv_weight	= 4.62
+inv_grid_x					= 53
+inv_grid_y					= 20
 ;прицелы на боковую планку
 wpn_addon_scope		     = wpn_swd_svd20_pso1
 wpn_addon_scope_1pn51    = wpn_swd_svd20_1pn51
@@ -680,10 +698,9 @@ wpn_addon_svd_scheek = wpn_swd_svd20_grip_1p59
 [wpn_swd_svd20_grip_1p59]:wpn_swd_base,swd_1p59_p,swd_svd20_p,swd_scheek_p
 cost		= 10680
 inv_weight	= 4.72
+inv_grid_x			= 73
+inv_grid_y			= 2
 grip_removed_section = wpn_swd_svd20_1p59
-;cost				= 
-;inv_grid_x			= 
-;inv_grid_y			= 
 ;прицелы на боковую планку
 wpn_addon_scope		     = wpn_swd_svd20_grip_pso1
 wpn_addon_scope_1pn51    = wpn_swd_svd20_grip_1pn51
@@ -699,6 +716,8 @@ magazine_removed_section = wpn_swd_nomag_grip_1p59
 [wpn_swd_svd20_1p29]:wpn_swd_base,swd_1p29_p,swd_svd20_p
 cost		= 7680
 inv_weight	= 4.62
+inv_grid_x					= 53
+inv_grid_y					= 20
 ;прицелы на боковую планку
 wpn_addon_scope		     = wpn_swd_svd20_pso1
 wpn_addon_scope_1p59     = wpn_swd_svd20_1p59
@@ -713,10 +732,9 @@ wpn_addon_svd_scheek = wpn_swd_svd20_grip_1p29
 [wpn_swd_svd20_grip_1p29]:wpn_swd_base,swd_1p29_p,swd_svd20_p,swd_scheek_p
 cost		= 10680
 inv_weight	= 4.72
+inv_grid_x			= 73
+inv_grid_y			= 2
 grip_removed_section = wpn_swd_svd20_1p29
-;cost				= 
-;inv_grid_x			= 
-;inv_grid_y			= 
 ;прицелы на боковую планку
 wpn_addon_scope		     = wpn_swd_svd20_grip_pso1
 wpn_addon_scope_1p59     = wpn_swd_svd20_grip_1p59
@@ -731,6 +749,8 @@ magazine_removed_section = wpn_swd_nomag_grip_1p29
 [wpn_swd_svd20_kobra]:wpn_swd_base,swd_kobra_p,swd_svd20_p
 cost		= 7680
 inv_weight	= 4.62
+inv_grid_x					= 53
+inv_grid_y					= 20
 ;прицелы на боковую планку
 wpn_addon_scope		     = wpn_swd_svd20_pso1
 wpn_addon_scope_1p59     = wpn_swd_svd20_1p59
@@ -745,10 +765,9 @@ wpn_addon_svd_scheek = wpn_swd_svd20_grip_kobra
 [wpn_swd_svd20_grip_kobra]:wpn_swd_base,swd_kobra_p,swd_svd20_p,swd_scheek_p
 cost		= 10680
 inv_weight	= 4.72
+inv_grid_x			= 73
+inv_grid_y			= 2
 grip_removed_section = wpn_swd_svd20_kobra
-;cost				= 
-;inv_grid_x			= 
-;inv_grid_y			= 
 ;прицелы на боковую планку
 wpn_addon_scope		     = wpn_swd_svd20_grip_pso1
 wpn_addon_scope_1p59     = wpn_swd_svd20_grip_1p59
@@ -759,7 +778,12 @@ wpn_addon_mag_svd10      = wpn_swd_svd10_grip_kobra
 magazine_removed_section = wpn_swd_nomag_grip_kobra
 [wpn_swd_svd20_grip_kobra_repair]:wpn_6b1_repair
 
+
+
+
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
-;ОГСЕ
+;ОГСЕ 
+;- квест УБРАН wpn_svd_m1 доведенная снайперка Долговцев «Дальнобойщик» - "охренительная оптика и компенсатор отдачи"
+
 [cherep_svd]:wpn_swd_svd10_grip_1p59
 [cherep_svd_repair]:wpn_6b1_repair
