--- a/gamedata/config/weapons/w_toz34.ltx
+++ b/gamedata/config/weapons/w_toz34.ltx
@@ -34,8 +34,8 @@ single_handed		= 0
 slot 			= 2		; // secondary
 animation_slot		= 3		; type of the animation that will be used
 
-inv_name		= wpn-toz34
-inv_name_short	        = wpn-toz34
+inv_name		= wpn-toz-34
+inv_name_short	        = wpn-toz-34_s
 inv_weight		= 3.1
 
 inv_grid_width		= 6
@@ -75,8 +75,11 @@ shell_point				= 0.0, 0.183, 0.07
 fire_point              = 0.0, 0.183, 0.730
 fire_point2             = 0.0, 0.160, 0.730
 
-flame_particles		= weapons\generic_weapon05
-smoke_particles		   = _ecp\weapon_shotgun
+;flame_particles		= weapons\generic_weapon05
+flame_particles 			= amik\weapons\flame_particles\dtk_flame_particles_4
+;smoke_particles		   = _ecp\weapon_shotgun
+smoke_particles 			= amik\weapons\smoke_particles\smoke_particles_pump_01
+
 rpm_empty_click 	= 100
 
 PDM_disp_base 			= 2.2
@@ -86,12 +89,12 @@ PDM_crouch	 		= 1.0
 PDM_crouch_no_acc 		= 1.0
 
 ; ttc
-hit_power        		= 0.93
+hit_power        		= 0.82
 hit_impulse      		= 30
 hit_type 			= fire_wound
 hit_rate			= 2.0
 
-fire_distance            	= 100
+fire_distance           = 150	;100
 bullet_speed			= 350	;начальная скорость пули
 rpm                      	= 150
 ; end ttc
@@ -108,7 +111,7 @@ strap_orientation      		= -15,-9,110				; (3rd person view in degrees)
 strap_bone0					= bip01_spine2
 strap_bone1		= bip01_spine1
 
-visual                  = weapons\toz34\wpn_toz34_ext.ogf
+visual                  = weapons\toz34\wpn_toz34.ogf
 
 light_color		= 0.6,0.5,0.3
 light_range		= 6.0
@@ -125,16 +128,24 @@ zoom_enabled		= true
 
 ;------------------------------ O.G.S.E. sound remake -----------------------
 ;звуки
-snd_draw			= weapons\toz34\toz34_draw
-snd_holster			= weapons\generic_shotgun_holster
-snd_shoot			= weapons\toz34\toz34_shoot  
-snd_empty			= weapons\toz34\toz34_empty
-snd_reload			= weapons\toz34\toz34_reload
-snd_shoot_duplet	= weapons\toz34\toz34_shoot_both
-
-snd_shoot_1			= weapons\toz34\toz34_shoot
-snd_reload_1		= weapons\toz34\toz34_reload_one		;reload left
+;snd_draw			= weapons\toz34\toz34_draw
+;snd_holster			= weapons\generic_shotgun_holster
+;snd_shoot			= weapons\toz34\toz34_shoot  
+;snd_empty			= weapons\toz34\toz34_empty
+;snd_reload			= weapons\toz34\toz34_reload
+;snd_shoot_duplet	= weapons\toz34\toz34_shoot_both
+;
+;snd_shoot_1			= weapons\toz34\toz34_shoot
+;snd_reload_1		= weapons\toz34\toz34_reload_one		;reload left
 ;-----------------------------------------------------------------------------
+snd_draw 					= weapons\toz34\draw
+snd_holster 				= weapons\toz34\holster
+snd_shoot 					= weapons\toz34\shoot
+snd_empty 					= weapons\toz34\empty
+snd_reload 					= weapons\toz34\reload_lr
+snd_shoot_duplet 			= weapons\toz34\shoot
+snd_shoot_1					= weapons\toz34\shoot
+snd_reload_1				= weapons\toz34\reload_l		
 
 ;-----------------------------------------------------------------------------
 ;-- HUD DESCRIPTION
@@ -144,45 +155,59 @@ snd_reload_1		= weapons\toz34\toz34_reload_one		;reload left
 allow_inertion			= true
 
 shell_point		 	= 0.0, 0.0, 0.0
-fire_point 			= 0.0, 0.0, 0.06
-fire_point2 		= 0.0, 0.0, 0.06
-fire_bone 			= wpn_barrel_0
+shell_dir                   = 0.0, 1.0, 0.0
 
-orientation			= 3, -0.25, 0 ;0, 0, 0
-position			= 0, 0, 0
+fire_point 					= 0,0,0
+fire_point2 				= 0,0,0
+fire_bone 					= muzzle
+
+position                 	= -0.1475,-0.15,0.01
+orientation              	= 2,2,0
+
 visual 				= weapons\toz34\wpn_toz34_hud.ogf
 
-anim_idle			= idle
-anim_reload			= reload
-anim_draw			= draw
-anim_holster		= holster
-anim_shoot			= shoot1
-anim_shoot_both 	= shoot1
-anim_idle_aim		= idle_aim
-anim_idle_sprint	= idle_sprint
+anim_idle					= idle
+anim_idle_1					= idle
+anim_idle_2					= idle
 
-anim_reload_1		= reload_one
-anim_shoot_1		= shoot1
+anim_idle_aim				= idle_aim
+anim_idle_aim_1				= idle_aim
+anim_idle_aim_2				= idle_aim
 
-anim_idle_1			= idle
-anim_idle_2			= idle
+anim_zoomed_idle_1			= idle_aim
+anim_zoomedidle_2			= idle_aim
 
-anim_zoomed_idle_1	= idle_aim
-anim_zoomedidle_2	= idle_aim
+anim_idle_sprint			= idle_sprint
+
+anim_draw					= draw
+;anim_draw_1					= draw
+;anim_draw_2					= draw
+anim_draw_speed_k    = 2.1			;достал
+
+anim_holster				= holster
+;anim_holster_1				= holster
+;anim_holster_2				= holster
+anim_holster_speed_k = 3.2			;убрал
+
+anim_shoot					= shoot
+anim_shoot_1				= shoot1
+anim_shoot_both 			= shoot2
+
+anim_reload					= reload_lr 
+anim_reload_1				= reload_l
 
 ;-----------------------------------------------------------------------------
 ;смещения HUD для режима приближения
-zoom_offset			= -0.126600, 0.049000, 0.04
-zoom_rotate_x		= 0.039700
-zoom_rotate_y		= 0.068600
+zoom_offset					= -0.081,0.073,0.05
+zoom_rotate_x				= 0.037
+zoom_rotate_y				= 0.0349
 
-;-----------------------------------------------------------------------------
 ;прячем перекрестие прицела в зуме
 zoom_hide_crosshair		= true
 
 ;время поворота HUD (сек)
-zoom_rotate_time		= 0.5
-rotate_time			= 0.5
+zoom_rotate_time	= 0.25	;0.5
+rotate_time			= 0.25	;0.5
 
 [wpn_toz34_repair]
 tech_complication = 100
@@ -203,10 +228,10 @@ fire_dispersion_condition_factor = 7.5
 cam_relax_speed     = 8.0
 cam_max_angle_horz	= 12.0
 control_inertion_factor		= 1.13f
-description			= enc_weapons1_wpn-toz34_short
+description			= enc_weapons1_wpn-toz-34_short
 slot 				= 1
-inv_name			= wpn-toz34_short
-inv_name_short		= wpn-toz34_short
+inv_name			= wpn-toz-34_short
+inv_name_short		= wpn-toz-34_short_s
 fire_point          = 0.0, 0.183, 0.45
 fire_point2         = 0.0, 0.160, 0.45
 inv_weight			= 2.0
@@ -217,7 +242,7 @@ inv_grid_y		= 0
 
 hit_power        	= 0.75
 hit_impulse      	= 20
-fire_distance       = 50
+fire_distance       = 70	;50
 bullet_speed		= 300	;начальная скорость пули
 zoom_enabled		= false
 
@@ -226,8 +251,8 @@ PDM_disp_base 		= 2.4
 visual              = weapons\toz34\wpn_toz34_short.ogf
 hud                 = wpn_toz34_short_hud
 
-snd_reload			= weapons\toz34\toz34_short_reload
-snd_reload_1		= weapons\toz34\toz34_short_reload_one
+;snd_reload					= weapons\toz34\toz34_short_reload
+;snd_reload_1				= weapons\toz34\toz34_short_reload_one
 
 [wpn_toz34_short_hud]:wpn_shotgun_hud
 fire_point          = -0.15, -0.01, 0.06
@@ -251,22 +276,21 @@ $spawn          = "weapons\hunters_toz"
 inv_grid_x		= 26
 inv_grid_y		= 7
 
-inv_name		= wpn_toz34_m1
-inv_name_short	= wpn_toz34_m1
-description		= enc_weapons1_wpn_toz34_m1
+inv_name		= wpn_toz-34_m1
+inv_name_short	= wpn_toz-34_m1_s
+description		= enc_weapons1_wpn_toz-34_m1
 
 fire_dispersion_base	= 0.2
 control_inertion_factor	= 1.4f
 disp_rate 		= 1.7
-hit_power        		= 1.15
+hit_power       = 0.83
 
 visual          = weapons\toz34\wpn_toz34_m1.ogf
 
-scope_status	= 1
-scope_texture	= wpn\scopes\scope_var_4
-scope_zoom_factor	= 3.3 ; 28
-ironsight_zoom_factor		= 1.0
-
+;scope_status	= 1
+;scope_texture	= wpn\scopes\scope_var_4
+;scope_zoom_factor	= 3.3 ; 28
+;ironsight_zoom_factor		= 1.0
 
 hud				= hunters_toz_hud
 
@@ -275,4 +299,7 @@ visual			= weapons\toz34\wpn_toz34_m1_hud.ogf
 
 [hunters_toz_repair]
 tech_complication = 1000
-repair_compatibility = hunters_toz
+repair_compatibility = toz34
+
+[wpn_toz34_arena]:wpn_toz34; wpn_bm16
+$spawn             		= "weapons\arena\wpn_toz34_arena"
