--- a/gamedata/config/weapons/w_tt.ltx
+++ b/gamedata/config/weapons/w_tt.ltx
@@ -20,7 +20,7 @@ cform                    	= skeleton
 class                    	= WP_PM
 min_radius               	= 0
 max_radius               	= 30
-description					= enc_weapons1_wpn-tt
+description					= enc_weapons1_wpn-tt33
 
 ef_main_weapon_type = 0
 ef_weapon_type				= 5
@@ -42,8 +42,8 @@ single_handed				= 1
 slot 				 		= 1		; // primary
 animation_slot		 		= 1		; type of the animation that will be used
 
-inv_name					= wpn_tt
-inv_name_short				= wpn_tt
+inv_name					= wpn_tt33
+inv_name_short				= wpn_tt33_s
 inv_weight				= 0.7
 
 inv_grid_width				= 2
@@ -58,7 +58,7 @@ kill_msg_height		= 27
 
 ;-----------------------------------------------------------------------------------
 ;базовая дисперсия
-fire_dispersion_base		= 0.35  ;угол (в градусах) базовой дисперсии оружия (оружия зажатого в тисках)
+fire_dispersion_base		= 0.28  ;0.35 угол (в градусах) базовой дисперсии оружия (оружия зажатого в тисках)
 ;control_inertion_factor		= 1.12f
 
 ;отдача
@@ -100,7 +100,7 @@ hit_impulse		 	= 100
 hit_type 			= fire_wound
 ;hit_rate			= 1.85
 
-fire_distance       = 75
+fire_distance       = 50
 bullet_speed		= 480			
 rpm                 = 200
 ; end ttc
@@ -160,21 +160,14 @@ silencer_light_var_color	= 0.05
 silencer_light_var_range	= 0.5
 silencer_light_time 		= 0.2
 
-;------------------------------ O.G.S.E. sound remake -----------------------
-;snd_draw			= weapons\fort_draw
-;snd_holster			= weapons\generic_holster
-;snd_shoot			= weapons\tt_shot
-;snd_empty			= weapons\pistol_empty
-;snd_reload			= weapons\tt_reload, 0.8
-;snd_close			= weapons\generic_close
-;snd_silncer_shot	= weapons\p_silent4
-;-----------------------------------------------------------------------------
+
 snd_draw					= weapons\tt33\draw
 snd_holster					= weapons\tt33\holster
 snd_shoot					= weapons\tt33\shoot
 snd_empty					= weapons\tt33\empty
 snd_reload					= weapons\tt33\reload
-snd_close					= weapons\tt33\close
+;snd_close					= weapons\tt33\close
+snd_close					= weapons\pm\close
 snd_silncer_shot		    = weapons\tt33\shoot_sil
 
 ;-----------------------------------------------------------------------------
@@ -232,35 +225,5 @@ rotate_time					= 0.15
 
 
 [wpn_tt_repair]
-tech_complication = 350
-repair_compatibility = tt
-
-
-
-;--------------------------------------------------------------------------------
-[wpn_tt_m1]:wpn_tt
-$spawn              = "weapons\tt_m1"					; option for Level Editor
-
-fire_dispersion_base	= 0.12
-cam_relax_speed         = 7.5
-cam_dispersion          = 4.5
-cam_max_angle			= 70.0
-cam_max_angle_horz		= 7.0
-cam_step_angle_horz		= 1.0
-
-fire_distance       = 100
-
-hud                 = wpn_tt_m1_hud
-
-scope_status		= 1
-scope_texture		= wpn\scopes\scope_ps
-scope_zoom_factor	= 2.0
-ironsight_zoom_factor		= 1.0
-
-
-[wpn_tt_m1_hud]:wpn_tt_hud
-;visual              = weapons\tt\wpn_tt_m1_hud.ogf
-
-[wpn_tt_m1_repair]
 tech_complication = 350
 repair_compatibility = tt
