--- a/gamedata/config/weapons/w_vintorez.ltx
+++ b/gamedata/config/weapons/w_vintorez.ltx
@@ -1,7 +1,13 @@
 ;--------------------------------------
 ; винтовка снайперская специальная ВСС "Винторез" (6П29)
 ;--------------------------------------
-[wpn_vintorez]:identity_immunities,base_wpn_zoom
+;(C) k01jan. Модель и текстура SAM61, Paul68Rageous, Millenia, правки ПСЕВДО-S.T.A.L.K.E.R.; Скелет и анимации - Ивашутник, перенос на ТЧ - SanekED, правки и новые анимки - L@r1ng1t$, ПСЕВДО-S.T.A.L.K.E.R.
+;--------------------------------------
+;Баллистика 9х39 приближена к реальной (k01jan, W.A.S.P., на основе Sniper Addon АМК), дальномер прицельной сетки размечен с учётом игровых расстояний (W.A.S.P.):
+;основной (верхний) угольник для стрельбы до 40 метров
+;дополнительные угольники (ниже шкалы боковых поправок по вертикали) для прицеливания при стрельбе на 60, 80, 120 и 160 м;
+;--------------------------------------
+[wpn_vss]:identity_immunities,base_wpn_zoom
 GroupControlSection		= spawn_group
 discovery_dependency		= 
 $spawn				= "weapons\vintorez"				; option for Level Editor
@@ -12,14 +18,14 @@ cform				= skeleton
 class				= WP_VINT
 min_radius			= 0
 max_radius			= 180
-description			= enc_weapons1_wpn-vintorez
+description			= enc_weapons1_wpn-vss		;enc_weapons1_wpn-vintorez
 
-ef_main_weapon_type		= 3
-ef_weapon_type			= 7						;8
+ef_main_weapon_type		= 3			;3		;тип оружия (0 - пистолет, 1 - дробовик, 2 - автомат, 3 - винтовка, 4 - гранатомёт)
+ef_weapon_type			= 7			;7		;тип стрельбы NPC: 5 - стрелять по пистолетному - быстро и почти не целясь, 6 - как из автомата (очередями), 7 - прицелиться и выстрелить одиночным, 8 - долго целиться и выстрелить (снайпер), 9 - для гранатометов РПГ-7 и РГ6. Чем выше цифра, тем предпочтительней для NPC
 
 ;--- scope weapons -----------------------------------------------------------------
-holder_range_modifier		= 2.15
-holder_fov_modifier		= 0.7
+holder_range_modifier	= 1.0		;ВСС 2.15	;во сколько раз увеличивается eye_range ботов. Он производит умножение дальности обзора ботов с данным оружием в руках.
+holder_fov_modifier		= 1.0		;ВСС 0.7	;во сколько раз увеличивается eye_fov ботов. При редактировании этого параметра случаются проблемы с обзором NPC - могут не увидеть монстра в упор.
 ;-----------------------------------------------------------------------------------
 
 cost				= 14200
@@ -27,12 +33,20 @@ weapon_class			= sniper_rifle
 
 ammo_elapsed			= 10
 ammo_mag_size			= 10
-ammo_class			= ammo_9x39_pab9, ammo_9x39_ap
-fire_modes			= -1, 1
+ammo_class			= ammo_9x39_ap, ammo_9x39_pab9
+fire_modes			= 1, 0, -1			;Авто, одиночные, пред (по кругу)
 	
-inv_name			= wpn-vintorez
-inv_name_short			= wpn-vintorez
-inv_weight			= 3.22						; вес без прицела 2,6 кг.
+inv_name			= wpn-vss					;wpn-vintorez
+inv_name_short		= wpn-vss_s					;wpn-vintorez
+inv_weight			= 2.6
+;Масса, кг:	
+;2,6 (без магазина и прицела)
+;3,7 (заряженная и с прицелом ПСО-1-1)
+;2.6всс+0.15маг10 (2,75) +0.24патроны (2,99) +0.6псо	=3.6
+;2.6всс+0.17маг20 (2,77) +0.5патроны (3,27) +0.6псо		=3.87
+;6Л24 - магазин для винтовки 6П29 (ВСС, 10 патронов), пустой 0,15 снаряженный 0,38 (при массе патрона 23,5 г.)
+;6Л25 - магазин для автомата 6П30 (ВАЛ, 20 патронов), пустой 0,17 снаряженный 0,64 (при массе патрона 23,5 г.)
+;Масса патрона СП5 - 23,2 г.,  СП6 - 23,0 г., ПАБ-9 - 23,8 г.
 
 inv_grid_width		= 5
 inv_grid_height		= 2
@@ -52,57 +66,64 @@ animation_slot			= 8						; type of the animation that will be used
 
 ;-----------------------------------------------------------------------------------
 ;базовая дисперсия
-fire_dispersion_base			= 0.050		;угол (в градусах) базовой дисперсии оружия (оружия зажатого в тисках)
+fire_dispersion_base		= 0.1		;ПЫС-АС 0.12 ЧИТ-ВСС ВСС 0.1 ;угол (в градусах) базовой дисперсии оружия (оружия зажатого в тисках)
 control_inertion_factor			= 1.04f
 disp_rate				= 1.8
-
-cam_relax_speed				= 4.75		;скорость возврата в исходное положение
+cam_relax_speed				= 4.75		;ЧИТ-ВСС 4.75	;скорость возврата в исходное положение
 cam_relax_speed_ai			= 120.75
-cam_dispersion				= 0.125		;увеличения угла (в градусах) с каждым выстрелом
+cam_dispersion				= 0.125		;ЧИТ-ВСС 0.125 	;увеличения угла (в градусах) с каждым выстрелом
 cam_dispersion_inc			= 0.2		;увеличениe cam_dispersion с каждым выстрелом
 cam_dispertion_frac			= 1.0		;ствол будет подыматься на cam_dispersion*cam_dispertion_frac +- cam_dispersion*(1-cam_dispertion_frac)
-cam_max_angle				= 9.0		;максимальный угол отдачи
-cam_max_angle_horz			= 5.0		;(degree) maximum shot horizontal degree 
-cam_step_angle_horz			= 0.4		; 0.3	;(degree) size of step camera moved in horizontal position while shooting
-fire_dispersion_condition_factor	= 4.2		;увеличение дисперсии в процентах при максимальном износе 
-misfire_probability			= 0.002		;вероятность осечки при максимальном износе 
-misfire_condition_k			= 0.05
-condition_shot_dec			= 0.0003	;увеличение износа при каждом выстреле
+cam_max_angle				= 3.0		;ЧИТ-ВСС 3.0	;максимальный угол отдачи
+cam_max_angle_horz			= 1.0		;ЧИТ-ВСС 1.0	;(degree) maximum shot horizontal degree 
+cam_step_angle_horz			= 0.4		;(degree) size of step camera moved in horizontal position while shooting
+fire_dispersion_condition_factor	= 4.2	;увеличение дисперсии в процентах при максимальном износе. !!!Не в градусах - это множитель. 5 - это 5000% разброса при максимальном износе.  Для пистолетов рекомендуется 3 - 4, автоматов 2 - 2.5, снайперок 1 - 1.5
+misfire_probability			= 0.0015	;ЧИТ-ВСС 0.002	;вероятность осечки при максимальном износе 
+misfire_condition_k			= 0.05		; коэффициент 0.05 - проще не трогать! Может понабиться только для оружия с небольшим настрелом типа ВСС.
+condition_shot_dec			= 0.0002	;ВСС 0.0003 ;увеличение износа при каждом выстреле
 ;-----------------------------------------------------------------------------------
 
 direction			= 0, 0, 1
 
 fire_point			= 0.000, 0.127, 0.570
 
-smoke_particles			= weapons\generic_shoot_00
+;smoke_particles			= weapons\generic_shoot_00
+smoke_particles					= amik\weapons\smoke_particles\smoke_particles_01
 
 shell_point			= 0.000, 0.127, 0.100
 shell_dir			= 0.0, 1.0, 0.0
-shell_particles			= weapons\arsenal_shells1
+shell_particles	 			= amik\weapons\9x39_shells_r
 
 rpm_empty_click			= 350
 
-PDM_disp_base			= 1.0
-PDM_disp_vel_factor		= 1.2
-PDM_disp_accel_factor		= 1.2
-PDM_crouch			= 1.0
-PDM_crouch_no_acc		= 1.0
+PDM_disp_base			= 1.0	;множитель, на который умножается базовая дисперсия оружия, когда ГГ стоит на месте в полный рост;
+PDM_disp_vel_factor		= 1.2	;множитель, на который умножается базовая дисперсия оружия, когда ГГ крутит оружием или бежит;
+PDM_disp_accel_factor	= 1.2	;множитель, на который умножается базовая дисперсия оружия, когда ГГ бежит в спринте;
+PDM_crouch				= 1.0	;множитель, на который умножается базовая дисперсия оружия, когда ГГ идет пригнувшись;
+PDM_crouch_no_acc		= 1.0	;множитель, на который умножается базовая дисперсия оружия, когда ГГ стоит на месте, пригнувшись;
 
 ; ttc
 hit_power			= 0.80
-hit_impulse			= 25
+hit_impulse			= 25		;импульс пули (сила, которую летящая пуля передает жертве, влияет на поведение ragdoll-тела. Чем больше поставишь, тем дальше улетит. Если сделать большое отрицательное значение, то жертвы будут прилетать к ГГ)
 hit_type			= fire_wound
 hit_rate			= 1.95
 
-fire_distance			= 600
-bullet_speed			= 370						;начальная скорость пули (реальная скорость 290 м/с)
-rpm				= 600
+fire_distance	= 200   ;ОГСЕ 600 КОЭФФИЦИЕНТ максимальной дистанции  полета пули (затем она падает на землю и исчезает), реальная 200-400 м (баллистическая кривая должна быть более кривая, 1хрен дистанция остаётся больше А-Лайфа - в ОГСЕ switch_distance 150). Логично прописать значение эффективного огня(пистолеты-пулеметы 50-200м, пистолеты 50м, дробовики 30м и нож полметра)
+bullet_speed	= 210	;ОГСЕ 370 КОЭФФИЦИЕНТ начальной скорости пули, реальная 280-295 м/с
+rpm				= 600	;реальная 40-100 в/мин
 ; end ttc
+;попадания дают фонтанчик партиклов из земли в течение трех секунд
+;похоже сильно упала скорость пуль и они из-за этого не рикошетят и время контакта с землей у них стало намного выше, из-за чего такие фонтаны партиклов
+;"фирменный" рикошет ОГСЕ не настраиваемый, это все в движке. Считается по уравнению в котором учтены скорость пули, пробиваемость поверхности и угол столкновения.
+;Баллистическая кривая, по моим практическим наблюдениям, никак не зависит от fire_distance. Баллистика зависит от air_resistance_k и bullet_speed (возможно и от gravity_const - не пробовал).
+;В первоисточнике fire_distance - maximum fire distance that bullet can fly. Я это понимаю: до какой макс дистанции стоит "обсчитывать" пулю. Т.е. простой ограничитель (с точки зрения движка игры), чтобы снизить нагрузку на ЦПУ.
 
-use_aim_bullet			= true						;Поддерживается ли первая суппер пуля
+
+
+use_aim_bullet		= true						;Поддерживается ли первая суппер пуля
 time_to_aim			= 1.0
 
-hud				= wpn_vintorez_hud
+hud				= wpn_vss_hud
 normal				= 0, 1, 0
 position			= -0.026, -0.084, 0.000
 orientation			= 0, 0, 0
@@ -118,13 +139,50 @@ visual				= weapons\vintorez\wpn_vintorez.ogf
 light_disabled			= true
 
 ;addons
-scope_status			= 1
+scope_status			= 2
 silencer_status			= 1
-grenade_launcher_status		= 0
+grenade_launcher_status	= 0
+
+;Сменные аддоны ОГСЕ д/б: 
+scope_name = wpn_scope
+scope_x						= 62
+scope_y						= 10
 
 zoom_enabled			= true
-scope_zoom_factor		= 4.0
-scope_texture			= wpn\scopes\scope_pso-1_vint
+;scope_texture        = wpn\scopes\scope_pso-1-1	;ПЕРЕКРЫВАЕТСЯ ПРИЦЕЛОМ
+;scope_zoom_factor    = 4.0							;ПЕРЕКРЫВАЕТСЯ ПРИЦЕЛОМ
+;scope_lense_fov_factor = 3.99	 ПЕРЕКРЫТЬ ПРИЦЕЛОМ НЕ УДАЁТСЯ (???ПЕРЕНЕСТИ В config/defines.ltx)
+;от ПРИЦЕЛА scope_lense_fov_factor НЕ НАСЛЕДУЕТСЯ (ЛИНЗА ЧЁРНАЯ), УКАЗЫВАТЬ НУЖНО ЯВНО - В СТВОЛЕ 
+;ПОПРАВЛЕНО	KRodin - НАСЛЕДУЕТСЯ от прицела
+;тут не работает (прицел перекрывает) scope_lense_fov_factor = 2.0	
+
+;+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+;подсветки предметов в инвентарных окнах из ЗП (Metro UI - "плиточная" подсветка ячейки):
+;выбранного предмета, доступных предмету слотов при наведении курсора на предмет, патронов/аддонов при клике по оружию (и наоборот)
+;--!при использовании "старого" ТЧ-стиля (подсветка иконки, а не ячейки) - ТОЛЬКО патронов/аддонов при клике по оружию (и наоборот)
+;+!! и аддонов тоже!
+;++! а если перекрасить - то и ячеек!!
+;фейк-предметы типа новых аддонов не учитываются, тк не движковые, поэтому их надо дополнительно прописать в секции ствола
+;опции по настройке подсветок - в external.ltx
+;
+;
+;для ВСС свободны 4 кости mount2, scope6, scope7, scope8
+;не задействованы ВАРИАНТЫ - фейки прицелов (ручки) wpn_addon_magnifier, wpn_addon_nightvision, wpn_addon_irnv
+;не задействованы ВАРИАНТЫ - прицелы wpn_addon_scope_pvs, wpn_addon_scope_irnv,
+;на тест для 9А-91 в модели 1 магазин wpn_addon_mag_vsk20, зато дополнительно есть приклад (фейк-ручка wpn_addon_mag_vsk20 - лучше не ставить аддоном, а через апгрейд), увеличитель, ПНВ и ИК насадки
+;
+;тут пока не прописаны highlight_addons = wpn_addon_grip, wpn_addon_svd_scheek, 
+;тут готовы wpn_addon_mag_vss10, wpn_addon_mag_as20, wpn_addon_scope_pso1m21, wpn_addon_scope_kobra, wpn_addon_scope_1pn51, wpn_addon_mtk83, wpn_addon_acog, wpn_addon_scope_eotech
+;
+;прицелы (не фейки) должны, по идее, подсвечиваться без явного ТУТ указания
+; именно ФЕЙКИ надо - они в инвентаре ОГСЕ.
+;а вообще лучше бы для каждой секции уникальный набор аддонов вручную ТУТ задавать
+;ПРОБУЕМ пока один набор на всех
+highlight_addons = fake_wpn_addon_grip, fake_wpn_addon_mag_vss10, fake_wpn_addon_mag_as20, fake_wpn_addon_scope_pso1m21, fake_wpn_addon_scope_kobra, fake_wpn_addon_scope_1pn51, fake_wpn_addon_mtk83, fake_wpn_addon_acog, fake_wpn_addon_scope_eotech
+;
+;+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+;Флаг, позволяющий для всех предметов реагировать на флаг FRuckDefault. Если флаг установлен, хабар будет подбираться в рюкзак, а не в слот по умолчанию.
+default_to_ruck = false
 
 ;-----------------------------------------------------------------------------
 hit_probability_gd_novice	= 0.80						; точность стрельбы,      
@@ -141,12 +199,13 @@ snd_shoot2					= weapons\val\val_shoot
 snd_shoot3					= weapons\val\val_shoot1
 snd_empty					= weapons\vintorez\vintorez_empty
 snd_reload					= weapons\vintorez\vintorez_reload, 0.8
+;+KRodin snd_fire_modes				= weapons\firemode_switch
 ;-----------------------------------------------------------------------------
 
 ;-----------------------------------------------------------------------------
 ;-- HUD DESCRIPTION
 ;-----------------------------------------------------------------------------
-[wpn_vintorez_hud]
+[wpn_vss_hud]
 allow_inertion			= true
 
 shell_point			= 0.00, 0.00, -0.90
@@ -156,22 +215,37 @@ fire_point			= 0.00, 0.01, -0.70
 fire_bone			= muzzle
 
 orientation			= 0, 1, 0
-position			= 0.13, -0.06, -0.03
+;position = (x,y,z) = ( x move right -x move left, y move up -y move down, z move forward -z move backwards)
+;position			= 0.13, -0.06, -0.03
+position			= 0.16, -0.06, -0.03
 visual				= weapons\vintorez\wpn_vintorez_hud.ogf
 
 anim_idle				= idle
-anim_idle_aim				= idle_aim
-anim_reload				= reload
+anim_idle_aim			= idle_aim
+anim_reload				= reload_vss
+;anim_reload				= reload_as20		;?правленая20 (reload_val 50)
 anim_draw				= draw
-anim_holster				= holster
+anim_holster			= holster
 anim_shoot				= shoot
-anim_idle_sprint			= idle_sprint
+anim_idle_sprint		= idle_sprint	;тоже не айс
+;anim_idle_sprint		= idle_sprint1 	;ствол приподнят (выше-ближе), неестественная раскачка (медленней)
+;-idle_hidden ;ствол задран вверх "по-спецназерски"  (только для NLC 07)
 
 ;-----------------------------------------------------------------------------
 ;смещения HUD для режима приближения
-zoom_offset			= -0.1339, 0.0445, -0.1000
-zoom_rotate_x			= 0.0040
-zoom_rotate_y			= 0.0013
+;;;;;;;;;;;;;;;;;;;;;;Альтернативное прицеливание ОГСР через штатный механический прицел ВСС
+;смещения HUD для режима приближения (прицеливание без увеличения)
+;ствол без установленного гранатомёта
+;second_zoom_offset			= -0.129400,0.070500,-0.264000
+second_zoom_offset			= -0.159400,0.070500,-0.264000
+second_zoom_rotate_x		= 0.022000
+second_zoom_rotate_y		= -0.000200
+;;;;;;;;;;;;;;;;;;;;;;Прицеливание через оптику (перекрывается текстуроЙ)
+;прицеливание по умолчанию (по-старому, через "оптику" - ТЕКСТУРОЙ), альтернативное ОГСЕ (мех.прицел, МОДЕЛЬЮ) сбрасывается при установке любого аддона, включая ПЫС-подствол)
+;zoom_offset			= -0.129400,0.070500,-0.264000
+zoom_offset			= -0.159400,0.070500,-0.264000
+zoom_rotate_x		= 0.022000
+zoom_rotate_y		= -0.000200
 ;-----------------------------------------------------------------------------
 
 ;прячем перекрестие прицела в зуме
@@ -181,35 +255,12 @@ zoom_hide_crosshair		= true
 zoom_rotate_time		= 0.3
 rotate_time			= 0.3
 
-[wpn_vintorez_repair]
+[wpn_vss_repair]
 tech_complication = 700
 repair_compatibility = vintorez
 
-[wpn_vintorez_m1]:wpn_vintorez
-$spawn				= "weapons\vintorez_m1"
-inv_name			= wpn-vintorez_m1
-inv_name_short			= wpn-vintorez_m1
-description			= enc_weapons1_wpn-vintorez_m1
 
-inv_grid_x				= 0
-inv_grid_y				= 6
-
-ammo_elapsed		    = 20
-ammo_mag_size		    = 20
-
-disp_rate				= 1.5
-fire_dispersion_condition_factor	= 4
-condition_shot_dec			= 0.0002
-
-time_to_aim				= 0.8	
-
-scope_status			= 2
-scope_zoom_factor		= 81.8	; 80
-
-scope_name					= wpn_addon_scope
-scope_x						= 59				; offset in inventory icon
-scope_y						= 6
-
-[wpn_vintorez_m1_repair]
-tech_complication = 800
-repair_compatibility = vintorez
+;-----------------------------------------------------------------------------------
+;Сменные аддоны ОГСЕ 
+#include "w_vintorez_ex.ltx"
+;-----------------------------------------------------------------------------------
