--- a/gamedata/config/weapons/w_wincheaster1300.ltx
+++ b/gamedata/config/weapons/w_wincheaster1300.ltx
@@ -1,9 +1,11 @@
-; Гладкоствольное ружье Winchester 1300
-;--------------------------------------
-[wpn_wincheaster1300]:identity_immunities,base_wpn_zoom
+; Обрез гладкоствольного ружья Winchester 1887
+;-----------------------------------------------------------------------------
+;Боевой винчестер. В подствольную емкость для патронов был встроен небольшой фрагмент артефакта "Грави", ориентированный таким образом, чтобы увеличивать скорость полета пули.
+;-----------------------------------------------------------------------------
+[wpn_winchester_m1]:identity_immunities,base_wpn_zoom
 GroupControlSection			= spawn_group
 discovery_dependency 		= 
-$spawn                   	= "weapons\winchester1300"					; option for Level Editor
+$spawn             = "weapons\uniq\wpn_winchester_m1"					; option for Level Editor
 $npc			 			= on				; option for Level Editor
 $prefetch 		 			= 8
 scheduled                	= off              ; option for ALife Simulator
@@ -11,8 +13,8 @@ cform                    	= skeleton
 class                    	= WP_SHOTG
 min_radius               	= 0
 max_radius               	= 60
-description					= enc_weapons1_wpn-wincheaster1300
-
+description					= enc_weapons1_wpn-wincheaster1887
+;description		= enc_weapons1_wpn-winchester_m1
 ef_main_weapon_type			= 1
 ef_weapon_type				= 7
 
@@ -23,16 +25,16 @@ holder_fov_modifier		= 1.3
 
 tri_state_reload			= on
 
-cost					 	= 3500
+cost					 	= 4000
 weapon_class			 	= shotgun
 
-ammo_elapsed		 		= 7
-ammo_mag_size		 		= 7
+ammo_elapsed		 		= 5
+ammo_mag_size		 		= 5
 ammo_class		 			= ammo_12x70_kart, ammo_12x76_zhekan
 
 ;-----------------------------------------------------------------------------------
 ;базовая дисперсия
-fire_dispersion_base		= 0.3  ;угол (в градусах) базовой дисперсии оружия (оружия зажатого в тисках)
+fire_dispersion_base		= 0.4	;0.3  ;угол (в градусах) базовой дисперсии оружия (оружия зажатого в тисках)
 disp_rate 			= 1.8
 
 ;отдача
@@ -48,23 +50,25 @@ cam_step_angle_horz	= 1.5	;(degree) size of step camera moved in horizontal posi
 fire_dispersion_condition_factor = 7	;увеличение дисперсии в процентах при максимальном износе 
 misfire_probability 		= 0.0	    ;вероятность осечки при максимальном износе 
 misfire_condition_k			= 0.05
-condition_shot_dec 			= 0.0001	;увеличение износа при каждом выстреле
+condition_shot_dec 			= 0.0005	;0.0001 увеличение износа при каждом выстреле 
 ;-----------------------------------------------------------------------------------
 
 hand_dependence 	 		= 1
 single_handed				= 0
 
-slot 				 		= 2		; // secondary
-animation_slot		 		= 9		; type of the animation that will be used
+slot 				 		= 1
+animation_slot		 		= 9
 
-inv_name					= wpn-wincheaster1300
-inv_name_short				= wpn-wincheaster1300
-inv_weight				= 3.06
+inv_name					= wpn-wincheaster1887
+;inv_name	        = wpn-winchester_m1
+inv_name_short				= wpn-wincheaster1887_s
+;inv_name_short		= wpn-winchester_m1
+inv_weight				= 3.6
 
-inv_grid_width				= 5
-inv_grid_height				= 2
-inv_grid_x					= 29
-inv_grid_y					= 30
+inv_grid_width				= 4		;5
+inv_grid_height				= 1		;2
+inv_grid_x					= 59	;29 position and size are in terms of 64x64 squares (след.=64+5ячеек)
+inv_grid_y					= 18	;30
 
 kill_msg_x			= 171
 kill_msg_y			= 104
@@ -72,12 +76,15 @@ kill_msg_width		= 75
 kill_msg_height		= 20
 
 direction                	= 0, 0, 1
-shell_point				 	= 0.0, 0.180, 0.647
+;shell_point				 	= 0.0, 0.180, 0.647
+shell_point    = 0.0, 0.0, 0.0
+
 fire_point               	= 0.0, 0.158, 0.647
 fire_point2              	= 0.0, 0.158, 0.647
 
-flame_particles		   		= weapons\generic_weapon05
-smoke_particles		   		= _ecp\weapon_shotgun
+;flame_particles		   		= weapons\generic_weapon05
+flame_particles				= amik\weapons\flame_particles\flame_particles_00
+smoke_particles		   		= amik\weapons\smoke_particles\smoke_particles_pump_01
 rpm_empty_click 	   		= 200
 
 PDM_disp_base 			= 2.2
@@ -88,17 +95,17 @@ PDM_crouch_no_acc 		= 1.0
 
 ; ttc
 
-hit_power        			= 0.94
-hit_impulse      			= 30
+hit_power        			= 0.9	;95 много
+hit_impulse      			= 100			;900	;30
 hit_type 					= fire_wound
 hit_rate			= 2.0
 
 fire_distance            	= 100
-bullet_speed			 	= 340			;начальная скорость пули
-rpm                      	= 70            ;60 = 1 секунда
+bullet_speed			 	= 600			;начальная скорость пули 340
+rpm                      	= 45	;W.A.S.P., было 35	;30 25 65     ;60 = 1 секунда
 ; end ttc
 
-hud                      	= wpn_winchester1300_hud
+hud                      	= wpn_winchester_m1_hud
 normal                   	= 0, 1, 0
 position 			= -0.024, -0.097, 0
 orientation              	= 0, 0, 0      ;значение устанавливается в градусах
@@ -110,8 +117,8 @@ strap_orientation      		= -15,-9,110				; (3rd person view in degrees)
 strap_bone0					= bip01_spine2
 strap_bone1					= bip01_spine1
 
-startup_ammo             	= 7
-visual                   	= weapons\winchester1300\wpn_winchester1300.ogf
+startup_ammo             	= 5
+visual 						= weapons\w1887\wpn_win1887.ogf
 
 light_color		 			= 0.6,0.5,0.3
 light_range		 			= 6.0
@@ -130,7 +137,8 @@ zoom_enabled				= true
 ;звуки
 snd_draw					= weapons\w1300\w1300_draw
 snd_holster					= weapons\generic_shotgun_holster
-snd_shoot					= weapons\w1300\w1300_shot  
+;snd_shoot					= weapons\w1300\w1300_shot
+snd_shoot					= weapons\w1300\w1300_m1_shot 
 snd_empty					= weapons\w1300\w1300_empty
 snd_reload					= weapons\toz34\toz34_reload
 snd_shoot_duplet			= weapons\toz34\toz34_shoot_both
@@ -142,36 +150,50 @@ snd_close_weapon			= weapons\w1300\w1300_close_2
 ;-----------------------------------------------------------------------------
 ;-- HUD DESCRIPTION
 ;-----------------------------------------------------------------------------
-[wpn_winchester1300_hud]
+[wpn_winchester_m1_hud]
 
 allow_inertion			= true
 
-shell_point		 	= 0.0, 0.0, 0.0
-fire_point 			= 0.000000, 0.125000, 0.315000
-fire_point2			= 0.000000, 0.125000, 0.315000
-fire_bone 			= wpn_body
-orientation 		= 2, -3, 0
-position 			= 0, 0.005, 0
-visual 				= weapons\winchester1300\wpn_winchester1300_hud.ogf
+;fire_point			= 0.000000,0.050000,0.100000
+;fire_point2			= 0.000000, 0.0000, 0.0000
+;fire_bone 			= wpn_body
+
+fire_point   = 0.000000,0.00000,0.00000
+fire_point2  = 0.000000, 0.0000, 0.0000
+fire_bone    = muzzle
+
+;position			= 0.160000,-0.220000,0.220000
+;orientation			= 4.577564,4.005540,0.000000
+
+position   = -0.091000,-0.130000,0.190000
+orientation   = 2.290610,2.290610,0.000000
+
+visual 				= weapons\w1887\wpn_win1887_hud.ogf
 
 anim_idle			= idle
-anim_reload			= draw
+anim_reload			= shoot800		;shoot
 anim_draw			= draw
-anim_holster			= holster
-anim_shoot			= shoot
-anim_shoot_both 		= shoot
-anim_idle_aim			= idle_aim
-anim_idle_sprint		= idle_sprint
+anim_holster		= holster
+anim_shoot			= shoot			;каждый
+;-anim_shot_last		= 
+anim_shoot_both 	= shoot		;? не последний
+anim_idle_aim		= aim
+anim_idle_sprint	= sprint
 
-anim_open_weapon		= reload1
-anim_add_cartridge		= reload2
-anim_close_weapon		= reload3
+anim_open_weapon	= reload_start
+anim_add_cartridge	= reload_act	
+anim_close_weapon	= reload_close
 
 ;-----------------------------------------------------------------------------
 ;смещения HUD для режима приближения
-zoom_offset			= -0.1202, 0.0405, -0.05
-zoom_rotate_x		= 0.0007
-zoom_rotate_y		= 0.034900
+;zoom_offset			= -0.177400,0.075300,-0.297001
+;zoom_offset			= -0.177400,0.075300,-0.223002
+;zoom_rotate_x		= 0.057000
+;zoom_rotate_y		= 0.080500
+
+zoom_offset   = -0.100800,0.048400,-0.190000
+zoom_rotate_x  = 0.027000
+zoom_rotate_y  = 0.040000
 
 ;-----------------------------------------------------------------------------
 ;прячем перекрестие прицела в зуме
@@ -181,36 +203,6 @@ zoom_hide_crosshair	= true
 ;zoom_rotate_time	= 0.5
 rotate_time			= 0.5
 
-[wpn_wincheaster1300_repair]
-tech_complication = 250
-repair_compatibility = wincheaster
-
-;-----------------------------------------------------------------------------
-;Боевой винчестер
-;-----------------------------------------------------------------------------
-[wpn_winchester_m1]:wpn_wincheaster1300	
-$spawn             	= "weapons\uniq\wpn_winchester_m1"	
-description			= enc_weapons1_wpn-winchester_m1
-inv_name	        = wpn-winchester_m1
-inv_name_short		= wpn-winchester_m1
-bullet_speed		= 600
-hit_power        	= 1.4
-hit_impulse      	= 90
-condition_shot_dec 	= 0.0005
-cost				= 4000
-inv_grid_x			= 29
-inv_grid_y			= 32
-
-visual              = weapons\winchester1300\wpn_winchester1300_m1.ogf
-hud                 = wpn_winchester1300_m1_hud
-
-;------------------------------ O.G.S.E. sound remake -----------------------
-snd_shoot					= weapons\w1300\w1300_m1_shot  
-;-----------------------------------------------------------------------------
-
-[wpn_winchester1300_m1_hud]:wpn_winchester1300_hud
-visual 				= weapons\winchester1300\wpn_winchester1300_m1_hud.ogf
-
 [wpn_winchester_m1_repair]
-tech_complication = 800
+tech_complication = 250
 repair_compatibility = wincheaster
